Update hardrules format in reports

--- a/reports/mono-1.2/HPLT-docs.af.yaml
+++ b/reports/mono-1.2/HPLT-docs.af.yaml
@@ -1,3 +1,4 @@
+corpus: af_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 9], [0.1, 127], [0.2, 1269], [0.3, 3905], [0.4, 15005], [0.5,
   76897], [0.6, 517805], [0.7, 105958], [0.8, 21724], [0.9, 438]]'
 docs_collections: '[["wide16", 544827], ["cc40", 83253], ["wide15", 74435], ["wide17",
@@ -309,9 +310,24 @@ docs_top100_tld: '[["com", 509414], ["co.za", 140457], ["org", 29453], ["net", 8
 docs_total: 747229
 docs_warnings:
 - docs_unmatching_4092
-corpus: af_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 37.55, "no_urls": 2.12, "no_bad_encoding":
-  0.01}'
+docs_wds: '[[0.0, 35783], [0.1, 2754], [0.2, 4654], [0.3, 16605], [0.4, 47064], [0.5,
+  72755], [0.6, 74181], [0.7, 61082], [0.8, 46086], [0.9, 34287], [1.0, 25558], [1.1,
+  17909], [1.2, 11841], [1.3, 8304], [1.4, 5593], [1.5, 4200], [1.6, 3725], [1.7,
+  3627], [1.8, 3600], [1.9, 3114], [2.0, 2748], [2.1, 2858], [2.2, 2943], [2.3, 3328],
+  [2.4, 3875], [2.5, 4367], [2.6, 4711], [2.7, 4918], [2.8, 4908], [2.9, 4804], [3.0,
+  4837], [3.1, 4826], [3.2, 4902], [3.3, 4872], [3.4, 4997], [3.5, 5009], [3.6, 5235],
+  [3.7, 5091], [3.8, 4854], [3.9, 4950], [4.0, 5122], [4.1, 5131], [4.2, 4862], [4.3,
+  4803], [4.4, 4675], [4.5, 4691], [4.6, 4533], [4.7, 4353], [4.8, 4297], [4.9, 4351],
+  [5.0, 4120], [5.1, 4149], [5.2, 4217], [5.3, 4138], [5.4, 4118], [5.5, 4117], [5.6,
+  4174], [5.7, 3966], [5.8, 3963], [5.9, 4064], [6.0, 4026], [6.1, 3890], [6.2, 4006],
+  [6.3, 3880], [6.4, 3862], [6.5, 3826], [6.6, 3571], [6.7, 3551], [6.8, 3472], [6.9,
+  3503], [7.0, 3421], [7.1, 3310], [7.2, 3313], [7.3, 3118], [7.4, 3001], [7.5, 2757],
+  [7.6, 2830], [7.7, 2502], [7.8, 2574], [7.9, 2496], [8.0, 2396], [8.1, 2246], [8.2,
+  2028], [8.3, 1777], [8.4, 1668], [8.5, 1542], [8.6, 1432], [8.7, 1332], [8.8, 1294],
+  [8.9, 1056], [9.0, 965], [9.1, 742], [9.2, 639], [9.3, 526], [9.4, 368], [9.5, 300],
+  [9.6, 189], [9.7, 120], [9.8, 70], [9.9, 26], [10.0, 5]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 31805406, "no_urls": 1795671,
+  "no_bad_encoding": 8470}'
 monocleaner_scores: '[[0.0, 2695857], [0.1, 1263610], [0.2, 2173241], [0.3, 5532547],
   [0.4, 10715680], [0.5, 14946544], [0.6, 18825006], [0.7, 13173727], [0.8, 10482771],
   [0.9, 4892499]]'
@@ -348,6 +364,17 @@ src_langs: '[["en", 34251292], ["af", 29131925], ["fr", 5844851], ["nl", 3046033
   70], ["vec", 67], ["frr", 61], ["co", 57], ["mrj", 33], ["nah", 29], ["lrc", 27],
   ["nap", 24], ["dsb", 19], ["myv", 18], ["kv", 17], ["av", 16], ["pfl", 14], ["hif",
   13], ["xal", 11], ["lez", 4], ["dty", 3]]'
+src_ngrams: '{"1": [[["the"], 13700283], [["of"], 12108285], [["and"], 8106124], [["to"],
+  5890313], [["a"], 4994182]], "2": [[["of the"], 2027007], [["meer besonderhede"],
+  1355889], [["alternatiewe skryfwyses"], 1352488], [["kyk boek"], 1346521], [["stoor
+  boek"], 1346517]], "3": [[["to my favourites"], 410387], [["made by freepik"], 408232],
+  [["freepik from www.flaticon.com"], 408232], [["www.flaticon.com is licensed"],
+  408231], [["licensed by cc"], 408231]], "4": [[["add to my favourites"], 410386],
+  [["made by freepik from"], 408232], [["icons made by freepik"], 408232], [["from
+  www.flaticon.com is licensed"], 408231], [["oor die boek soek"], 404630]], "5":
+  [[["made by freepik from www.flaticon.com"], 408232], [["icons made by freepik from"],
+  408232], [["www.flaticon.com is licensed by cc"], 408231], [["freepik from www.flaticon.com
+  is licensed"], 408231], [["united kingdom australia new zealand"], 387419]]}'
 src_sent_tokens: '[[0, 759128], [1, 11763043], [2, 10580025], [3, 7182465], [4, 10444182],
   [5, 5135773], [6, 6867482], [7, 2877291], [8, 2594077], [9, 3840877], [10, 2226899],
   [11, 2219923], [12, 2321460], [13, 1391108], [14, 1436704], [15, 1411580], [16,
@@ -1570,16 +1597,3 @@ ttr_src: 0.01
 unique_sents: 19402074
 warnings:
 - src_warning_tok_moses_nl
-src_ngrams: '{"1": [[["the"], 13700283], [["of"], 12108285], [["and"], 8106124], [["to"],
-  5890313], [["a"], 4994182]], "2": [[["of the"], 2027007], [["meer besonderhede"],
-  1355889], [["alternatiewe skryfwyses"], 1352488], [["kyk boek"], 1346521], [["stoor
-  boek"], 1346517]], "3": [[["to my favourites"], 410387], [["made by freepik"], 408232],
-  [["freepik from www.flaticon.com"], 408232], [["www.flaticon.com is licensed"],
-  408231], [["licensed by cc"], 408231]], "4": [[["add to my favourites"], 410386],
-  [["made by freepik from"], 408232], [["icons made by freepik"], 408232], [["from
-  www.flaticon.com is licensed"], 408231], [["oor die boek soek"], 404630]], "5":
-  [[["made by freepik from www.flaticon.com"], 408232], [["icons made by freepik from"],
-  408232], [["www.flaticon.com is licensed by cc"], 408231], [["freepik from www.flaticon.com
-  is licensed"], 408231], [["united kingdom australia new zealand"], 387419]]}'
-
-docs_wds: '[[0.0, 35783], [0.1, 2754], [0.2, 4654], [0.3, 16605], [0.4, 47064], [0.5, 72755], [0.6, 74181], [0.7, 61082], [0.8, 46086], [0.9, 34287], [1.0, 25558], [1.1, 17909], [1.2, 11841], [1.3, 8304], [1.4, 5593], [1.5, 4200], [1.6, 3725], [1.7, 3627], [1.8, 3600], [1.9, 3114], [2.0, 2748], [2.1, 2858], [2.2, 2943], [2.3, 3328], [2.4, 3875], [2.5, 4367], [2.6, 4711], [2.7, 4918], [2.8, 4908], [2.9, 4804], [3.0, 4837], [3.1, 4826], [3.2, 4902], [3.3, 4872], [3.4, 4997], [3.5, 5009], [3.6, 5235], [3.7, 5091], [3.8, 4854], [3.9, 4950], [4.0, 5122], [4.1, 5131], [4.2, 4862], [4.3, 4803], [4.4, 4675], [4.5, 4691], [4.6, 4533], [4.7, 4353], [4.8, 4297], [4.9, 4351], [5.0, 4120], [5.1, 4149], [5.2, 4217], [5.3, 4138], [5.4, 4118], [5.5, 4117], [5.6, 4174], [5.7, 3966], [5.8, 3963], [5.9, 4064], [6.0, 4026], [6.1, 3890], [6.2, 4006], [6.3, 3880], [6.4, 3862], [6.5, 3826], [6.6, 3571], [6.7, 3551], [6.8, 3472], [6.9, 3503], [7.0, 3421], [7.1, 3310], [7.2, 3313], [7.3, 3118], [7.4, 3001], [7.5, 2757], [7.6, 2830], [7.7, 2502], [7.8, 2574], [7.9, 2496], [8.0, 2396], [8.1, 2246], [8.2, 2028], [8.3, 1777], [8.4, 1668], [8.5, 1542], [8.6, 1432], [8.7, 1332], [8.8, 1294], [8.9, 1056], [9.0, 965], [9.1, 742], [9.2, 639], [9.3, 526], [9.4, 368], [9.5, 300], [9.6, 189], [9.7, 120], [9.8, 70], [9.9, 26], [10.0, 5]]'
