--- a/reports/mono-1.2/HPLT-docs.be.yaml
+++ b/reports/mono-1.2/HPLT-docs.be.yaml
@@ -1,3 +1,4 @@
+corpus: be_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 1], [0.2, 128], [0.3, 1221], [0.4, 8716], [0.5, 47341], [0.6,
   76717], [0.7, 120265], [0.8, 95377], [0.9, 3104], [1.0, 26]]'
 docs_collections: '[["cc40", 109854], ["wide15", 101968], ["wide16", 95168], ["wide17",
@@ -268,9 +269,24 @@ docs_top100_tld: '[["by", 120610], ["org", 67353], ["ru", 57451], ["com", 37880]
 docs_total: 356534
 docs_warnings:
 - docs_unmatching_3638
-corpus: be_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 41.98, "no_urls": 1.65, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 7034], [0.1, 368], [0.2, 263], [0.3, 213], [0.4, 1242], [0.5, 698],
+  [0.6, 282], [0.7, 229], [0.8, 226], [0.9, 215], [1.0, 222], [1.1, 229], [1.2, 271],
+  [1.3, 244], [1.4, 241], [1.5, 282], [1.6, 308], [1.7, 278], [1.8, 331], [1.9, 325],
+  [2.0, 347], [2.1, 364], [2.2, 435], [2.3, 466], [2.4, 524], [2.5, 503], [2.6, 561],
+  [2.7, 615], [2.8, 612], [2.9, 704], [3.0, 807], [3.1, 949], [3.2, 975], [3.3, 1200],
+  [3.4, 1314], [3.5, 1545], [3.6, 1495], [3.7, 1510], [3.8, 1672], [3.9, 1674], [4.0,
+  1664], [4.1, 1925], [4.2, 1979], [4.3, 2304], [4.4, 2543], [4.5, 2758], [4.6, 2968],
+  [4.7, 3432], [4.8, 3576], [4.9, 3754], [5.0, 3906], [5.1, 3891], [5.2, 3996], [5.3,
+  4005], [5.4, 4153], [5.5, 4173], [5.6, 4506], [5.7, 4799], [5.8, 4933], [5.9, 5160],
+  [6.0, 5431], [6.1, 5666], [6.2, 5998], [6.3, 6118], [6.4, 6311], [6.5, 6482], [6.6,
+  7226], [6.7, 7323], [6.8, 7844], [6.9, 8424], [7.0, 8566], [7.1, 9075], [7.2, 9540],
+  [7.3, 9998], [7.4, 10023], [7.5, 10346], [7.6, 10360], [7.7, 9883], [7.8, 9498],
+  [7.9, 8997], [8.0, 8514], [8.1, 8132], [8.2, 7606], [8.3, 7399], [8.4, 6832], [8.5,
+  6604], [8.6, 6253], [8.7, 6100], [8.8, 5471], [8.9, 5324], [9.0, 4963], [9.1, 4288],
+  [9.2, 3817], [9.3, 3069], [9.4, 2451], [9.5, 1807], [9.6, 1217], [9.7, 772], [9.8,
+  429], [9.9, 160], [10.0, 19]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 15959291, "no_urls": 627270,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 3025833], [0.1, 681346], [0.2, 893353], [0.3, 1549929],
   [0.4, 2159758], [0.5, 3011788], [0.6, 4095304], [0.7, 6438739], [0.8, 9331513],
   [0.9, 6828853]]'
@@ -306,6 +322,24 @@ src_langs: '[["be", 27352316], ["ru", 3208735], ["en", 2655382], ["uk", 894319],
   26], ["vls", 25], ["pfl", 24], ["qu", 20], ["yo", 18], ["gv", 18], ["rm", 17], ["pam",
   12], ["nah", 10], ["li", 10], ["vec", 9], ["frr", 7], ["lrc", 5], ["scn", 3], ["nap",
   3], ["sc", 2], ["co", 2], ["dty", 1]]'
+src_ngrams: '{"1": [[["\u045e"], 6176577], [["\u0434\u0430"], 2343371], [["\u044f\u043a"],
+  1613889], [["\u0430\u0434"], 1160746], [["\u043f\u0440\u0430"], 1117709]], "2":
+  [[["\u0435 \u045e"], 150570], [["\u0440\u044d\u0441\u043f\u0443\u0431\u043b\u0456\u043a\u0456
+  \u0431\u0435\u043b\u0430\u0440\u0443\u0441\u044c"], 124645], [["\u045e \u0431\u0435\u043b\u0430\u0440\u0443\u0441\u0456"],
+  122596], [["\u043a\u0440\u043e\u043f\u043a\u0430 \u0440\u0430\u0441\u044b"], 115818],
+  [["\u0441\u0443\u0430\u0434\u043d\u043e\u0441\u0456\u043d\u044b \u0442\u044d\u043c\u043f\u0435\u0440\u0430\u0442\u0443\u0440\u044b"],
+  105229]], "3": [[["\u0442\u044d\u043c\u043f\u0435\u0440\u0430\u0442\u0443\u0440\u044b
+  \u0456 \u0432\u0456\u043b\u044c\u0433\u043e\u0442\u043d\u0430\u0441\u0446\u0456"],
+  105329], [["\u0430\u043f\u0430\u0434\u043a\u0430\u045e \u043d\u0435 \u0447\u0430\u043a\u0430\u0435\u0446\u0446\u0430"],
+  70865], [["\u0431 \u0432 \u0433"], 64652], [["\u043b \u043c \u043d"], 63522], [["\u043a
+  \u043b \u043c"], 63423]], "4": [[["\u0441\u0443\u0430\u0434\u043d\u043e\u0441\u0456\u043d\u044b
+  \u0442\u044d\u043c\u043f\u0435\u0440\u0430\u0442\u0443\u0440\u044b \u0456 \u0432\u0456\u043b\u044c\u0433\u043e\u0442\u043d\u0430\u0441\u0446\u0456"],
+  105227], [["\u043a \u043b \u043c \u043d"], 63205], [["\u043f \u0440 \u0441 \u0442"],
+  63107], [["\u0445 \u0446 \u0447 \u0448"], 62529], [["\u0444 \u0445 \u0446 \u0447"],
+  62292]], "5": [[["\u0444 \u0445 \u0446 \u0447 \u0448"], 62215], [["\u043b \u043c
+  \u043d \u043e \u043f"], 61155], [["\u043a \u043b \u043c \u043d \u043e"], 61112],
+  [["\u043c \u043d \u043e \u043f \u0440"], 61105], [["\u043d \u043e \u043f \u0440
+  \u0441"], 61009]]}'
 src_sent_tokens: '[[0, 715398], [1, 7609058], [2, 4833792], [3, 3334455], [4, 2092987],
   [5, 2401656], [6, 1604462], [7, 1351796], [8, 1551316], [9, 1156172], [10, 903967],
   [11, 911994], [12, 728056], [13, 678420], [14, 552370], [15, 469624], [16, 352506],
@@ -1130,22 +1164,3 @@ ttr_src: 0.01
 unique_sents: 10269652
 warnings:
 - src_warning_tok_nltk_wordpunct
-src_ngrams: '{"1": [[["\u045e"], 6176577], [["\u0434\u0430"], 2343371], [["\u044f\u043a"],
-  1613889], [["\u0430\u0434"], 1160746], [["\u043f\u0440\u0430"], 1117709]], "2":
-  [[["\u0435 \u045e"], 150570], [["\u0440\u044d\u0441\u043f\u0443\u0431\u043b\u0456\u043a\u0456
-  \u0431\u0435\u043b\u0430\u0440\u0443\u0441\u044c"], 124645], [["\u045e \u0431\u0435\u043b\u0430\u0440\u0443\u0441\u0456"],
-  122596], [["\u043a\u0440\u043e\u043f\u043a\u0430 \u0440\u0430\u0441\u044b"], 115818],
-  [["\u0441\u0443\u0430\u0434\u043d\u043e\u0441\u0456\u043d\u044b \u0442\u044d\u043c\u043f\u0435\u0440\u0430\u0442\u0443\u0440\u044b"],
-  105229]], "3": [[["\u0442\u044d\u043c\u043f\u0435\u0440\u0430\u0442\u0443\u0440\u044b
-  \u0456 \u0432\u0456\u043b\u044c\u0433\u043e\u0442\u043d\u0430\u0441\u0446\u0456"],
-  105329], [["\u0430\u043f\u0430\u0434\u043a\u0430\u045e \u043d\u0435 \u0447\u0430\u043a\u0430\u0435\u0446\u0446\u0430"],
-  70865], [["\u0431 \u0432 \u0433"], 64652], [["\u043b \u043c \u043d"], 63522], [["\u043a
-  \u043b \u043c"], 63423]], "4": [[["\u0441\u0443\u0430\u0434\u043d\u043e\u0441\u0456\u043d\u044b
-  \u0442\u044d\u043c\u043f\u0435\u0440\u0430\u0442\u0443\u0440\u044b \u0456 \u0432\u0456\u043b\u044c\u0433\u043e\u0442\u043d\u0430\u0441\u0446\u0456"],
-  105227], [["\u043a \u043b \u043c \u043d"], 63205], [["\u043f \u0440 \u0441 \u0442"],
-  63107], [["\u0445 \u0446 \u0447 \u0448"], 62529], [["\u0444 \u0445 \u0446 \u0447"],
-  62292]], "5": [[["\u0444 \u0445 \u0446 \u0447 \u0448"], 62215], [["\u043b \u043c
-  \u043d \u043e \u043f"], 61155], [["\u043a \u043b \u043c \u043d \u043e"], 61112],
-  [["\u043c \u043d \u043e \u043f \u0440"], 61105], [["\u043d \u043e \u043f \u0440
-  \u0441"], 61009]]}'
-docs_wds: '[[0.0, 7034], [0.1, 368], [0.2, 263], [0.3, 213], [0.4, 1242], [0.5, 698], [0.6, 282], [0.7, 229], [0.8, 226], [0.9, 215], [1.0, 222], [1.1, 229], [1.2, 271], [1.3, 244], [1.4, 241], [1.5, 282], [1.6, 308], [1.7, 278], [1.8, 331], [1.9, 325], [2.0, 347], [2.1, 364], [2.2, 435], [2.3, 466], [2.4, 524], [2.5, 503], [2.6, 561], [2.7, 615], [2.8, 612], [2.9, 704], [3.0, 807], [3.1, 949], [3.2, 975], [3.3, 1200], [3.4, 1314], [3.5, 1545], [3.6, 1495], [3.7, 1510], [3.8, 1672], [3.9, 1674], [4.0, 1664], [4.1, 1925], [4.2, 1979], [4.3, 2304], [4.4, 2543], [4.5, 2758], [4.6, 2968], [4.7, 3432], [4.8, 3576], [4.9, 3754], [5.0, 3906], [5.1, 3891], [5.2, 3996], [5.3, 4005], [5.4, 4153], [5.5, 4173], [5.6, 4506], [5.7, 4799], [5.8, 4933], [5.9, 5160], [6.0, 5431], [6.1, 5666], [6.2, 5998], [6.3, 6118], [6.4, 6311], [6.5, 6482], [6.6, 7226], [6.7, 7323], [6.8, 7844], [6.9, 8424], [7.0, 8566], [7.1, 9075], [7.2, 9540], [7.3, 9998], [7.4, 10023], [7.5, 10346], [7.6, 10360], [7.7, 9883], [7.8, 9498], [7.9, 8997], [8.0, 8514], [8.1, 8132], [8.2, 7606], [8.3, 7399], [8.4, 6832], [8.5, 6604], [8.6, 6253], [8.7, 6100], [8.8, 5471], [8.9, 5324], [9.0, 4963], [9.1, 4288], [9.2, 3817], [9.3, 3069], [9.4, 2451], [9.5, 1807], [9.6, 1217], [9.7, 772], [9.8, 429], [9.9, 160], [10.0, 19]]'
