--- a/reports/mono-1.2/HPLT-docs.cy.yaml
+++ b/reports/mono-1.2/HPLT-docs.cy.yaml
@@ -1,3 +1,4 @@
+corpus: cy_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 20], [0.2, 68], [0.3, 255], [0.4, 1245], [0.5, 5400], [0.6, 19766],
   [0.7, 43561], [0.8, 38466], [0.9, 2427]]'
 docs_collections: '[["cc40", 64233], ["wide15", 17058], ["wide17", 15318], ["wide16",
@@ -202,9 +203,24 @@ docs_top100_tld: '[["com", 27112], ["cymru", 24865], ["org", 21444], ["gov.uk", 
 docs_total: 111254
 docs_warnings:
 - docs_unmatching_46
-corpus: cy_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 40.88, "no_urls": 1.65, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 3288], [0.1, 231], [0.2, 266], [0.3, 297], [0.4, 366], [0.5, 540],
+  [0.6, 651], [0.7, 808], [0.8, 854], [0.9, 828], [1.0, 755], [1.1, 723], [1.2, 758],
+  [1.3, 699], [1.4, 692], [1.5, 650], [1.6, 614], [1.7, 633], [1.8, 534], [1.9, 538],
+  [2.0, 504], [2.1, 492], [2.2, 501], [2.3, 521], [2.4, 525], [2.5, 526], [2.6, 607],
+  [2.7, 588], [2.8, 602], [2.9, 654], [3.0, 619], [3.1, 634], [3.2, 582], [3.3, 643],
+  [3.4, 699], [3.5, 697], [3.6, 743], [3.7, 733], [3.8, 748], [3.9, 797], [4.0, 784],
+  [4.1, 836], [4.2, 880], [4.3, 888], [4.4, 1024], [4.5, 995], [4.6, 1085], [4.7,
+  1107], [4.8, 1126], [4.9, 1234], [5.0, 1269], [5.1, 1397], [5.2, 1461], [5.3, 1574],
+  [5.4, 1612], [5.5, 1671], [5.6, 1809], [5.7, 1844], [5.8, 1943], [5.9, 1926], [6.0,
+  2201], [6.1, 2044], [6.2, 2150], [6.3, 2143], [6.4, 2244], [6.5, 2199], [6.6, 2322],
+  [6.7, 2398], [6.8, 2349], [6.9, 2314], [7.0, 2361], [7.1, 2388], [7.2, 2405], [7.3,
+  2341], [7.4, 2385], [7.5, 2335], [7.6, 2149], [7.7, 2130], [7.8, 2066], [7.9, 1979],
+  [8.0, 1964], [8.1, 1680], [8.2, 1394], [8.3, 1152], [8.4, 1020], [8.5, 886], [8.6,
+  755], [8.7, 722], [8.8, 619], [8.9, 518], [9.0, 460], [9.1, 374], [9.2, 318], [9.3,
+  266], [9.4, 207], [9.5, 152], [9.6, 116], [9.7, 82], [9.8, 48], [9.9, 8], [10.0,
+  5]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 5186653, "no_urls": 209343,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 611977], [0.1, 139486], [0.2, 229505], [0.3, 352112],
   [0.4, 588327], [0.5, 1082372], [0.6, 1710597], [0.7, 2610373], [0.8, 3127657], [0.9,
   2235102]]'
@@ -240,6 +256,17 @@ src_langs: '[["cy", 6786086], ["en", 2724560], ["es", 539390], ["de", 520675], [
   ["sah", 62], ["os", 58], ["tyv", 54], ["mai", 50], ["xal", 49], ["hif", 40], ["bh",
   38], ["ce", 34], ["krc", 28], ["mrj", 20], ["lrc", 10], ["myv", 9], ["pfl", 6],
   ["lez", 5], ["dty", 3], ["av", 1]]'
+src_ngrams: '{"1": [[["r"], 1130142], [["n"], 691744], [["cymru"], 447316], [["newydd"],
+  194136], [["gemau"], 142327]], "2": [[["llywodraeth cymru"], 30872], [["polisi preifatrwydd"],
+  27898], [["support script"], 23697], [["senedd chevron"], 20876], [["gemau ar-lein"],
+  20452]], "3": [[["cod y dudalen"], 18584], [["telerau ac amodau"], 18499], [["share
+  to facebook"], 14947], [["share to twitter"], 14944], [["copy to clipboard"], 14331]],
+  "4": [[["browser does not support"], 23791], [["golygu cod y dudalen"], 18512],
+  [["share to twitter share"], 14943], [["share to facebook share"], 14334], [["copy
+  to clipboard share"], 14330]], "5": [[["browser does not support script"], 23697],
+  [["clipboard share to facebook share"], 14328], [["facebook share to twitter share"],
+  14327], [["twitter share to linkedin video"], 9548], [["newidiwyd y dudalen hon
+  ddiwethaf"], 6644]]}'
 src_sent_tokens: '[[0, 180871], [1, 2575431], [2, 1989125], [3, 1545061], [4, 932798],
   [5, 852378], [6, 560695], [7, 395324], [8, 332947], [9, 273530], [10, 226490], [11,
   195253], [12, 175661], [13, 157572], [14, 119886], [15, 112922], [16, 95700], [17,
@@ -852,15 +879,3 @@ ttr_src: 0.01
 unique_sents: 3487441
 warnings:
 - src_warning_tok_moses_en
-src_ngrams: '{"1": [[["r"], 1130142], [["n"], 691744], [["cymru"], 447316], [["newydd"],
-  194136], [["gemau"], 142327]], "2": [[["llywodraeth cymru"], 30872], [["polisi preifatrwydd"],
-  27898], [["support script"], 23697], [["senedd chevron"], 20876], [["gemau ar-lein"],
-  20452]], "3": [[["cod y dudalen"], 18584], [["telerau ac amodau"], 18499], [["share
-  to facebook"], 14947], [["share to twitter"], 14944], [["copy to clipboard"], 14331]],
-  "4": [[["browser does not support"], 23791], [["golygu cod y dudalen"], 18512],
-  [["share to twitter share"], 14943], [["share to facebook share"], 14334], [["copy
-  to clipboard share"], 14330]], "5": [[["browser does not support script"], 23697],
-  [["clipboard share to facebook share"], 14328], [["facebook share to twitter share"],
-  14327], [["twitter share to linkedin video"], 9548], [["newidiwyd y dudalen hon
-  ddiwethaf"], 6644]]}'
-docs_wds: '[[0.0, 3288], [0.1, 231], [0.2, 266], [0.3, 297], [0.4, 366], [0.5, 540], [0.6, 651], [0.7, 808], [0.8, 854], [0.9, 828], [1.0, 755], [1.1, 723], [1.2, 758], [1.3, 699], [1.4, 692], [1.5, 650], [1.6, 614], [1.7, 633], [1.8, 534], [1.9, 538], [2.0, 504], [2.1, 492], [2.2, 501], [2.3, 521], [2.4, 525], [2.5, 526], [2.6, 607], [2.7, 588], [2.8, 602], [2.9, 654], [3.0, 619], [3.1, 634], [3.2, 582], [3.3, 643], [3.4, 699], [3.5, 697], [3.6, 743], [3.7, 733], [3.8, 748], [3.9, 797], [4.0, 784], [4.1, 836], [4.2, 880], [4.3, 888], [4.4, 1024], [4.5, 995], [4.6, 1085], [4.7, 1107], [4.8, 1126], [4.9, 1234], [5.0, 1269], [5.1, 1397], [5.2, 1461], [5.3, 1574], [5.4, 1612], [5.5, 1671], [5.6, 1809], [5.7, 1844], [5.8, 1943], [5.9, 1926], [6.0, 2201], [6.1, 2044], [6.2, 2150], [6.3, 2143], [6.4, 2244], [6.5, 2199], [6.6, 2322], [6.7, 2398], [6.8, 2349], [6.9, 2314], [7.0, 2361], [7.1, 2388], [7.2, 2405], [7.3, 2341], [7.4, 2385], [7.5, 2335], [7.6, 2149], [7.7, 2130], [7.8, 2066], [7.9, 1979], [8.0, 1964], [8.1, 1680], [8.2, 1394], [8.3, 1152], [8.4, 1020], [8.5, 886], [8.6, 755], [8.7, 722], [8.8, 619], [8.9, 518], [9.0, 460], [9.1, 374], [9.2, 318], [9.3, 266], [9.4, 207], [9.5, 152], [9.6, 116], [9.7, 82], [9.8, 48], [9.9, 8], [10.0, 5]]'
