--- a/reports/mono-1.2/HPLT-docs.eu.yaml
+++ b/reports/mono-1.2/HPLT-docs.eu.yaml
@@ -1,3 +1,4 @@
+corpus: eu_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 7], [0.2, 257], [0.3, 2039], [0.4, 12961], [0.5, 52459], [0.6,
   98014], [0.7, 128229], [0.8, 46717], [0.9, 3106], [1.0, 28]]'
 docs_collections: '[["cc40", 179276], ["wide15", 71704], ["wide16", 50814], ["wide17",
@@ -258,9 +259,24 @@ docs_top100_tld: '[["eus", 146162], ["com", 77596], ["org", 42441], ["com.es", 2
 docs_total: 343947
 docs_warnings:
 - docs_unmatching_130
-corpus: eu_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 46.07, "no_urls": 2.31, "no_bad_encoding":
-  0.01}'
+docs_wds: '[[0.0, 17202], [0.1, 1016], [0.2, 1040], [0.3, 1295], [0.4, 1580], [0.5,
+  1729], [0.6, 2001], [0.7, 2277], [0.8, 2341], [0.9, 2488], [1.0, 2498], [1.1, 2185],
+  [1.2, 2205], [1.3, 2179], [1.4, 2228], [1.5, 2142], [1.6, 2179], [1.7, 2134], [1.8,
+  2036], [1.9, 2036], [2.0, 1990], [2.1, 1899], [2.2, 2088], [2.3, 1970], [2.4, 2001],
+  [2.5, 1983], [2.6, 2010], [2.7, 2060], [2.8, 2083], [2.9, 2116], [3.0, 2194], [3.1,
+  2308], [3.2, 2355], [3.3, 2279], [3.4, 2351], [3.5, 2414], [3.6, 2460], [3.7, 2364],
+  [3.8, 2647], [3.9, 2558], [4.0, 2584], [4.1, 2602], [4.2, 2660], [4.3, 2577], [4.4,
+  2601], [4.5, 2640], [4.6, 2818], [4.7, 2766], [4.8, 2911], [4.9, 2932], [5.0, 3036],
+  [5.1, 3073], [5.2, 3191], [5.3, 3176], [5.4, 3378], [5.5, 3392], [5.6, 3425], [5.7,
+  3508], [5.8, 3704], [5.9, 3883], [6.0, 4182], [6.1, 4394], [6.2, 4748], [6.3, 4797],
+  [6.4, 5096], [6.5, 5144], [6.6, 5509], [6.7, 5551], [6.8, 5917], [6.9, 6017], [7.0,
+  6232], [7.1, 6439], [7.2, 6704], [7.3, 6698], [7.4, 6983], [7.5, 7099], [7.6, 7022],
+  [7.7, 6730], [7.8, 6851], [7.9, 6561], [8.0, 6938], [8.1, 6618], [8.2, 5838], [8.3,
+  5350], [8.4, 4818], [8.5, 4589], [8.6, 4181], [8.7, 4122], [8.8, 3887], [8.9, 3585],
+  [9.0, 3328], [9.1, 2802], [9.2, 2433], [9.3, 2110], [9.4, 1615], [9.5, 1278], [9.6,
+  1009], [9.7, 585], [9.8, 278], [9.9, 109], [10.0, 22]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 17150147, "no_urls": 859927,
+  "no_bad_encoding": 3722}'
 monocleaner_scores: '[[0.0, 2270765], [0.1, 988435], [0.2, 1413581], [0.3, 2141465],
   [0.4, 3232419], [0.5, 4513461], [0.6, 4438344], [0.7, 5201198], [0.8, 7016130],
   [0.9, 6010483]]'
@@ -297,6 +313,19 @@ src_langs: '[["eu", 19143047], ["es", 4905243], ["en", 4666376], ["it", 1042332]
   ["krc", 69], ["yo", 66], ["ky", 58], ["co", 31], ["nah", 22], ["vls", 16], ["mrj",
   16], ["pfl", 15], ["bh", 11], ["xal", 8], ["lez", 8], ["hif", 8], ["myv", 4], ["av",
   4], ["lrc", 2]]'
+src_ngrams: '{"1": [[["de"], 4070563], [["la"], 1959228], [["en"], 1634840], [["y"],
+  1349054], [["el"], 1304858]], "2": [[["de la"], 497473], [["en el"], 218700], [["en
+  la"], 189454], [["de los"], 165211], [["a la"], 148796]], "3": [[["no hay comentarios"],
+  93711], [["enviar por correo"], 87288], [["con twittercompartir con"], 86480], [["un
+  blogcompartir con"], 86479], [["blogcompartir con twittercompartir"], 86479]], "4":
+  [[["un blogcompartir con twittercompartir"], 86479], [["blogcompartir con twittercompartir
+  con"], 86479], [["por correo electr\u00f3nicoescribe un"], 86472], [["enviar por
+  correo electr\u00f3nicoescribe"], 86472], [["electr\u00f3nicoescribe un blogcompartir
+  con"], 86472]], "5": [[["un blogcompartir con twittercompartir con"], 86479], [["por
+  correo electr\u00f3nicoescribe un blogcompartir"], 86472], [["enviar por correo
+  electr\u00f3nicoescribe un"], 86472], [["electr\u00f3nicoescribe un blogcompartir
+  con twittercompartir"], 86472], [["correo electr\u00f3nicoescribe un blogcompartir
+  con"], 86472]]}'
 src_sent_tokens: '[[0, 581152], [1, 8846338], [2, 5582543], [3, 3410889], [4, 2299956],
   [5, 2990131], [6, 1592111], [7, 1183582], [8, 952734], [9, 872170], [10, 683924],
   [11, 629171], [12, 662968], [13, 446331], [14, 384813], [15, 318263], [16, 284996],
@@ -1078,17 +1107,3 @@ ttr_src: 0.02
 unique_sents: 10165741
 warnings:
 - src_warning_tok_moses_es
-src_ngrams: '{"1": [[["de"], 4070563], [["la"], 1959228], [["en"], 1634840], [["y"],
-  1349054], [["el"], 1304858]], "2": [[["de la"], 497473], [["en el"], 218700], [["en
-  la"], 189454], [["de los"], 165211], [["a la"], 148796]], "3": [[["no hay comentarios"],
-  93711], [["enviar por correo"], 87288], [["con twittercompartir con"], 86480], [["un
-  blogcompartir con"], 86479], [["blogcompartir con twittercompartir"], 86479]], "4":
-  [[["un blogcompartir con twittercompartir"], 86479], [["blogcompartir con twittercompartir
-  con"], 86479], [["por correo electr\u00f3nicoescribe un"], 86472], [["enviar por
-  correo electr\u00f3nicoescribe"], 86472], [["electr\u00f3nicoescribe un blogcompartir
-  con"], 86472]], "5": [[["un blogcompartir con twittercompartir con"], 86479], [["por
-  correo electr\u00f3nicoescribe un blogcompartir"], 86472], [["enviar por correo
-  electr\u00f3nicoescribe un"], 86472], [["electr\u00f3nicoescribe un blogcompartir
-  con twittercompartir"], 86472], [["correo electr\u00f3nicoescribe un blogcompartir
-  con"], 86472]]}'
-docs_wds: '[[0.0, 17202], [0.1, 1016], [0.2, 1040], [0.3, 1295], [0.4, 1580], [0.5, 1729], [0.6, 2001], [0.7, 2277], [0.8, 2341], [0.9, 2488], [1.0, 2498], [1.1, 2185], [1.2, 2205], [1.3, 2179], [1.4, 2228], [1.5, 2142], [1.6, 2179], [1.7, 2134], [1.8, 2036], [1.9, 2036], [2.0, 1990], [2.1, 1899], [2.2, 2088], [2.3, 1970], [2.4, 2001], [2.5, 1983], [2.6, 2010], [2.7, 2060], [2.8, 2083], [2.9, 2116], [3.0, 2194], [3.1, 2308], [3.2, 2355], [3.3, 2279], [3.4, 2351], [3.5, 2414], [3.6, 2460], [3.7, 2364], [3.8, 2647], [3.9, 2558], [4.0, 2584], [4.1, 2602], [4.2, 2660], [4.3, 2577], [4.4, 2601], [4.5, 2640], [4.6, 2818], [4.7, 2766], [4.8, 2911], [4.9, 2932], [5.0, 3036], [5.1, 3073], [5.2, 3191], [5.3, 3176], [5.4, 3378], [5.5, 3392], [5.6, 3425], [5.7, 3508], [5.8, 3704], [5.9, 3883], [6.0, 4182], [6.1, 4394], [6.2, 4748], [6.3, 4797], [6.4, 5096], [6.5, 5144], [6.6, 5509], [6.7, 5551], [6.8, 5917], [6.9, 6017], [7.0, 6232], [7.1, 6439], [7.2, 6704], [7.3, 6698], [7.4, 6983], [7.5, 7099], [7.6, 7022], [7.7, 6730], [7.8, 6851], [7.9, 6561], [8.0, 6938], [8.1, 6618], [8.2, 5838], [8.3, 5350], [8.4, 4818], [8.5, 4589], [8.6, 4181], [8.7, 4122], [8.8, 3887], [8.9, 3585], [9.0, 3328], [9.1, 2802], [9.2, 2433], [9.3, 2110], [9.4, 1615], [9.5, 1278], [9.6, 1009], [9.7, 585], [9.8, 278], [9.9, 109], [10.0, 22]]'
