--- a/reports/mono-1.2/HPLT-docs.ga.yaml
+++ b/reports/mono-1.2/HPLT-docs.ga.yaml
@@ -1,3 +1,4 @@
+corpus: ga_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 23], [0.2, 110], [0.3, 7692], [0.4, 21365], [0.5, 41538], [0.6,
   36396], [0.7, 7815], [0.8, 554], [0.9, 5]]'
 docs_collections: '[["wide16", 46829], ["cc40", 43762], ["wide17", 12699], ["wide15",
@@ -208,9 +209,24 @@ docs_top100_tld: '[["ie", 49336], ["com", 37604], ["org", 10907], ["eu", 5771], 
 docs_total: 115529
 docs_warnings:
 - docs_unmatching_31
-corpus: ga_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 40.49, "no_urls": 2.72, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 2532], [0.1, 251], [0.2, 375], [0.3, 713], [0.4, 604], [0.5, 899],
+  [0.6, 999], [0.7, 1032], [0.8, 1006], [0.9, 1083], [1.0, 1322], [1.1, 1335], [1.2,
+  1459], [1.3, 1525], [1.4, 1621], [1.5, 1557], [1.6, 1554], [1.7, 1568], [1.8, 1431],
+  [1.9, 1409], [2.0, 1364], [2.1, 1405], [2.2, 1264], [2.3, 1155], [2.4, 1165], [2.5,
+  1050], [2.6, 1084], [2.7, 1004], [2.8, 952], [2.9, 877], [3.0, 951], [3.1, 885],
+  [3.2, 961], [3.3, 923], [3.4, 1107], [3.5, 1114], [3.6, 1204], [3.7, 1266], [3.8,
+  1514], [3.9, 1206], [4.0, 1266], [4.1, 1323], [4.2, 1391], [4.3, 1355], [4.4, 1481],
+  [4.5, 1438], [4.6, 1523], [4.7, 1519], [4.8, 1601], [4.9, 1725], [5.0, 1566], [5.1,
+  1722], [5.2, 1527], [5.3, 1581], [5.4, 1672], [5.5, 1582], [5.6, 1594], [5.7, 1578],
+  [5.8, 1506], [5.9, 1445], [6.0, 1457], [6.1, 1491], [6.2, 1475], [6.3, 1483], [6.4,
+  1559], [6.5, 1505], [6.6, 1479], [6.7, 1625], [6.8, 1530], [6.9, 1511], [7.0, 1480],
+  [7.1, 1459], [7.2, 1421], [7.3, 1377], [7.4, 1380], [7.5, 1310], [7.6, 1185], [7.7,
+  1169], [7.8, 1195], [7.9, 1096], [8.0, 1023], [8.1, 1046], [8.2, 875], [8.3, 779],
+  [8.4, 729], [8.5, 652], [8.6, 597], [8.7, 514], [8.8, 507], [8.9, 492], [9.0, 513],
+  [9.1, 494], [9.2, 493], [9.3, 366], [9.4, 269], [9.5, 281], [9.6, 319], [9.7, 204],
+  [9.8, 57], [9.9, 11]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 5648177, "no_urls": 379428,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 1146374], [0.1, 600778], [0.2, 921755], [0.3, 1242522],
   [0.4, 1813407], [0.5, 2423107], [0.6, 2101382], [0.7, 2013317], [0.8, 1390935],
   [0.9, 295984]]'
@@ -246,6 +262,18 @@ src_langs: '[["ga", 6677017], ["en", 3023284], ["es", 555393], ["ca", 394109], [
   70], ["cv", 70], ["bpy", 67], ["wuu", 56], ["scn", 56], ["sah", 54], ["ce", 47],
   ["xal", 40], ["tk", 27], ["bh", 25], ["yue", 22], ["dsb", 21], ["krc", 17], ["pfl",
   16], ["myv", 15], ["lrc", 6], ["av", 3], ["hif", 1]]'
+src_ngrams: '{"1": [[["the"], 1106634], [["of"], 666287], [["and"], 525367], [["to"],
+  499552], [["sin"], 421573]], "2": [[["of the"], 167794], [["me\u00e1n f\u00f3mhair"],
+  82694], [["n\u00edos m\u00f3"], 77263], [["f\u00e9idir leat"], 70355], [["deireadh
+  f\u00f3mhair"], 64487]], "3": [[["cumann na sagart"], 268768], [["l\u00e9achta\u00ed
+  an aifrinn"], 186331], [["machnamh ar l\u00e9achta\u00ed"], 83362], [["saor in aisce"],
+  65913], [["baili\u00fach\u00e1n na scol"], 38115]], "4": [[["maidir leis na forbairt\u00ed"],
+  11167], [["sheoladh len\u00e1r liosta r\u00edomhphoist"], 11163], [["gcoime\u00e1dfa\u00ed
+  ar an eolas"], 11161], [["maith leat go gcoime\u00e1dfa\u00ed"], 11160], [["thionscadail
+  eile de chuid"], 11157]], "5": [[["machnamh ar l\u00e9achta\u00ed an aifrinn"],
+  81148], [["macnamh ar l\u00e9achta\u00ed an aifrinn"], 14051], [["l\u00e9im go pr\u00edomh\u00e1bhar
+  an leathanaigh"], 11406], [["cuir do sheoladh len\u00e1r liosta"], 11163], [["m\u00e1s
+  maith leat go gcoime\u00e1dfa\u00ed"], 11160]]}'
 src_sent_tokens: '[[0, 112522], [1, 2892988], [2, 1989087], [3, 1630590], [4, 1189702],
   [5, 1106872], [6, 601676], [7, 521556], [8, 376071], [9, 362001], [10, 283860],
   [11, 232334], [12, 183797], [13, 159830], [14, 139787], [15, 119787], [16, 112174],
@@ -653,16 +681,3 @@ ttr_src: 0.01
 unique_sents: 3466337
 warnings:
 - src_warning_tok_moses_en
-src_ngrams: '{"1": [[["the"], 1106634], [["of"], 666287], [["and"], 525367], [["to"],
-  499552], [["sin"], 421573]], "2": [[["of the"], 167794], [["me\u00e1n f\u00f3mhair"],
-  82694], [["n\u00edos m\u00f3"], 77263], [["f\u00e9idir leat"], 70355], [["deireadh
-  f\u00f3mhair"], 64487]], "3": [[["cumann na sagart"], 268768], [["l\u00e9achta\u00ed
-  an aifrinn"], 186331], [["machnamh ar l\u00e9achta\u00ed"], 83362], [["saor in aisce"],
-  65913], [["baili\u00fach\u00e1n na scol"], 38115]], "4": [[["maidir leis na forbairt\u00ed"],
-  11167], [["sheoladh len\u00e1r liosta r\u00edomhphoist"], 11163], [["gcoime\u00e1dfa\u00ed
-  ar an eolas"], 11161], [["maith leat go gcoime\u00e1dfa\u00ed"], 11160], [["thionscadail
-  eile de chuid"], 11157]], "5": [[["machnamh ar l\u00e9achta\u00ed an aifrinn"],
-  81148], [["macnamh ar l\u00e9achta\u00ed an aifrinn"], 14051], [["l\u00e9im go pr\u00edomh\u00e1bhar
-  an leathanaigh"], 11406], [["cuir do sheoladh len\u00e1r liosta"], 11163], [["m\u00e1s
-  maith leat go gcoime\u00e1dfa\u00ed"], 11160]]}'
-docs_wds: '[[0.0, 2532], [0.1, 251], [0.2, 375], [0.3, 713], [0.4, 604], [0.5, 899], [0.6, 999], [0.7, 1032], [0.8, 1006], [0.9, 1083], [1.0, 1322], [1.1, 1335], [1.2, 1459], [1.3, 1525], [1.4, 1621], [1.5, 1557], [1.6, 1554], [1.7, 1568], [1.8, 1431], [1.9, 1409], [2.0, 1364], [2.1, 1405], [2.2, 1264], [2.3, 1155], [2.4, 1165], [2.5, 1050], [2.6, 1084], [2.7, 1004], [2.8, 952], [2.9, 877], [3.0, 951], [3.1, 885], [3.2, 961], [3.3, 923], [3.4, 1107], [3.5, 1114], [3.6, 1204], [3.7, 1266], [3.8, 1514], [3.9, 1206], [4.0, 1266], [4.1, 1323], [4.2, 1391], [4.3, 1355], [4.4, 1481], [4.5, 1438], [4.6, 1523], [4.7, 1519], [4.8, 1601], [4.9, 1725], [5.0, 1566], [5.1, 1722], [5.2, 1527], [5.3, 1581], [5.4, 1672], [5.5, 1582], [5.6, 1594], [5.7, 1578], [5.8, 1506], [5.9, 1445], [6.0, 1457], [6.1, 1491], [6.2, 1475], [6.3, 1483], [6.4, 1559], [6.5, 1505], [6.6, 1479], [6.7, 1625], [6.8, 1530], [6.9, 1511], [7.0, 1480], [7.1, 1459], [7.2, 1421], [7.3, 1377], [7.4, 1380], [7.5, 1310], [7.6, 1185], [7.7, 1169], [7.8, 1195], [7.9, 1096], [8.0, 1023], [8.1, 1046], [8.2, 875], [8.3, 779], [8.4, 729], [8.5, 652], [8.6, 597], [8.7, 514], [8.8, 507], [8.9, 492], [9.0, 513], [9.1, 494], [9.2, 493], [9.3, 366], [9.4, 269], [9.5, 281], [9.6, 319], [9.7, 204], [9.8, 57], [9.9, 11]]'
