--- a/reports/mono-1.2/HPLT-docs.gl.yaml
+++ b/reports/mono-1.2/HPLT-docs.gl.yaml
@@ -1,3 +1,4 @@
+corpus: gl_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 377], [0.2, 3170], [0.3, 8406], [0.4, 50863], [0.5, 161068],
   [0.6, 327984], [0.7, 156236], [0.8, 21072], [0.9, 970], [1.0, 26]]'
 docs_collections: '[["cc40", 342497], ["wide15", 217177], ["wide16", 93992], ["wide17",
@@ -343,9 +344,24 @@ docs_top100_tld: '[["com", 243815], ["gal", 137893], ["org", 115312], ["es", 977
 docs_total: 731356
 docs_warnings:
 - docs_unmatching_1184
-corpus: gl_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 37.5, "no_urls": 1.48, "no_bad_encoding":
-  0.01}'
+docs_wds: '[[0.0, 41774], [0.1, 3524], [0.2, 4115], [0.3, 4199], [0.4, 4529], [0.5,
+  5040], [0.6, 4636], [0.7, 3981], [0.8, 3766], [0.9, 3611], [1.0, 3606], [1.1, 3478],
+  [1.2, 3473], [1.3, 3540], [1.4, 3565], [1.5, 3421], [1.6, 3559], [1.7, 3506], [1.8,
+  3638], [1.9, 3672], [2.0, 3659], [2.1, 3781], [2.2, 3978], [2.3, 3942], [2.4, 4118],
+  [2.5, 4257], [2.6, 4456], [2.7, 4672], [2.8, 4685], [2.9, 4845], [3.0, 5206], [3.1,
+  5291], [3.2, 5554], [3.3, 5610], [3.4, 5883], [3.5, 6038], [3.6, 6158], [3.7, 6280],
+  [3.8, 6640], [3.9, 6880], [4.0, 6944], [4.1, 7040], [4.2, 7304], [4.3, 7489], [4.4,
+  7494], [4.5, 7769], [4.6, 7990], [4.7, 8044], [4.8, 8430], [4.9, 8532], [5.0, 8713],
+  [5.1, 9120], [5.2, 9074], [5.3, 9162], [5.4, 9519], [5.5, 9561], [5.6, 9999], [5.7,
+  10054], [5.8, 10669], [5.9, 10673], [6.0, 11195], [6.1, 11415], [6.2, 11768], [6.3,
+  12096], [6.4, 12631], [6.5, 12625], [6.6, 13493], [6.7, 13776], [6.8, 14209], [6.9,
+  14356], [7.0, 14382], [7.1, 14178], [7.2, 14886], [7.3, 13967], [7.4, 14065], [7.5,
+  13605], [7.6, 12876], [7.7, 12109], [7.8, 11934], [7.9, 11101], [8.0, 10848], [8.1,
+  9952], [8.2, 8415], [8.3, 7354], [8.4, 6343], [8.5, 5559], [8.6, 4745], [8.7, 4469],
+  [8.8, 4143], [8.9, 3799], [9.0, 3252], [9.1, 2814], [9.2, 2370], [9.3, 1973], [9.4,
+  1557], [9.5, 1189], [9.6, 842], [9.7, 532], [9.8, 225], [9.9, 143], [10.0, 19]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 34756034, "no_urls": 1371704,
+  "no_bad_encoding": 9268}'
 monocleaner_scores: '[[0.0, 8006187], [0.1, 3880644], [0.2, 4823832], [0.3, 6835613],
   [0.4, 9144992], [0.5, 11640332], [0.6, 15847345], [0.7, 15405417], [0.8, 13659136],
   [0.9, 3439261]]'
@@ -382,6 +398,20 @@ src_langs: '[["gl", 54407866], ["es", 10821762], ["en", 9608420], ["it", 3117288
   102], ["ky", 96], ["krc", 80], ["li", 73], ["tk", 71], ["sc", 53], ["os", 44], ["lez",
   41], ["lrc", 38], ["pfl", 31], ["dsb", 11], ["av", 11], ["frr", 8], ["vls", 5],
   ["co", 5], ["rue", 2], ["hif", 1]]'
+src_ngrams: '{"1": [[["y"], 2371096], [["galicia"], 1898093], [["d\u00eda"], 1110181],
+  [["abril"], 1085104], [["marzo"], 1051215]], "2": [[["hay comentarios"], 300026],
+  [["correo electr\u00f3nicoescribe"], 292932], [["correo electr\u00f3nico"], 231870],
+  [["aviso legal"], 220674], [["sitio web"], 215834]], "3": [[["enviar por correo"],
+  450385], [["facebookcompartir en pinterest"], 433535], [["blogcompartir con twittercompartir"],
+  292942], [["electr\u00f3nicoescribe un blogcompartir"], 292931], [["twittercompartir
+  con facebookcompartir"], 289851]], "4": [[["enviar por correo electr\u00f3nicoescribe"],
+  292932], [["correo electr\u00f3nicoescribe un blogcompartir"], 292931], [["enviar
+  por correo electr\u00f3nicoblogthis"], 143634], [["enlaces a esta entrada"], 68538],
+  [["entradas antiguas p\u00e1gina principal"], 53522]], "5": [[["electr\u00f3nicoescribe
+  un blogcompartir con twittercompartir"], 292931], [["blogcompartir con twittercompartir
+  con facebookcompartir"], 289851], [["twittercompartir con facebookcompartir en pinterest"],
+  289850], [["compartir en twittercompartir en facebookcompartir"], 143696], [["twittercompartir
+  en facebookcompartir en pinterest"], 143685]]}'
 src_sent_tokens: '[[0, 1164995], [1, 18707911], [2, 10616289], [3, 10141625], [4,
   6537612], [5, 10430890], [6, 6690102], [7, 3247922], [8, 2260848], [9, 1928580],
   [10, 1600316], [11, 1610567], [12, 1679321], [13, 1109013], [14, 977779], [15, 942060],
@@ -1502,18 +1532,3 @@ ttr_src: 0.01
 unique_sents: 19118996
 warnings:
 - src_warning_tok_moses_es
-src_ngrams: '{"1": [[["y"], 2371096], [["galicia"], 1898093], [["d\u00eda"], 1110181],
-  [["abril"], 1085104], [["marzo"], 1051215]], "2": [[["hay comentarios"], 300026],
-  [["correo electr\u00f3nicoescribe"], 292932], [["correo electr\u00f3nico"], 231870],
-  [["aviso legal"], 220674], [["sitio web"], 215834]], "3": [[["enviar por correo"],
-  450385], [["facebookcompartir en pinterest"], 433535], [["blogcompartir con twittercompartir"],
-  292942], [["electr\u00f3nicoescribe un blogcompartir"], 292931], [["twittercompartir
-  con facebookcompartir"], 289851]], "4": [[["enviar por correo electr\u00f3nicoescribe"],
-  292932], [["correo electr\u00f3nicoescribe un blogcompartir"], 292931], [["enviar
-  por correo electr\u00f3nicoblogthis"], 143634], [["enlaces a esta entrada"], 68538],
-  [["entradas antiguas p\u00e1gina principal"], 53522]], "5": [[["electr\u00f3nicoescribe
-  un blogcompartir con twittercompartir"], 292931], [["blogcompartir con twittercompartir
-  con facebookcompartir"], 289851], [["twittercompartir con facebookcompartir en pinterest"],
-  289850], [["compartir en twittercompartir en facebookcompartir"], 143696], [["twittercompartir
-  en facebookcompartir en pinterest"], 143685]]}'
-docs_wds: '[[0.0, 41774], [0.1, 3524], [0.2, 4115], [0.3, 4199], [0.4, 4529], [0.5, 5040], [0.6, 4636], [0.7, 3981], [0.8, 3766], [0.9, 3611], [1.0, 3606], [1.1, 3478], [1.2, 3473], [1.3, 3540], [1.4, 3565], [1.5, 3421], [1.6, 3559], [1.7, 3506], [1.8, 3638], [1.9, 3672], [2.0, 3659], [2.1, 3781], [2.2, 3978], [2.3, 3942], [2.4, 4118], [2.5, 4257], [2.6, 4456], [2.7, 4672], [2.8, 4685], [2.9, 4845], [3.0, 5206], [3.1, 5291], [3.2, 5554], [3.3, 5610], [3.4, 5883], [3.5, 6038], [3.6, 6158], [3.7, 6280], [3.8, 6640], [3.9, 6880], [4.0, 6944], [4.1, 7040], [4.2, 7304], [4.3, 7489], [4.4, 7494], [4.5, 7769], [4.6, 7990], [4.7, 8044], [4.8, 8430], [4.9, 8532], [5.0, 8713], [5.1, 9120], [5.2, 9074], [5.3, 9162], [5.4, 9519], [5.5, 9561], [5.6, 9999], [5.7, 10054], [5.8, 10669], [5.9, 10673], [6.0, 11195], [6.1, 11415], [6.2, 11768], [6.3, 12096], [6.4, 12631], [6.5, 12625], [6.6, 13493], [6.7, 13776], [6.8, 14209], [6.9, 14356], [7.0, 14382], [7.1, 14178], [7.2, 14886], [7.3, 13967], [7.4, 14065], [7.5, 13605], [7.6, 12876], [7.7, 12109], [7.8, 11934], [7.9, 11101], [8.0, 10848], [8.1, 9952], [8.2, 8415], [8.3, 7354], [8.4, 6343], [8.5, 5559], [8.6, 4745], [8.7, 4469], [8.8, 4143], [8.9, 3799], [9.0, 3252], [9.1, 2814], [9.2, 2370], [9.3, 1973], [9.4, 1557], [9.5, 1189], [9.6, 842], [9.7, 532], [9.8, 225], [9.9, 143], [10.0, 19]]'
