--- a/reports/mono-1.2/HPLT-docs.ka.yaml
+++ b/reports/mono-1.2/HPLT-docs.ka.yaml
@@ -1,3 +1,4 @@
+corpus: ka_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 40], [0.1, 121], [0.2, 815], [0.3, 4351], [0.4, 20513], [0.5,
   80331], [0.6, 143885], [0.7, 179976], [0.8, 94267], [0.9, 7045], [1.0, 88]]'
 docs_collections: '[["cc40", 203550], ["wide16", 177311], ["wide15", 96961], ["wide17",
@@ -313,9 +314,24 @@ docs_top100_tld: '[["ge", 365267], ["com", 64979], ["org", 29496], ["net", 11681
 docs_total: 533070
 docs_warnings:
 - docs_unmatching_1638
-corpus: ka_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 48.54, "no_urls": 1.82, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 19286], [0.1, 1280], [0.2, 1402], [0.3, 1767], [0.4, 2478], [0.5,
+  4560], [0.6, 3247], [0.7, 1693], [0.8, 1445], [0.9, 1286], [1.0, 1236], [1.1, 1158],
+  [1.2, 1116], [1.3, 1112], [1.4, 1126], [1.5, 1154], [1.6, 1000], [1.7, 969], [1.8,
+  912], [1.9, 839], [2.0, 833], [2.1, 877], [2.2, 922], [2.3, 952], [2.4, 1016], [2.5,
+  1123], [2.6, 1334], [2.7, 1449], [2.8, 1439], [2.9, 1595], [3.0, 1629], [3.1, 1725],
+  [3.2, 1863], [3.3, 1991], [3.4, 2103], [3.5, 2171], [3.6, 2366], [3.7, 2486], [3.8,
+  2562], [3.9, 2574], [4.0, 2809], [4.1, 2716], [4.2, 2850], [4.3, 3084], [4.4, 3173],
+  [4.5, 3501], [4.6, 3605], [4.7, 3581], [4.8, 3732], [4.9, 3918], [5.0, 4027], [5.1,
+  4182], [5.2, 4320], [5.3, 4685], [5.4, 5064], [5.5, 5227], [5.6, 5334], [5.7, 5640],
+  [5.8, 5964], [5.9, 6206], [6.0, 6556], [6.1, 7161], [6.2, 7335], [6.3, 7724], [6.4,
+  8206], [6.5, 8708], [6.6, 9293], [6.7, 9728], [6.8, 10130], [6.9, 10361], [7.0,
+  10882], [7.1, 11493], [7.2, 11856], [7.3, 11596], [7.4, 12532], [7.5, 13179], [7.6,
+  12839], [7.7, 12657], [7.8, 12638], [7.9, 12772], [8.0, 13395], [8.1, 13111], [8.2,
+  12070], [8.3, 11326], [8.4, 10678], [8.5, 10203], [8.6, 10052], [8.7, 9607], [8.8,
+  9256], [8.9, 8896], [9.0, 8429], [9.1, 7660], [9.2, 6908], [9.3, 6340], [9.4, 5643],
+  [9.5, 5001], [9.6, 4364], [9.7, 3303], [9.8, 2246], [9.9, 919], [10.0, 323]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 31805487, "no_urls": 1192541,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 5574252], [0.1, 1751136], [0.2, 2402734], [0.3, 3389726],
   [0.4, 4578330], [0.5, 6105946], [0.6, 7712827], [0.7, 10531509], [0.8, 13298327],
   [0.9, 10179497]]'
@@ -351,6 +367,39 @@ src_langs: '[["ka", 49238205], ["en", 8766411], ["fr", 1344180], ["de", 1064122]
   94], ["mrj", 82], ["pam", 80], ["nah", 69], ["yo", 68], ["dsb", 54], ["lez", 44],
   ["eml", 42], ["myv", 40], ["vec", 35], ["av", 26], ["bh", 20], ["frr", 14], ["xal",
   11], ["sc", 11], ["co", 8], ["vls", 7], ["lrc", 4], ["dty", 2]]'
+src_ngrams: '{"1": [[["\u10d8\u10e1"], 1799198], [["\u10d4\u10e1"], 1790348], [["\u10d0\u10db"],
+  1727935], [["\u10d0\u10e0\u10d8\u10e1"], 1460367], [["the"], 1280215]], "2": [[["posted
+  by"], 341878], [["span style"], 244391], [["\u10d0\u10ee\u10d0\u10da\u10d8 \u10d0\u10db\u10d1\u10d4\u10d1\u10d8"],
+  211577], [["of the"], 176848], [["\u10dc\u10d0\u10e6\u10d3\u10d8 \u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1"],
+  158773]], "3": [[["\u10d7\u10d1\u10d8\u10da\u10d8\u10e1\u10d8\u10e1 \u10db\u10d0\u10e1\u10e8\u10e2\u10d0\u10d1\u10d8\u10d7
+  \u10e1\u10e0\u10e3\u10da\u10d8\u10d0\u10d3"], 97511], [["\u10dc\u10d0\u10e6\u10d3\u10d8
+  \u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1
+  \u10e1\u10e3\u10e0\u10d5\u10d8\u10da\u10d8\u10e1"], 96448], [["\u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1
+  \u10e1\u10e3\u10e0\u10d5\u10d8\u10da\u10d8\u10e1 \u10e8\u10d4\u10db\u10d7\u10ee\u10d5\u10d4\u10d5\u10d0\u10e8\u10d8"],
+  96448], [["\u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7 \u10db\u10d0\u10e0\u10e2\u10d8\u10d5\u10d8
+  \u10e4\u10dd\u10e0\u10db\u10d0"], 96306], [["\u10e6\u10d8\u10da\u10d0\u10d9\u10e1
+  \u10d3\u10d0 \u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7"], 96102]], "4": [[["\u10dc\u10d0\u10e6\u10d3\u10d8
+  \u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1
+  \u10e1\u10e3\u10e0\u10d5\u10d8\u10da\u10d8\u10e1 \u10e8\u10d4\u10db\u10d7\u10ee\u10d5\u10d4\u10d5\u10d0\u10e8\u10d8"],
+  96448], [["\u10e6\u10d8\u10da\u10d0\u10d9\u10e1 \u10d3\u10d0 \u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7
+  \u10db\u10d0\u10e0\u10e2\u10d8\u10d5\u10d8"], 96099], [["\u10e9\u10d5\u10d4\u10dc\u10d8
+  \u10d9\u10e3\u10e0\u10d8\u10d4\u10e0\u10d8 \u10d0\u10d3\u10d2\u10d8\u10da\u10d6\u10d4
+  \u10db\u10dd\u10d2\u10d0\u10ec\u10d5\u10d3\u10d8\u10d7"], 79409], [["\u10d9\u10e3\u10e0\u10d8\u10d4\u10e0\u10d8
+  \u10d0\u10d3\u10d2\u10d8\u10da\u10d6\u10d4 \u10db\u10dd\u10d2\u10d0\u10ec\u10d5\u10d3\u10d8\u10d7
+  \u10de\u10e0\u10dd\u10d3\u10e3\u10e5\u10ea\u10d8\u10d0\u10e1"], 79409], [["\u10db\u10d8\u10ec\u10dd\u10d3\u10d4\u10d1\u10d0
+  \u10d7\u10d1\u10d8\u10da\u10d8\u10e1\u10d8\u10e1 \u10db\u10d0\u10e1\u10e8\u10e2\u10d0\u10d1\u10d8\u10d7
+  \u10e1\u10e0\u10e3\u10da\u10d8\u10d0\u10d3"], 69051]], "5": [[["\u10e6\u10d8\u10da\u10d0\u10d9\u10e1
+  \u10d3\u10d0 \u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7 \u10db\u10d0\u10e0\u10e2\u10d8\u10d5\u10d8
+  \u10e4\u10dd\u10e0\u10db\u10d0"], 96099], [["\u10e9\u10d5\u10d4\u10dc\u10d8 \u10d9\u10e3\u10e0\u10d8\u10d4\u10e0\u10d8
+  \u10d0\u10d3\u10d2\u10d8\u10da\u10d6\u10d4 \u10db\u10dd\u10d2\u10d0\u10ec\u10d5\u10d3\u10d8\u10d7
+  \u10de\u10e0\u10dd\u10d3\u10e3\u10e5\u10ea\u10d8\u10d0\u10e1"], 79409], [["\u10db\u10d8\u10ec\u10dd\u10d3\u10d4\u10d1\u10d0
+  \u10d7\u10d1\u10d8\u10da\u10d8\u10e1\u10d8\u10e1 \u10db\u10d0\u10e1\u10e8\u10e2\u10d0\u10d1\u10d8\u10d7
+  \u10e1\u10e0\u10e3\u10da\u10d8\u10d0\u10d3 \u10e3\u10e4\u10d0\u10e1\u10dd\u10d0"],
+  69051], [["\u10d7\u10d0\u10db\u10d0\u10e8\u10d8 \u10d3\u10d0 \u10d2\u10d0\u10e0\u10d7\u10dd\u10d1\u10d0
+  \u10d0\u10e0\u10d0\u10e1\u10d3\u10e0\u10dd\u10e1 \u10e1\u10e0\u10e3\u10da\u10d3\u10d4\u10d1\u10d0"],
+  62522], [["\u10d3\u10d0\u10d0\u10d9\u10da\u10d8\u10d9\u10d4 \u10d3\u10d0 \u10d2\u10d0\u10d3\u10d0\u10ee\u10d0\u10d5\u10d0\u10da
+  \u10e1\u10d0\u10d7\u10d0\u10db\u10d0\u10e8\u10dd\u10d4\u10d1\u10d8\u10e1 \u10e1\u10d0\u10e3\u10d9\u10d4\u10d7\u10d4\u10e1\u10dd"],
+  62522]]}'
 src_sent_tokens: '[[0, 1100275], [1, 16773489], [2, 8805754], [3, 6089214], [4, 3963557],
   [5, 4353976], [6, 2469258], [7, 2105506], [8, 1856477], [9, 1862341], [10, 1382354],
   [11, 1533805], [12, 1117058], [13, 971401], [14, 770456], [15, 659820], [16, 561484],
@@ -1663,37 +1712,3 @@ ttr_src: 0.01
 unique_sents: 14489425
 warnings:
 - src_warning_tok_nltk_wordpunct
-src_ngrams: '{"1": [[["\u10d8\u10e1"], 1799198], [["\u10d4\u10e1"], 1790348], [["\u10d0\u10db"],
-  1727935], [["\u10d0\u10e0\u10d8\u10e1"], 1460367], [["the"], 1280215]], "2": [[["posted
-  by"], 341878], [["span style"], 244391], [["\u10d0\u10ee\u10d0\u10da\u10d8 \u10d0\u10db\u10d1\u10d4\u10d1\u10d8"],
-  211577], [["of the"], 176848], [["\u10dc\u10d0\u10e6\u10d3\u10d8 \u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1"],
-  158773]], "3": [[["\u10d7\u10d1\u10d8\u10da\u10d8\u10e1\u10d8\u10e1 \u10db\u10d0\u10e1\u10e8\u10e2\u10d0\u10d1\u10d8\u10d7
-  \u10e1\u10e0\u10e3\u10da\u10d8\u10d0\u10d3"], 97511], [["\u10dc\u10d0\u10e6\u10d3\u10d8
-  \u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1
-  \u10e1\u10e3\u10e0\u10d5\u10d8\u10da\u10d8\u10e1"], 96448], [["\u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1
-  \u10e1\u10e3\u10e0\u10d5\u10d8\u10da\u10d8\u10e1 \u10e8\u10d4\u10db\u10d7\u10ee\u10d5\u10d4\u10d5\u10d0\u10e8\u10d8"],
-  96448], [["\u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7 \u10db\u10d0\u10e0\u10e2\u10d8\u10d5\u10d8
-  \u10e4\u10dd\u10e0\u10db\u10d0"], 96306], [["\u10e6\u10d8\u10da\u10d0\u10d9\u10e1
-  \u10d3\u10d0 \u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7"], 96102]], "4": [[["\u10dc\u10d0\u10e6\u10d3\u10d8
-  \u10d0\u10dc\u10d2\u10d0\u10e0\u10d8\u10e8\u10e1\u10ec\u10dd\u10e0\u10d4\u10d1\u10d8\u10e1
-  \u10e1\u10e3\u10e0\u10d5\u10d8\u10da\u10d8\u10e1 \u10e8\u10d4\u10db\u10d7\u10ee\u10d5\u10d4\u10d5\u10d0\u10e8\u10d8"],
-  96448], [["\u10e6\u10d8\u10da\u10d0\u10d9\u10e1 \u10d3\u10d0 \u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7
-  \u10db\u10d0\u10e0\u10e2\u10d8\u10d5\u10d8"], 96099], [["\u10e9\u10d5\u10d4\u10dc\u10d8
-  \u10d9\u10e3\u10e0\u10d8\u10d4\u10e0\u10d8 \u10d0\u10d3\u10d2\u10d8\u10da\u10d6\u10d4
-  \u10db\u10dd\u10d2\u10d0\u10ec\u10d5\u10d3\u10d8\u10d7"], 79409], [["\u10d9\u10e3\u10e0\u10d8\u10d4\u10e0\u10d8
-  \u10d0\u10d3\u10d2\u10d8\u10da\u10d6\u10d4 \u10db\u10dd\u10d2\u10d0\u10ec\u10d5\u10d3\u10d8\u10d7
-  \u10de\u10e0\u10dd\u10d3\u10e3\u10e5\u10ea\u10d8\u10d0\u10e1"], 79409], [["\u10db\u10d8\u10ec\u10dd\u10d3\u10d4\u10d1\u10d0
-  \u10d7\u10d1\u10d8\u10da\u10d8\u10e1\u10d8\u10e1 \u10db\u10d0\u10e1\u10e8\u10e2\u10d0\u10d1\u10d8\u10d7
-  \u10e1\u10e0\u10e3\u10da\u10d8\u10d0\u10d3"], 69051]], "5": [[["\u10e6\u10d8\u10da\u10d0\u10d9\u10e1
-  \u10d3\u10d0 \u10e8\u10d4\u10d0\u10d5\u10e1\u10d4\u10d7 \u10db\u10d0\u10e0\u10e2\u10d8\u10d5\u10d8
-  \u10e4\u10dd\u10e0\u10db\u10d0"], 96099], [["\u10e9\u10d5\u10d4\u10dc\u10d8 \u10d9\u10e3\u10e0\u10d8\u10d4\u10e0\u10d8
-  \u10d0\u10d3\u10d2\u10d8\u10da\u10d6\u10d4 \u10db\u10dd\u10d2\u10d0\u10ec\u10d5\u10d3\u10d8\u10d7
-  \u10de\u10e0\u10dd\u10d3\u10e3\u10e5\u10ea\u10d8\u10d0\u10e1"], 79409], [["\u10db\u10d8\u10ec\u10dd\u10d3\u10d4\u10d1\u10d0
-  \u10d7\u10d1\u10d8\u10da\u10d8\u10e1\u10d8\u10e1 \u10db\u10d0\u10e1\u10e8\u10e2\u10d0\u10d1\u10d8\u10d7
-  \u10e1\u10e0\u10e3\u10da\u10d8\u10d0\u10d3 \u10e3\u10e4\u10d0\u10e1\u10dd\u10d0"],
-  69051], [["\u10d7\u10d0\u10db\u10d0\u10e8\u10d8 \u10d3\u10d0 \u10d2\u10d0\u10e0\u10d7\u10dd\u10d1\u10d0
-  \u10d0\u10e0\u10d0\u10e1\u10d3\u10e0\u10dd\u10e1 \u10e1\u10e0\u10e3\u10da\u10d3\u10d4\u10d1\u10d0"],
-  62522], [["\u10d3\u10d0\u10d0\u10d9\u10da\u10d8\u10d9\u10d4 \u10d3\u10d0 \u10d2\u10d0\u10d3\u10d0\u10ee\u10d0\u10d5\u10d0\u10da
-  \u10e1\u10d0\u10d7\u10d0\u10db\u10d0\u10e8\u10dd\u10d4\u10d1\u10d8\u10e1 \u10e1\u10d0\u10e3\u10d9\u10d4\u10d7\u10d4\u10e1\u10dd"],
-  62522]]}'
-docs_wds: '[[0.0, 19286], [0.1, 1280], [0.2, 1402], [0.3, 1767], [0.4, 2478], [0.5, 4560], [0.6, 3247], [0.7, 1693], [0.8, 1445], [0.9, 1286], [1.0, 1236], [1.1, 1158], [1.2, 1116], [1.3, 1112], [1.4, 1126], [1.5, 1154], [1.6, 1000], [1.7, 969], [1.8, 912], [1.9, 839], [2.0, 833], [2.1, 877], [2.2, 922], [2.3, 952], [2.4, 1016], [2.5, 1123], [2.6, 1334], [2.7, 1449], [2.8, 1439], [2.9, 1595], [3.0, 1629], [3.1, 1725], [3.2, 1863], [3.3, 1991], [3.4, 2103], [3.5, 2171], [3.6, 2366], [3.7, 2486], [3.8, 2562], [3.9, 2574], [4.0, 2809], [4.1, 2716], [4.2, 2850], [4.3, 3084], [4.4, 3173], [4.5, 3501], [4.6, 3605], [4.7, 3581], [4.8, 3732], [4.9, 3918], [5.0, 4027], [5.1, 4182], [5.2, 4320], [5.3, 4685], [5.4, 5064], [5.5, 5227], [5.6, 5334], [5.7, 5640], [5.8, 5964], [5.9, 6206], [6.0, 6556], [6.1, 7161], [6.2, 7335], [6.3, 7724], [6.4, 8206], [6.5, 8708], [6.6, 9293], [6.7, 9728], [6.8, 10130], [6.9, 10361], [7.0, 10882], [7.1, 11493], [7.2, 11856], [7.3, 11596], [7.4, 12532], [7.5, 13179], [7.6, 12839], [7.7, 12657], [7.8, 12638], [7.9, 12772], [8.0, 13395], [8.1, 13111], [8.2, 12070], [8.3, 11326], [8.4, 10678], [8.5, 10203], [8.6, 10052], [8.7, 9607], [8.8, 9256], [8.9, 8896], [9.0, 8429], [9.1, 7660], [9.2, 6908], [9.3, 6340], [9.4, 5643], [9.5, 5001], [9.6, 4364], [9.7, 3303], [9.8, 2246], [9.9, 919], [10.0, 323]]'
