--- a/reports/mono-1.2/HPLT-docs.kn.yaml
+++ b/reports/mono-1.2/HPLT-docs.kn.yaml
@@ -1,3 +1,4 @@
+corpus: kn_1.jsonl.tsv
 docs_avg_lm: '[[0.2, 46], [0.3, 619], [0.4, 6649], [0.5, 37479], [0.6, 100761], [0.7,
   75246], [0.8, 7242], [0.9, 163]]'
 docs_collections: '[["cc40", 108750], ["wide16", 55681], ["wide17", 34737], ["wide15",
@@ -230,9 +231,24 @@ docs_top100_tld: '[["com", 144672], ["in", 44281], ["org", 16538], ["net", 10886
 docs_total: 228215
 docs_warnings:
 - docs_unmatching_10
-corpus: kn_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 45.45, "no_urls": 1.26, "no_bad_encoding":
-  0.01}'
+docs_wds: '[[0.0, 14503], [0.1, 462], [0.2, 630], [0.3, 812], [0.4, 1060], [0.5, 1242],
+  [0.6, 1047], [0.7, 829], [0.8, 664], [0.9, 554], [1.0, 445], [1.1, 330], [1.2, 390],
+  [1.3, 400], [1.4, 451], [1.5, 427], [1.6, 382], [1.7, 426], [1.8, 446], [1.9, 469],
+  [2.0, 386], [2.1, 408], [2.2, 449], [2.3, 420], [2.4, 444], [2.5, 529], [2.6, 518],
+  [2.7, 505], [2.8, 536], [2.9, 522], [3.0, 523], [3.1, 569], [3.2, 591], [3.3, 729],
+  [3.4, 763], [3.5, 836], [3.6, 857], [3.7, 989], [3.8, 969], [3.9, 1060], [4.0, 1215],
+  [4.1, 1290], [4.2, 1334], [4.3, 1453], [4.4, 1522], [4.5, 1609], [4.6, 1699], [4.7,
+  1733], [4.8, 1888], [4.9, 2141], [5.0, 2232], [5.1, 2484], [5.2, 2548], [5.3, 2697],
+  [5.4, 2760], [5.5, 2803], [5.6, 3179], [5.7, 3378], [5.8, 3698], [5.9, 4055], [6.0,
+  4258], [6.1, 4351], [6.2, 4434], [6.3, 4501], [6.4, 4675], [6.5, 4764], [6.6, 5039],
+  [6.7, 5083], [6.8, 5056], [6.9, 5355], [7.0, 5184], [7.1, 5187], [7.2, 5118], [7.3,
+  5181], [7.4, 5193], [7.5, 5152], [7.6, 5052], [7.7, 4950], [7.8, 4950], [7.9, 4652],
+  [8.0, 4676], [8.1, 4351], [8.2, 4235], [8.3, 3869], [8.4, 3553], [8.5, 3362], [8.6,
+  2969], [8.7, 2729], [8.8, 2588], [8.9, 2401], [9.0, 2229], [9.1, 1860], [9.2, 1705],
+  [9.3, 1407], [9.4, 1156], [9.5, 894], [9.6, 781], [9.7, 520], [9.8, 336], [9.9,
+  138], [10.0, 31]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 13290185, "no_urls": 368440,
+  "no_bad_encoding": 2924}'
 monocleaner_scores: '[[0.0, 1447596], [0.1, 554903], [0.2, 1082059], [0.3, 1803599],
   [0.4, 2756304], [0.5, 4226292], [0.6, 5074143], [0.7, 5468259], [0.8, 5165049],
   [0.9, 1663128]]'
@@ -267,6 +283,17 @@ src_langs: '[["kn", 16968873], ["en", 9092348], ["cs", 446692], ["de", 355872], 
   ["tk", 32], ["pam", 28], ["li", 27], ["qu", 24], ["dty", 14], ["os", 12], ["cbk",
   12], ["gv", 11], ["rm", 9], ["myv", 8], ["nah", 7], ["lez", 7], ["nap", 6], ["kv",
   5], ["dsb", 5], ["vls", 4], ["lrc", 3], ["sc", 2], ["co", 2]]'
+src_ngrams: '{"1": [[["the"], 1080755], [["to"], 1014534], [["in"], 823065], [["news"],
+  801921], [["of"], 674903]], "2": [[["of the"], 120948], [["span style"], 115762],
+  [["rights reserved"], 112002], [["all rights"], 104013], [["no comments"], 96691]],
+  "3": [[["all rights reserved"], 103766], [["opens in new"], 53064], [["in new window"],
+  53044], [["to twittershare to"], 50021], [["share to twittershare"], 50021]], "4":
+  [[["opens in new window"], 53041], [["share to twittershare to"], 50021], [["twittershare
+  to facebookshare to"], 45919], [["to twittershare to facebookshare"], 45919], [["to
+  facebookshare to pinterest"], 45919]], "5": [[["twittershare to facebookshare to
+  pinterest"], 45919], [["to twittershare to facebookshare to"], 45919], [["share
+  to twittershare to facebookshare"], 45919], [["leave a reply cancel reply"], 31648],
+  [["address will not be published"], 27715]]}'
 src_sent_tokens: '[[1, 7243931], [2, 4557921], [3, 2602991], [4, 1875504], [5, 2446093],
   [6, 1342006], [7, 964813], [8, 818721], [9, 768676], [10, 682802], [11, 575797],
   [12, 427823], [13, 423844], [14, 308078], [15, 236312], [16, 208719], [17, 246113],
@@ -988,15 +1015,3 @@ timestamp: 1710857492.8461914
 ttr_src: 0.03
 unique_sents: 6052194
 warnings: []
-src_ngrams: '{"1": [[["the"], 1080755], [["to"], 1014534], [["in"], 823065], [["news"],
-  801921], [["of"], 674903]], "2": [[["of the"], 120948], [["span style"], 115762],
-  [["rights reserved"], 112002], [["all rights"], 104013], [["no comments"], 96691]],
-  "3": [[["all rights reserved"], 103766], [["opens in new"], 53064], [["in new window"],
-  53044], [["to twittershare to"], 50021], [["share to twittershare"], 50021]], "4":
-  [[["opens in new window"], 53041], [["share to twittershare to"], 50021], [["twittershare
-  to facebookshare to"], 45919], [["to twittershare to facebookshare"], 45919], [["to
-  facebookshare to pinterest"], 45919]], "5": [[["twittershare to facebookshare to
-  pinterest"], 45919], [["to twittershare to facebookshare to"], 45919], [["share
-  to twittershare to facebookshare"], 45919], [["leave a reply cancel reply"], 31648],
-  [["address will not be published"], 27715]]}'
-docs_wds: '[[0.0, 14503], [0.1, 462], [0.2, 630], [0.3, 812], [0.4, 1060], [0.5, 1242], [0.6, 1047], [0.7, 829], [0.8, 664], [0.9, 554], [1.0, 445], [1.1, 330], [1.2, 390], [1.3, 400], [1.4, 451], [1.5, 427], [1.6, 382], [1.7, 426], [1.8, 446], [1.9, 469], [2.0, 386], [2.1, 408], [2.2, 449], [2.3, 420], [2.4, 444], [2.5, 529], [2.6, 518], [2.7, 505], [2.8, 536], [2.9, 522], [3.0, 523], [3.1, 569], [3.2, 591], [3.3, 729], [3.4, 763], [3.5, 836], [3.6, 857], [3.7, 989], [3.8, 969], [3.9, 1060], [4.0, 1215], [4.1, 1290], [4.2, 1334], [4.3, 1453], [4.4, 1522], [4.5, 1609], [4.6, 1699], [4.7, 1733], [4.8, 1888], [4.9, 2141], [5.0, 2232], [5.1, 2484], [5.2, 2548], [5.3, 2697], [5.4, 2760], [5.5, 2803], [5.6, 3179], [5.7, 3378], [5.8, 3698], [5.9, 4055], [6.0, 4258], [6.1, 4351], [6.2, 4434], [6.3, 4501], [6.4, 4675], [6.5, 4764], [6.6, 5039], [6.7, 5083], [6.8, 5056], [6.9, 5355], [7.0, 5184], [7.1, 5187], [7.2, 5118], [7.3, 5181], [7.4, 5193], [7.5, 5152], [7.6, 5052], [7.7, 4950], [7.8, 4950], [7.9, 4652], [8.0, 4676], [8.1, 4351], [8.2, 4235], [8.3, 3869], [8.4, 3553], [8.5, 3362], [8.6, 2969], [8.7, 2729], [8.8, 2588], [8.9, 2401], [9.0, 2229], [9.1, 1860], [9.2, 1705], [9.3, 1407], [9.4, 1156], [9.5, 894], [9.6, 781], [9.7, 520], [9.8, 336], [9.9, 138], [10.0, 31]]'
