--- a/reports/mono-1.2/HPLT-docs.mk.yaml
+++ b/reports/mono-1.2/HPLT-docs.mk.yaml
@@ -1,3 +1,4 @@
+corpus: mk_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 1], [0.2, 22], [0.3, 531], [0.4, 2615], [0.5, 16042], [0.6, 90935],
   [0.7, 379382], [0.8, 234558], [0.9, 9937], [1.0, 170]]'
 docs_collections: '[["cc40", 319992], ["wide16", 220616], ["wide15", 134135], ["wide17",
@@ -234,9 +235,24 @@ docs_top100_tld: '[["mk", 427862], ["com", 111256], ["com.mk", 92704], ["org", 2
 docs_total: 734687
 docs_warnings:
 - docs_unmatching_494
-corpus: mk_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 47.08, "no_urls": 1.4, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 11018], [0.1, 270], [0.2, 266], [0.3, 293], [0.4, 341], [0.5, 405],
+  [0.6, 429], [0.7, 470], [0.8, 495], [0.9, 531], [1.0, 575], [1.1, 662], [1.2, 771],
+  [1.3, 853], [1.4, 1011], [1.5, 1067], [1.6, 1050], [1.7, 1123], [1.8, 1171], [1.9,
+  1230], [2.0, 1421], [2.1, 1528], [2.2, 1660], [2.3, 1748], [2.4, 1743], [2.5, 1759],
+  [2.6, 1754], [2.7, 1951], [2.8, 1900], [2.9, 1901], [3.0, 1988], [3.1, 2131], [3.2,
+  2363], [3.3, 2550], [3.4, 2819], [3.5, 2931], [3.6, 3163], [3.7, 3288], [3.8, 3491],
+  [3.9, 3882], [4.0, 4144], [4.1, 4879], [4.2, 5148], [4.3, 5154], [4.4, 5414], [4.5,
+  5662], [4.6, 6165], [4.7, 6700], [4.8, 7233], [4.9, 7730], [5.0, 8168], [5.1, 8848],
+  [5.2, 9406], [5.3, 10604], [5.4, 11287], [5.5, 11921], [5.6, 12040], [5.7, 12638],
+  [5.8, 12915], [5.9, 12999], [6.0, 13482], [6.1, 14115], [6.2, 14347], [6.3, 15382],
+  [6.4, 16470], [6.5, 16892], [6.6, 18302], [6.7, 18551], [6.8, 20292], [6.9, 21127],
+  [7.0, 21338], [7.1, 22687], [7.2, 22956], [7.3, 20921], [7.4, 21043], [7.5, 21348],
+  [7.6, 19450], [7.7, 18285], [7.8, 19273], [7.9, 17991], [8.0, 17829], [8.1, 16764],
+  [8.2, 12302], [8.3, 10518], [8.4, 8668], [8.5, 7810], [8.6, 6857], [8.7, 6571],
+  [8.8, 5850], [8.9, 5543], [9.0, 4747], [9.1, 3963], [9.2, 3385], [9.3, 2826], [9.4,
+  2326], [9.5, 1926], [9.6, 1453], [9.7, 1101], [9.8, 624], [9.9, 255], [10.0, 60]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 40578124, "no_urls": 1206656,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 3648670], [0.1, 1065075], [0.2, 1357948], [0.3, 2619592],
   [0.4, 4167170], [0.5, 8441304], [0.6, 10937899], [0.7, 15189108], [0.8, 21454973],
   [0.9, 17307991]]'
@@ -273,6 +289,22 @@ src_langs: '[["mk", 61016161], ["en", 10044691], ["sr", 3027553], ["ru", 1847381
   74], ["yi", 52], ["pam", 49], ["nah", 38], ["lrc", 37], ["scn", 35], ["gv", 33],
   ["nap", 30], ["frr", 23], ["vls", 17], ["vec", 8], ["pfl", 7], ["dsb", 7], ["co",
   7], ["bh", 7], ["dty", 3], ["hif", 1]]'
+src_ngrams: '{"1": [[["\u043c\u0430\u043a\u0435\u0434\u043e\u043d\u0438\u0458\u0430"],
+  2546789], [["\u0432\u0435\u0441\u0442\u0438"], 1408817], [["\u0433\u043e\u0434\u0438\u043d\u0430"],
+  1313749], [["\u0441\u043a\u043e\u043f\u0458\u0435"], 1187774], [["\u0432\u0438\u0434\u0435\u043e"],
+  1138123]], "2": [[["\u0440\u0435\u043f\u0443\u0431\u043b\u0438\u043a\u0430 \u043c\u0430\u043a\u0435\u0434\u043e\u043d\u0438\u0458\u0430"],
+  237582], [["\u043d\u0430\u0458\u043d\u043e\u0432\u0438 \u0432\u0435\u0441\u0442\u0438"],
+  171533], [["of the"], 142448], [["\u043c\u0438\u043b\u0438\u043e\u043d\u0438 \u0435\u0432\u0440\u0430"],
+  124160], [["read more"], 122921]], "3": [[["\u043f\u0440\u0430\u0432\u0430 \u0441\u0435
+  \u0437\u0430\u0434\u0440\u0436\u0430\u043d\u0438"], 127603], [["\u0443\u0441\u043b\u043e\u0432\u0438
+  \u0437\u0430 \u043a\u043e\u0440\u0438\u0441\u0442\u0435\u045a\u0435"], 120153],
+  [["\u0459\u0443\u0431\u043e\u0432 \u0438 \u0441\u0435\u043a\u0441"], 96559], [["all
+  rights reserved"], 83602], [["skip to content"], 68997]], "4": [[["cookie is set
+  by"], 47536], [["&nbsp; &nbsp; &nbsp; &nbsp;"], 40187], [["the user consent for"],
+  40018], [["user consent for the"], 39935], [["consent for the cookies"], 39935]],
+  "5": [[["user consent for the cookies"], 39935], [["the user consent for the"],
+  39935], [["for the cookies in the"], 39933], [["consent for the cookies in"], 39933],
+  [["the cookies in the category"], 38982]]}'
 src_sent_tokens: '[[0, 1283381], [1, 25867870], [2, 11197007], [3, 7382151], [4, 4648028],
   [5, 3948494], [6, 2767021], [7, 2286569], [8, 2256470], [9, 2301162], [10, 2118707],
   [11, 1899630], [12, 1687904], [13, 1672036], [14, 1309767], [15, 1060062], [16,
@@ -1274,20 +1306,3 @@ timestamp: 1711133217.0217848
 ttr_src: 0.01
 unique_sents: 14489281
 warnings: []
-src_ngrams: '{"1": [[["\u043c\u0430\u043a\u0435\u0434\u043e\u043d\u0438\u0458\u0430"],
-  2546789], [["\u0432\u0435\u0441\u0442\u0438"], 1408817], [["\u0433\u043e\u0434\u0438\u043d\u0430"],
-  1313749], [["\u0441\u043a\u043e\u043f\u0458\u0435"], 1187774], [["\u0432\u0438\u0434\u0435\u043e"],
-  1138123]], "2": [[["\u0440\u0435\u043f\u0443\u0431\u043b\u0438\u043a\u0430 \u043c\u0430\u043a\u0435\u0434\u043e\u043d\u0438\u0458\u0430"],
-  237582], [["\u043d\u0430\u0458\u043d\u043e\u0432\u0438 \u0432\u0435\u0441\u0442\u0438"],
-  171533], [["of the"], 142448], [["\u043c\u0438\u043b\u0438\u043e\u043d\u0438 \u0435\u0432\u0440\u0430"],
-  124160], [["read more"], 122921]], "3": [[["\u043f\u0440\u0430\u0432\u0430 \u0441\u0435
-  \u0437\u0430\u0434\u0440\u0436\u0430\u043d\u0438"], 127603], [["\u0443\u0441\u043b\u043e\u0432\u0438
-  \u0437\u0430 \u043a\u043e\u0440\u0438\u0441\u0442\u0435\u045a\u0435"], 120153],
-  [["\u0459\u0443\u0431\u043e\u0432 \u0438 \u0441\u0435\u043a\u0441"], 96559], [["all
-  rights reserved"], 83602], [["skip to content"], 68997]], "4": [[["cookie is set
-  by"], 47536], [["&nbsp; &nbsp; &nbsp; &nbsp;"], 40187], [["the user consent for"],
-  40018], [["user consent for the"], 39935], [["consent for the cookies"], 39935]],
-  "5": [[["user consent for the cookies"], 39935], [["the user consent for the"],
-  39935], [["for the cookies in the"], 39933], [["consent for the cookies in"], 39933],
-  [["the cookies in the category"], 38982]]}'
-docs_wds: '[[0.0, 11018], [0.1, 270], [0.2, 266], [0.3, 293], [0.4, 341], [0.5, 405], [0.6, 429], [0.7, 470], [0.8, 495], [0.9, 531], [1.0, 575], [1.1, 662], [1.2, 771], [1.3, 853], [1.4, 1011], [1.5, 1067], [1.6, 1050], [1.7, 1123], [1.8, 1171], [1.9, 1230], [2.0, 1421], [2.1, 1528], [2.2, 1660], [2.3, 1748], [2.4, 1743], [2.5, 1759], [2.6, 1754], [2.7, 1951], [2.8, 1900], [2.9, 1901], [3.0, 1988], [3.1, 2131], [3.2, 2363], [3.3, 2550], [3.4, 2819], [3.5, 2931], [3.6, 3163], [3.7, 3288], [3.8, 3491], [3.9, 3882], [4.0, 4144], [4.1, 4879], [4.2, 5148], [4.3, 5154], [4.4, 5414], [4.5, 5662], [4.6, 6165], [4.7, 6700], [4.8, 7233], [4.9, 7730], [5.0, 8168], [5.1, 8848], [5.2, 9406], [5.3, 10604], [5.4, 11287], [5.5, 11921], [5.6, 12040], [5.7, 12638], [5.8, 12915], [5.9, 12999], [6.0, 13482], [6.1, 14115], [6.2, 14347], [6.3, 15382], [6.4, 16470], [6.5, 16892], [6.6, 18302], [6.7, 18551], [6.8, 20292], [6.9, 21127], [7.0, 21338], [7.1, 22687], [7.2, 22956], [7.3, 20921], [7.4, 21043], [7.5, 21348], [7.6, 19450], [7.7, 18285], [7.8, 19273], [7.9, 17991], [8.0, 17829], [8.1, 16764], [8.2, 12302], [8.3, 10518], [8.4, 8668], [8.5, 7810], [8.6, 6857], [8.7, 6571], [8.8, 5850], [8.9, 5543], [9.0, 4747], [9.1, 3963], [9.2, 3385], [9.3, 2826], [9.4, 2326], [9.5, 1926], [9.6, 1453], [9.7, 1101], [9.8, 624], [9.9, 255], [10.0, 60]]'
