--- a/reports/mono-1.2/HPLT-docs.my.yaml
+++ b/reports/mono-1.2/HPLT-docs.my.yaml
@@ -1,3 +1,4 @@
+corpus: my_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 128], [0.1, 583], [0.2, 1010], [0.3, 791], [0.4, 4314], [0.5,
   36754], [0.6, 114430], [0.7, 70205], [0.8, 10731], [0.9, 520], [1.0, 1]]'
 docs_collections: '[["cc40", 77331], ["wide15", 71296], ["wide16", 65437], ["wide17",
@@ -345,9 +346,24 @@ docs_top100_tld: '[["com", 135819], ["org", 18403], ["sg", 13675], ["net", 12752
 docs_total: 239473
 docs_warnings:
 - docs_unmatching_6
-corpus: my_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 32.93, "no_urls": 1.46, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 37974], [0.1, 2075], [0.2, 2170], [0.3, 1975], [0.4, 1992], [0.5,
+  1965], [0.6, 2008], [0.7, 1795], [0.8, 1797], [0.9, 1643], [1.0, 1634], [1.1, 1568],
+  [1.2, 1620], [1.3, 1596], [1.4, 1553], [1.5, 1473], [1.6, 1471], [1.7, 1506], [1.8,
+  1460], [1.9, 1499], [2.0, 1507], [2.1, 1518], [2.2, 1497], [2.3, 1490], [2.4, 1548],
+  [2.5, 1410], [2.6, 1593], [2.7, 1539], [2.8, 1516], [2.9, 1596], [3.0, 1573], [3.1,
+  1549], [3.2, 1557], [3.3, 1660], [3.4, 1688], [3.5, 1720], [3.6, 1749], [3.7, 1722],
+  [3.8, 1794], [3.9, 1895], [4.0, 2045], [4.1, 1822], [4.2, 1706], [4.3, 1895], [4.4,
+  1807], [4.5, 1858], [4.6, 1785], [4.7, 1785], [4.8, 1804], [4.9, 1777], [5.0, 1818],
+  [5.1, 1823], [5.2, 1970], [5.3, 1989], [5.4, 2043], [5.5, 2049], [5.6, 2246], [5.7,
+  2270], [5.8, 2511], [5.9, 2718], [6.0, 3151], [6.1, 2826], [6.2, 2840], [6.3, 3047],
+  [6.4, 3394], [6.5, 3404], [6.6, 3860], [6.7, 3899], [6.8, 5001], [6.9, 4114], [7.0,
+  4558], [7.1, 5498], [7.2, 4164], [7.3, 3547], [7.4, 5597], [7.5, 3662], [7.6, 3871],
+  [7.7, 3614], [7.8, 5798], [7.9, 4705], [8.0, 8031], [8.1, 1965], [8.2, 1166], [8.3,
+  868], [8.4, 674], [8.5, 564], [8.6, 542], [8.7, 408], [8.8, 430], [8.9, 431], [9.0,
+  348], [9.1, 195], [9.2, 140], [9.3, 120], [9.4, 91], [9.5, 107], [9.6, 89], [9.7,
+  74], [9.8, 34], [9.9, 20], [10.0, 10]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 15731523, "no_urls": 697480,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 1527425], [0.1, 588356], [0.2, 1221573], [0.3, 4233343],
   [0.4, 5797394], [0.5, 7494884], [0.6, 8765841], [0.7, 10110259], [0.8, 6667849],
   [0.9, 1365694]]'
@@ -383,6 +399,20 @@ src_langs: '[["my", 23503119], ["en", 14362335], ["cs", 2658840], ["de", 1451325
   15], ["nah", 11], ["mrj", 9], ["cbk", 8], ["lrc", 7], ["vls", 5], ["xal", 4], ["hif",
   4], ["dty", 4], ["co", 3], ["lez", 2], ["frr", 2], ["dsb", 2], ["vep", 1], ["av",
   1]]'
+src_ngrams: '{"1": [[["\u1000\u102d\u102f"], 8333926], [["\u1000"], 8297226], [["\u1015\u102b"],
+  7883766], [["\u101b"], 3850051], [["\u1019"], 3547059]], "2": [[["\u1015\u102b \u1010\u101a\u1039\u104b"],
+  1665682], [["\u1015\u102b \u1010\u101a\u103a"], 656538], [["\u101b \u1015\u102b"],
+  540256], [["\u1015\u102b \u1018\u1030\u1038"], 422091], [["\u1006\u102d\u102f \u1010\u102c"],
+  415393]], "3": [[["lsd exception locked"], 270833], [["this blog this!"], 219870],
+  [["blog this! sharetotwitter"], 219860], [["this! sharetotwitter sharetofacebook"],
+  219825], [["email this blog"], 219644]], "4": [[["this blog this! sharetotwitter"],
+  219846], [["blog this! sharetotwitter sharetofacebook"], 219825], [["email this
+  blog this!"], 219644], [["this! sharetotwitter sharetofacebook sharetop"], 197889],
+  [["sharetotwitter sharetofacebook sharetop interest"], 197888]], "5": [[["this blog
+  this! sharetotwitter sharetofacebook"], 219811], [["email this blog this! sharetotwitter"],
+  219642], [["blog this! sharetotwitter sharetofacebook sharetop"], 197889], [["this!
+  sharetotwitter sharetofacebook sharetop interest"], 197888], [["newer post older
+  post home"], 41638]]}'
 src_sent_tokens: '[[0, 339958], [1, 10602951], [2, 8941837], [3, 5879932], [4, 3786008],
   [5, 2852990], [6, 2199429], [7, 1535806], [8, 1353590], [9, 920523], [10, 723130],
   [11, 619568], [12, 527093], [13, 456872], [14, 413405], [15, 366022], [16, 319062],
@@ -2038,18 +2068,3 @@ timestamp: 1711455481.940106
 ttr_src: 0.07
 unique_sents: 9899356
 warnings: []
-src_ngrams: '{"1": [[["\u1000\u102d\u102f"], 8333926], [["\u1000"], 8297226], [["\u1015\u102b"],
-  7883766], [["\u101b"], 3850051], [["\u1019"], 3547059]], "2": [[["\u1015\u102b \u1010\u101a\u1039\u104b"],
-  1665682], [["\u1015\u102b \u1010\u101a\u103a"], 656538], [["\u101b \u1015\u102b"],
-  540256], [["\u1015\u102b \u1018\u1030\u1038"], 422091], [["\u1006\u102d\u102f \u1010\u102c"],
-  415393]], "3": [[["lsd exception locked"], 270833], [["this blog this!"], 219870],
-  [["blog this! sharetotwitter"], 219860], [["this! sharetotwitter sharetofacebook"],
-  219825], [["email this blog"], 219644]], "4": [[["this blog this! sharetotwitter"],
-  219846], [["blog this! sharetotwitter sharetofacebook"], 219825], [["email this
-  blog this!"], 219644], [["this! sharetotwitter sharetofacebook sharetop"], 197889],
-  [["sharetotwitter sharetofacebook sharetop interest"], 197888]], "5": [[["this blog
-  this! sharetotwitter sharetofacebook"], 219811], [["email this blog this! sharetotwitter"],
-  219642], [["blog this! sharetotwitter sharetofacebook sharetop"], 197889], [["this!
-  sharetotwitter sharetofacebook sharetop interest"], 197888], [["newer post older
-  post home"], 41638]]}'
-docs_wds: '[[0.0, 37974], [0.1, 2075], [0.2, 2170], [0.3, 1975], [0.4, 1992], [0.5, 1965], [0.6, 2008], [0.7, 1795], [0.8, 1797], [0.9, 1643], [1.0, 1634], [1.1, 1568], [1.2, 1620], [1.3, 1596], [1.4, 1553], [1.5, 1473], [1.6, 1471], [1.7, 1506], [1.8, 1460], [1.9, 1499], [2.0, 1507], [2.1, 1518], [2.2, 1497], [2.3, 1490], [2.4, 1548], [2.5, 1410], [2.6, 1593], [2.7, 1539], [2.8, 1516], [2.9, 1596], [3.0, 1573], [3.1, 1549], [3.2, 1557], [3.3, 1660], [3.4, 1688], [3.5, 1720], [3.6, 1749], [3.7, 1722], [3.8, 1794], [3.9, 1895], [4.0, 2045], [4.1, 1822], [4.2, 1706], [4.3, 1895], [4.4, 1807], [4.5, 1858], [4.6, 1785], [4.7, 1785], [4.8, 1804], [4.9, 1777], [5.0, 1818], [5.1, 1823], [5.2, 1970], [5.3, 1989], [5.4, 2043], [5.5, 2049], [5.6, 2246], [5.7, 2270], [5.8, 2511], [5.9, 2718], [6.0, 3151], [6.1, 2826], [6.2, 2840], [6.3, 3047], [6.4, 3394], [6.5, 3404], [6.6, 3860], [6.7, 3899], [6.8, 5001], [6.9, 4114], [7.0, 4558], [7.1, 5498], [7.2, 4164], [7.3, 3547], [7.4, 5597], [7.5, 3662], [7.6, 3871], [7.7, 3614], [7.8, 5798], [7.9, 4705], [8.0, 8031], [8.1, 1965], [8.2, 1166], [8.3, 868], [8.4, 674], [8.5, 564], [8.6, 542], [8.7, 408], [8.8, 430], [8.9, 431], [9.0, 348], [9.1, 195], [9.2, 140], [9.3, 120], [9.4, 91], [9.5, 107], [9.6, 89], [9.7, 74], [9.8, 34], [9.9, 20], [10.0, 10]]'
