--- a/reports/mono-1.2/HPLT-docs.nn.yaml
+++ b/reports/mono-1.2/HPLT-docs.nn.yaml
@@ -1,3 +1,4 @@
+corpus: nn_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 6], [0.2, 198], [0.3, 1248], [0.4, 18386], [0.5, 74058], [0.6,
   105531], [0.7, 28172], [0.8, 757], [0.9, 3]]'
 docs_collections: '[["cc40", 92395], ["wide15", 74098], ["wide16", 38541], ["wide17",
@@ -222,9 +223,24 @@ docs_top100_tld: '[["no", 146905], ["com", 31248], ["org", 19310], ["me", 9874],
 docs_total: 228480
 docs_warnings:
 - docs_unmatching_121
-corpus: nn_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 37.35, "no_urls": 2.32, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 6219], [0.1, 1258], [0.2, 1030], [0.3, 718], [0.4, 695], [0.5, 636],
+  [0.6, 702], [0.7, 689], [0.8, 681], [0.9, 691], [1.0, 704], [1.1, 701], [1.2, 787],
+  [1.3, 857], [1.4, 837], [1.5, 862], [1.6, 945], [1.7, 1006], [1.8, 1059], [1.9,
+  1141], [2.0, 1255], [2.1, 1244], [2.2, 1371], [2.3, 1427], [2.4, 1418], [2.5, 1544],
+  [2.6, 1529], [2.7, 1636], [2.8, 1744], [2.9, 1781], [3.0, 1827], [3.1, 1946], [3.2,
+  2085], [3.3, 2177], [3.4, 2244], [3.5, 2393], [3.6, 2540], [3.7, 2545], [3.8, 2681],
+  [3.9, 2848], [4.0, 2824], [4.1, 3003], [4.2, 3123], [4.3, 3169], [4.4, 3156], [4.5,
+  3243], [4.6, 3458], [4.7, 3487], [4.8, 3654], [4.9, 3572], [5.0, 3728], [5.1, 3813],
+  [5.2, 3779], [5.3, 3976], [5.4, 3884], [5.5, 4021], [5.6, 3957], [5.7, 4054], [5.8,
+  4126], [5.9, 4247], [6.0, 4203], [6.1, 4382], [6.2, 4353], [6.3, 4318], [6.4, 4255],
+  [6.5, 4210], [6.6, 4170], [6.7, 4283], [6.8, 4148], [6.9, 4014], [7.0, 4016], [7.1,
+  3795], [7.2, 3803], [7.3, 3446], [7.4, 3507], [7.5, 3300], [7.6, 3145], [7.7, 2810],
+  [7.8, 2802], [7.9, 2676], [8.0, 2827], [8.1, 2542], [8.2, 2104], [8.3, 1866], [8.4,
+  1721], [8.5, 1423], [8.6, 1337], [8.7, 1061], [8.8, 1058], [8.9, 842], [9.0, 801],
+  [9.1, 699], [9.2, 542], [9.3, 461], [9.4, 320], [9.5, 243], [9.6, 148], [9.7, 76],
+  [9.8, 37], [9.9, 7], [10.0, 2]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 10752036, "no_urls": 667864,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 1218314], [0.1, 941069], [0.2, 1636402], [0.3, 2379821],
   [0.4, 4235573], [0.5, 4749250], [0.6, 4840923], [0.7, 5983876], [0.8, 2551991],
   [0.9, 250026]]'
@@ -260,6 +276,19 @@ src_langs: '[["nn", 15580497], ["en", 3605732], ["nb", 3336371], ["de", 1314574]
   ["sc", 33], ["nap", 31], ["krc", 30], ["vec", 23], ["bh", 18], ["cbk", 12], ["lez",
   9], ["nah", 7], ["lrc", 5], ["mrj", 3], ["co", 3], ["rue", 2], ["myv", 2], ["pfl",
   1], ["dty", 1], ["av", 1]]'
+src_ngrams: '{"1": [[["detaljer"], 895215], [["kommune"], 733749], [["\u00e5r"], 692325],
+  [["to"], 514673], [["the"], 456217]], "2": [[["kommune m\u00f8teprotokoll"], 110302],
+  [["via e-postblogg"], 91549], [["funksjon representerer"], 63615], [["m\u00f8teprotokoll
+  utval"], 59567], [["utval m\u00f8tedato"], 52739]], "3": [[["send dette via"], 91644],
+  [["del p\u00e5 twitterdel"], 91550], [["facebookdel p\u00e5 pinterest"], 91313],
+  [["twitterdel p\u00e5 facebookdel"], 91312], [["sogn og fjordane"], 77264]], "4":
+  [[["send dette via e-postblogg"], 91549], [["nyere innlegg eldre innlegg"], 33711],
+  [["innlegg eldre innlegg start"], 25492], [["nynorsk/bokm\u00e5l nynorsk eksamensinformasjon
+  eksamenstid"], 22900], [["f\u00f8lgjande faste medlemmer m\u00f8tte"], 21141]],
+  "5": [[["twitterdel p\u00e5 facebookdel p\u00e5 pinterest"], 91312], [["del p\u00e5
+  twitterdel p\u00e5 facebookdel"], 91312], [["nyere innlegg eldre innlegg start"],
+  25492], [["faste medlemmer var til stades"], 14925], [["ronk ronk ronk ronk ronk"],
+  13092]]}'
 src_sent_tokens: '[[0, 414728], [1, 6042461], [2, 3213952], [3, 2563787], [4, 2524085],
   [5, 3696563], [6, 1171501], [7, 870693], [8, 624896], [9, 559973], [10, 446588],
   [11, 376710], [12, 312291], [13, 395758], [14, 245578], [15, 221982], [16, 206268],
@@ -868,17 +897,3 @@ ttr_src: 0.01
 unique_sents: 7014173
 warnings:
 - src_warning_tok_nltk_punkt_no
-src_ngrams: '{"1": [[["detaljer"], 895215], [["kommune"], 733749], [["\u00e5r"], 692325],
-  [["to"], 514673], [["the"], 456217]], "2": [[["kommune m\u00f8teprotokoll"], 110302],
-  [["via e-postblogg"], 91549], [["funksjon representerer"], 63615], [["m\u00f8teprotokoll
-  utval"], 59567], [["utval m\u00f8tedato"], 52739]], "3": [[["send dette via"], 91644],
-  [["del p\u00e5 twitterdel"], 91550], [["facebookdel p\u00e5 pinterest"], 91313],
-  [["twitterdel p\u00e5 facebookdel"], 91312], [["sogn og fjordane"], 77264]], "4":
-  [[["send dette via e-postblogg"], 91549], [["nyere innlegg eldre innlegg"], 33711],
-  [["innlegg eldre innlegg start"], 25492], [["nynorsk/bokm\u00e5l nynorsk eksamensinformasjon
-  eksamenstid"], 22900], [["f\u00f8lgjande faste medlemmer m\u00f8tte"], 21141]],
-  "5": [[["twitterdel p\u00e5 facebookdel p\u00e5 pinterest"], 91312], [["del p\u00e5
-  twitterdel p\u00e5 facebookdel"], 91312], [["nyere innlegg eldre innlegg start"],
-  25492], [["faste medlemmer var til stades"], 14925], [["ronk ronk ronk ronk ronk"],
-  13092]]}'
-docs_wds: '[[0.0, 6219], [0.1, 1258], [0.2, 1030], [0.3, 718], [0.4, 695], [0.5, 636], [0.6, 702], [0.7, 689], [0.8, 681], [0.9, 691], [1.0, 704], [1.1, 701], [1.2, 787], [1.3, 857], [1.4, 837], [1.5, 862], [1.6, 945], [1.7, 1006], [1.8, 1059], [1.9, 1141], [2.0, 1255], [2.1, 1244], [2.2, 1371], [2.3, 1427], [2.4, 1418], [2.5, 1544], [2.6, 1529], [2.7, 1636], [2.8, 1744], [2.9, 1781], [3.0, 1827], [3.1, 1946], [3.2, 2085], [3.3, 2177], [3.4, 2244], [3.5, 2393], [3.6, 2540], [3.7, 2545], [3.8, 2681], [3.9, 2848], [4.0, 2824], [4.1, 3003], [4.2, 3123], [4.3, 3169], [4.4, 3156], [4.5, 3243], [4.6, 3458], [4.7, 3487], [4.8, 3654], [4.9, 3572], [5.0, 3728], [5.1, 3813], [5.2, 3779], [5.3, 3976], [5.4, 3884], [5.5, 4021], [5.6, 3957], [5.7, 4054], [5.8, 4126], [5.9, 4247], [6.0, 4203], [6.1, 4382], [6.2, 4353], [6.3, 4318], [6.4, 4255], [6.5, 4210], [6.6, 4170], [6.7, 4283], [6.8, 4148], [6.9, 4014], [7.0, 4016], [7.1, 3795], [7.2, 3803], [7.3, 3446], [7.4, 3507], [7.5, 3300], [7.6, 3145], [7.7, 2810], [7.8, 2802], [7.9, 2676], [8.0, 2827], [8.1, 2542], [8.2, 2104], [8.3, 1866], [8.4, 1721], [8.5, 1423], [8.6, 1337], [8.7, 1061], [8.8, 1058], [8.9, 842], [9.0, 801], [9.1, 699], [9.2, 542], [9.3, 461], [9.4, 320], [9.5, 243], [9.6, 148], [9.7, 76], [9.8, 37], [9.9, 7], [10.0, 2]]'
