--- a/reports/mono-1.2/HPLT-docs.ps.yaml
+++ b/reports/mono-1.2/HPLT-docs.ps.yaml
@@ -1,3 +1,4 @@
+corpus: ps_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 2], [0.2, 4], [0.3, 104], [0.4, 1397], [0.5, 9501], [0.6, 28414],
   [0.7, 44570], [0.8, 4111], [0.9, 95]]'
 docs_collections: '[["cc40", 30898], ["wide16", 25051], ["wide17", 20100], ["wide15",
@@ -156,9 +157,23 @@ docs_top100_tld: '[["com", 54965], ["af", 7967], ["net", 6145], ["org", 5028], [
 docs_total: 88212
 docs_warnings:
 - docs_unmatching_14
-corpus: ps_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 39.48, "no_urls": 0.9, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 3304], [0.1, 218], [0.2, 222], [0.3, 171], [0.4, 182], [0.5, 157],
+  [0.6, 180], [0.7, 161], [0.8, 216], [0.9, 239], [1.0, 236], [1.1, 350], [1.2, 327],
+  [1.3, 389], [1.4, 405], [1.5, 444], [1.6, 440], [1.7, 512], [1.8, 510], [1.9, 557],
+  [2.0, 515], [2.1, 447], [2.2, 479], [2.3, 482], [2.4, 463], [2.5, 485], [2.6, 492],
+  [2.7, 533], [2.8, 516], [2.9, 514], [3.0, 585], [3.1, 548], [3.2, 622], [3.3, 624],
+  [3.4, 679], [3.5, 775], [3.6, 781], [3.7, 817], [3.8, 824], [3.9, 820], [4.0, 832],
+  [4.1, 964], [4.2, 986], [4.3, 1024], [4.4, 1297], [4.5, 1397], [4.6, 1282], [4.7,
+  1342], [4.8, 1255], [4.9, 1187], [5.0, 1248], [5.1, 1182], [5.2, 1311], [5.3, 1239],
+  [5.4, 1353], [5.5, 1381], [5.6, 1543], [5.7, 1624], [5.8, 1750], [5.9, 1868], [6.0,
+  1835], [6.1, 1848], [6.2, 1940], [6.3, 1766], [6.4, 1862], [6.5, 1821], [6.6, 2094],
+  [6.7, 1803], [6.8, 2127], [6.9, 2120], [7.0, 2352], [7.1, 2207], [7.2, 1861], [7.3,
+  1628], [7.4, 1947], [7.5, 1632], [7.6, 1304], [7.7, 1176], [7.8, 1193], [7.9, 974],
+  [8.0, 915], [8.1, 670], [8.2, 541], [8.3, 480], [8.4, 395], [8.5, 314], [8.6, 299],
+  [8.7, 290], [8.8, 266], [8.9, 229], [9.0, 206], [9.1, 188], [9.2, 142], [9.3, 133],
+  [9.4, 103], [9.5, 96], [9.6, 70], [9.7, 56], [9.8, 28], [9.9, 12], [10.0, 3]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 4336685, "no_urls": 98860, "no_bad_encoding":
+  0}'
 monocleaner_scores: '[[0.0, 382686], [0.1, 194910], [0.2, 318939], [0.3, 677646],
   [0.4, 920239], [0.5, 1320984], [0.6, 2078859], [0.7, 2152608], [0.8, 1895607], [0.9,
   1042035]]'
@@ -192,6 +207,24 @@ src_langs: '[["ps", 5294402], ["fa", 1727139], ["en", 1424994], ["ar", 793594], 
   10], ["tk", 9], ["wa", 8], ["kv", 8], ["eml", 7], ["bh", 7], ["rm", 6], ["scn",
   5], ["yo", 4], ["pam", 3], ["mt", 3], ["xal", 2], ["myv", 2], ["cbk", 2], ["hif",
   1], ["dsb", 1]]'
+src_ngrams: '{"1": [[["\u06a9\u06d0"], 1652289], [["\u0686\u06d0"], 1388817], [["\u062f\u064a"],
+  501104], [["\u0627\u0641\u063a\u0627\u0646\u0633\u062a\u0627\u0646"], 464528], [["\u062f\u06d0"],
+  428709]], "2": [[["\u0627\u0641\u063a\u0627\u0646\u0633\u062a\u0627\u0646 \u06a9\u06d0"],
+  71463], [["\u0645\u0647\u0645 \u062e\u0628\u0631\u0648\u0646\u0647"], 51888], [["\u0627\u0648\u0646\u06cd
+  \u0645\u0647\u0645"], 46617], [["days ago"], 43757], [["hours ago"], 42234]], "3":
+  [[["\u0627\u0648\u0646\u06cd \u0645\u0647\u0645 \u062e\u0628\u0631\u0648\u0646\u0647"],
+  46614], [["all rights reserved"], 21826], [["\u062f\u0627\u0633\u064a \u0647\u0645
+  \u0634\u062a\u0647"], 20739], [["\u0635\u0644\u06cc \u0627\u0644\u0644\u0647 \u0639\u0644\u06cc\u0647"],
+  13008], [["\u0633\u0627\u06cc\u0646\u0633 \u0627\u0648 \u067c\u06a9\u0646\u0627\u0644\u0648\u0698\u064a"],
+  11728]], "4": [[["\u0635\u0644\u06cc \u0627\u0644\u0644\u0647 \u0639\u0644\u06cc\u0647
+  \u0648\u0633\u0644\u0645"], 11980], [["\u062f\u0646\u0648\u0631 \u0644\u0627\u0631\u0648\u06cc\u0627\u0646
+  \u0696\u063a\u06cc\u0632\u0647 \u062e\u067e\u0631\u0648\u0646\u0647"], 9078], [["\u0686\u06d0
+  \u067e\u0647 \u0627\u0641\u063a\u0627\u0646\u0633\u062a\u0627\u0646 \u06a9\u06d0"],
+  6580], [["from twitter for iphone"], 6146], [["opens in new window"], 5917]], "5":
+  [[["\u0631\u0633\u0648\u0644 \u0627\u0644\u0644\u0647 \u0635\u0644\u06cc \u0627\u0644\u0644\u0647
+  \u0639\u0644\u06cc\u0647"], 5450], [["a password will be e"], 4498], [["\u0645\u0648\u0646\u0696
+  \u0633\u0631\u0647 \u067e\u0647 \u062a\u0645\u0627\u0633 \u06a9\u06d0"], 4343],
+  [["your email address will not"], 3816], [["email address will not be"], 3816]]}'
 src_sent_tokens: '[[0, 177527], [1, 2553943], [2, 1263931], [3, 1088275], [4, 829910],
   [5, 615907], [6, 413800], [7, 376341], [8, 331381], [9, 351612], [10, 267595], [11,
   241011], [12, 203409], [13, 274333], [14, 163256], [15, 135852], [16, 109605], [17,
@@ -790,22 +823,3 @@ ttr_src: 0.01
 unique_sents: 2078407
 warnings:
 - src_warning_tok_nltk_wordpunct
-src_ngrams: '{"1": [[["\u06a9\u06d0"], 1652289], [["\u0686\u06d0"], 1388817], [["\u062f\u064a"],
-  501104], [["\u0627\u0641\u063a\u0627\u0646\u0633\u062a\u0627\u0646"], 464528], [["\u062f\u06d0"],
-  428709]], "2": [[["\u0627\u0641\u063a\u0627\u0646\u0633\u062a\u0627\u0646 \u06a9\u06d0"],
-  71463], [["\u0645\u0647\u0645 \u062e\u0628\u0631\u0648\u0646\u0647"], 51888], [["\u0627\u0648\u0646\u06cd
-  \u0645\u0647\u0645"], 46617], [["days ago"], 43757], [["hours ago"], 42234]], "3":
-  [[["\u0627\u0648\u0646\u06cd \u0645\u0647\u0645 \u062e\u0628\u0631\u0648\u0646\u0647"],
-  46614], [["all rights reserved"], 21826], [["\u062f\u0627\u0633\u064a \u0647\u0645
-  \u0634\u062a\u0647"], 20739], [["\u0635\u0644\u06cc \u0627\u0644\u0644\u0647 \u0639\u0644\u06cc\u0647"],
-  13008], [["\u0633\u0627\u06cc\u0646\u0633 \u0627\u0648 \u067c\u06a9\u0646\u0627\u0644\u0648\u0698\u064a"],
-  11728]], "4": [[["\u0635\u0644\u06cc \u0627\u0644\u0644\u0647 \u0639\u0644\u06cc\u0647
-  \u0648\u0633\u0644\u0645"], 11980], [["\u062f\u0646\u0648\u0631 \u0644\u0627\u0631\u0648\u06cc\u0627\u0646
-  \u0696\u063a\u06cc\u0632\u0647 \u062e\u067e\u0631\u0648\u0646\u0647"], 9078], [["\u0686\u06d0
-  \u067e\u0647 \u0627\u0641\u063a\u0627\u0646\u0633\u062a\u0627\u0646 \u06a9\u06d0"],
-  6580], [["from twitter for iphone"], 6146], [["opens in new window"], 5917]], "5":
-  [[["\u0631\u0633\u0648\u0644 \u0627\u0644\u0644\u0647 \u0635\u0644\u06cc \u0627\u0644\u0644\u0647
-  \u0639\u0644\u06cc\u0647"], 5450], [["a password will be e"], 4498], [["\u0645\u0648\u0646\u0696
-  \u0633\u0631\u0647 \u067e\u0647 \u062a\u0645\u0627\u0633 \u06a9\u06d0"], 4343],
-  [["your email address will not"], 3816], [["email address will not be"], 3816]]}'
-docs_wds: '[[0.0, 3304], [0.1, 218], [0.2, 222], [0.3, 171], [0.4, 182], [0.5, 157], [0.6, 180], [0.7, 161], [0.8, 216], [0.9, 239], [1.0, 236], [1.1, 350], [1.2, 327], [1.3, 389], [1.4, 405], [1.5, 444], [1.6, 440], [1.7, 512], [1.8, 510], [1.9, 557], [2.0, 515], [2.1, 447], [2.2, 479], [2.3, 482], [2.4, 463], [2.5, 485], [2.6, 492], [2.7, 533], [2.8, 516], [2.9, 514], [3.0, 585], [3.1, 548], [3.2, 622], [3.3, 624], [3.4, 679], [3.5, 775], [3.6, 781], [3.7, 817], [3.8, 824], [3.9, 820], [4.0, 832], [4.1, 964], [4.2, 986], [4.3, 1024], [4.4, 1297], [4.5, 1397], [4.6, 1282], [4.7, 1342], [4.8, 1255], [4.9, 1187], [5.0, 1248], [5.1, 1182], [5.2, 1311], [5.3, 1239], [5.4, 1353], [5.5, 1381], [5.6, 1543], [5.7, 1624], [5.8, 1750], [5.9, 1868], [6.0, 1835], [6.1, 1848], [6.2, 1940], [6.3, 1766], [6.4, 1862], [6.5, 1821], [6.6, 2094], [6.7, 1803], [6.8, 2127], [6.9, 2120], [7.0, 2352], [7.1, 2207], [7.2, 1861], [7.3, 1628], [7.4, 1947], [7.5, 1632], [7.6, 1304], [7.7, 1176], [7.8, 1193], [7.9, 974], [8.0, 915], [8.1, 670], [8.2, 541], [8.3, 480], [8.4, 395], [8.5, 314], [8.6, 299], [8.7, 290], [8.8, 266], [8.9, 229], [9.0, 206], [9.1, 188], [9.2, 142], [9.3, 133], [9.4, 103], [9.5, 96], [9.6, 70], [9.7, 56], [9.8, 28], [9.9, 12], [10.0, 3]]'
