--- a/reports/mono-1.2/HPLT-docs.si.yaml
+++ b/reports/mono-1.2/HPLT-docs.si.yaml
@@ -1,3 +1,4 @@
+corpus: si_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 2], [0.2, 65], [0.3, 1971], [0.4, 11662], [0.5, 58405], [0.6,
   173610], [0.7, 73260], [0.8, 3203], [0.9, 30]]'
 docs_collections: '[["wide16", 112495], ["cc40", 92276], ["wide15", 85126], ["wide17",
@@ -325,9 +326,24 @@ docs_top100_tld: '[["com", 167391], ["lk", 65661], ["org", 16626], ["com.au", 68
 docs_total: 322515
 docs_warnings:
 - docs_unmatching_307
-corpus: si_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 31.51, "no_urls": 1.37, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 17970], [0.1, 445], [0.2, 377], [0.3, 471], [0.4, 516], [0.5, 664],
+  [0.6, 684], [0.7, 597], [0.8, 552], [0.9, 524], [1.0, 568], [1.1, 589], [1.2, 594],
+  [1.3, 555], [1.4, 612], [1.5, 628], [1.6, 664], [1.7, 729], [1.8, 770], [1.9, 773],
+  [2.0, 746], [2.1, 763], [2.2, 866], [2.3, 879], [2.4, 880], [2.5, 926], [2.6, 955],
+  [2.7, 1043], [2.8, 1017], [2.9, 1096], [3.0, 1167], [3.1, 1254], [3.2, 1325], [3.3,
+  1547], [3.4, 1667], [3.5, 1658], [3.6, 1751], [3.7, 1734], [3.8, 2045], [3.9, 2141],
+  [4.0, 2191], [4.1, 2325], [4.2, 2486], [4.3, 2580], [4.4, 2658], [4.5, 2777], [4.6,
+  2912], [4.7, 3045], [4.8, 3192], [4.9, 3486], [5.0, 3519], [5.1, 3771], [5.2, 3872],
+  [5.3, 4152], [5.4, 4512], [5.5, 4434], [5.6, 4737], [5.7, 4875], [5.8, 4995], [5.9,
+  5057], [6.0, 5517], [6.1, 5667], [6.2, 5960], [6.3, 5934], [6.4, 6245], [6.5, 6284],
+  [6.6, 6554], [6.7, 6526], [6.8, 6750], [6.9, 7108], [7.0, 6573], [7.1, 6494], [7.2,
+  6501], [7.3, 6379], [7.4, 6843], [7.5, 6833], [7.6, 6856], [7.7, 6814], [7.8, 6801],
+  [7.9, 6400], [8.0, 6141], [8.1, 6032], [8.2, 5607], [8.3, 5410], [8.4, 5079], [8.5,
+  4778], [8.6, 4324], [8.7, 4245], [8.8, 4062], [8.9, 3787], [9.0, 3638], [9.1, 3367],
+  [9.2, 2810], [9.3, 2280], [9.4, 1830], [9.5, 1444], [9.6, 1006], [9.7, 664], [9.8,
+  401], [9.9, 210], [10.0, 43]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 18250188, "no_urls": 793486,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 2288490], [0.1, 1070293], [0.2, 2884716], [0.3, 4089277],
   [0.4, 7269488], [0.5, 9021539], [0.6, 10173114], [0.7, 10356314], [0.8, 8387717],
   [0.9, 2377770]]'
@@ -363,6 +379,21 @@ src_langs: '[["si", 31793060], ["en", 17755764], ["cs", 1792498], ["it", 1746906
   14], ["cbk", 14], ["bh", 14], ["kv", 9], ["dsb", 9], ["myv", 7], ["dty", 6], ["sc",
   5], ["xal", 3], ["rue", 3], ["av", 2], ["mrj", 1], ["lez", 1], ["hif", 1], ["co",
   1]]'
+src_ngrams: '{"1": [[["ago"], 2483679], [["font"], 1962532], [["quot"], 1806603],
+  [["\u0d91\u0d9a"], 1736470], [["style="], 1732372]], "2": [[["years ago"], 639009],
+  [["sinhala subtitles"], 555687], [["months ago"], 546022], [["iskoola pota"], 424779],
+  [["><span style="], 399335]], "3": [[["with sinhala subtitles"], 362734], [["to
+  twittershare to"], 216822], [["share to twittershare"], 216817], [["to facebookshare
+  to"], 207116], [["twittershare to facebookshare"], 207099]], "4": [[["share to twittershare
+  to"], 216817], [["to twittershare to facebookshare"], 207099], [["twittershare to
+  facebookshare to"], 207096], [["to facebookshare to pinterest"], 205587], [["\u0dc0\u0dd2\u0dc2\u0dba\u0da7
+  \u0d85\u0daf\u0dcf\u0dbd\u0dc0 \u0dbd\u0dd2\u0dba\u0db1 \u0dbd\u0daf\u0dd2"], 125349]],
+  "5": [[["to twittershare to facebookshare to"], 207096], [["share to twittershare
+  to facebookshare"], 207095], [["twittershare to facebookshare to pinterest"], 205587],
+  [["\u0dad\u0dcf\u0d9a\u0dca\u0dc2\u0dab\u0dba \u0dc0\u0dd2\u0dc2\u0dba\u0da7 \u0d85\u0daf\u0dcf\u0dbd\u0dc0
+  \u0dbd\u0dd2\u0dba\u0db1 \u0dbd\u0daf\u0dd2"], 104333], [["\u0dc3\u0db1\u0dca\u0db1\u0dd2\u0dc0\u0dda\u0daf\u0db1
+  \u0dad\u0dcf\u0d9a\u0dca\u0dc2\u0dab\u0dba \u0dc0\u0dd2\u0dc2\u0dba\u0da7 \u0d85\u0daf\u0dcf\u0dbd\u0dc0
+  \u0dbd\u0dd2\u0dba\u0db1"], 101488]]}'
 src_sent_tokens: '[[0, 516155], [1, 8767164], [2, 6537873], [3, 6281107], [4, 3759825],
   [5, 6719745], [6, 3318264], [7, 2112887], [8, 1698363], [9, 2261683], [10, 1763474],
   [11, 1193127], [12, 1028602], [13, 846493], [14, 732550], [15, 662154], [16, 560899],
@@ -2547,19 +2578,3 @@ timestamp: 1711235260.818194
 ttr_src: 0.01
 unique_sents: 11050808
 warnings: []
-src_ngrams: '{"1": [[["ago"], 2483679], [["font"], 1962532], [["quot"], 1806603],
-  [["\u0d91\u0d9a"], 1736470], [["style="], 1732372]], "2": [[["years ago"], 639009],
-  [["sinhala subtitles"], 555687], [["months ago"], 546022], [["iskoola pota"], 424779],
-  [["><span style="], 399335]], "3": [[["with sinhala subtitles"], 362734], [["to
-  twittershare to"], 216822], [["share to twittershare"], 216817], [["to facebookshare
-  to"], 207116], [["twittershare to facebookshare"], 207099]], "4": [[["share to twittershare
-  to"], 216817], [["to twittershare to facebookshare"], 207099], [["twittershare to
-  facebookshare to"], 207096], [["to facebookshare to pinterest"], 205587], [["\u0dc0\u0dd2\u0dc2\u0dba\u0da7
-  \u0d85\u0daf\u0dcf\u0dbd\u0dc0 \u0dbd\u0dd2\u0dba\u0db1 \u0dbd\u0daf\u0dd2"], 125349]],
-  "5": [[["to twittershare to facebookshare to"], 207096], [["share to twittershare
-  to facebookshare"], 207095], [["twittershare to facebookshare to pinterest"], 205587],
-  [["\u0dad\u0dcf\u0d9a\u0dca\u0dc2\u0dab\u0dba \u0dc0\u0dd2\u0dc2\u0dba\u0da7 \u0d85\u0daf\u0dcf\u0dbd\u0dc0
-  \u0dbd\u0dd2\u0dba\u0db1 \u0dbd\u0daf\u0dd2"], 104333], [["\u0dc3\u0db1\u0dca\u0db1\u0dd2\u0dc0\u0dda\u0daf\u0db1
-  \u0dad\u0dcf\u0d9a\u0dca\u0dc2\u0dab\u0dba \u0dc0\u0dd2\u0dc2\u0dba\u0da7 \u0d85\u0daf\u0dcf\u0dbd\u0dc0
-  \u0dbd\u0dd2\u0dba\u0db1"], 101488]]}'
-docs_wds: '[[0.0, 17970], [0.1, 445], [0.2, 377], [0.3, 471], [0.4, 516], [0.5, 664], [0.6, 684], [0.7, 597], [0.8, 552], [0.9, 524], [1.0, 568], [1.1, 589], [1.2, 594], [1.3, 555], [1.4, 612], [1.5, 628], [1.6, 664], [1.7, 729], [1.8, 770], [1.9, 773], [2.0, 746], [2.1, 763], [2.2, 866], [2.3, 879], [2.4, 880], [2.5, 926], [2.6, 955], [2.7, 1043], [2.8, 1017], [2.9, 1096], [3.0, 1167], [3.1, 1254], [3.2, 1325], [3.3, 1547], [3.4, 1667], [3.5, 1658], [3.6, 1751], [3.7, 1734], [3.8, 2045], [3.9, 2141], [4.0, 2191], [4.1, 2325], [4.2, 2486], [4.3, 2580], [4.4, 2658], [4.5, 2777], [4.6, 2912], [4.7, 3045], [4.8, 3192], [4.9, 3486], [5.0, 3519], [5.1, 3771], [5.2, 3872], [5.3, 4152], [5.4, 4512], [5.5, 4434], [5.6, 4737], [5.7, 4875], [5.8, 4995], [5.9, 5057], [6.0, 5517], [6.1, 5667], [6.2, 5960], [6.3, 5934], [6.4, 6245], [6.5, 6284], [6.6, 6554], [6.7, 6526], [6.8, 6750], [6.9, 7108], [7.0, 6573], [7.1, 6494], [7.2, 6501], [7.3, 6379], [7.4, 6843], [7.5, 6833], [7.6, 6856], [7.7, 6814], [7.8, 6801], [7.9, 6400], [8.0, 6141], [8.1, 6032], [8.2, 5607], [8.3, 5410], [8.4, 5079], [8.5, 4778], [8.6, 4324], [8.7, 4245], [8.8, 4062], [8.9, 3787], [9.0, 3638], [9.1, 3367], [9.2, 2810], [9.3, 2280], [9.4, 1830], [9.5, 1444], [9.6, 1006], [9.7, 664], [9.8, 401], [9.9, 210], [10.0, 43]]'
