--- a/reports/mono-1.2/HPLT-docs.so.yaml
+++ b/reports/mono-1.2/HPLT-docs.so.yaml
@@ -1,3 +1,4 @@
+corpus: so_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 38], [0.1, 155], [0.2, 934], [0.3, 5478], [0.4, 13757], [0.5,
   49111], [0.6, 120715], [0.7, 85197], [0.8, 8221], [0.9, 84], [1.0, 1]]'
 docs_collections: '[["wide15", 79690], ["wide16", 78287], ["wide17", 66539], ["cc40",
@@ -204,9 +205,24 @@ docs_top100_tld: '[["com", 218176], ["net", 39991], ["org", 7475], ["so", 3692],
 docs_total: 283712
 docs_warnings:
 - docs_unmatching_21
-corpus: so_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 41.25, "no_urls": 2.98, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 55150], [0.1, 3337], [0.2, 3680], [0.3, 3871], [0.4, 4344], [0.5,
+  4597], [0.6, 4594], [0.7, 4671], [0.8, 4818], [0.9, 5113], [1.0, 5202], [1.1, 5062],
+  [1.2, 5062], [1.3, 5089], [1.4, 5195], [1.5, 5096], [1.6, 5121], [1.7, 5210], [1.8,
+  5257], [1.9, 5009], [2.0, 4860], [2.1, 5041], [2.2, 5051], [2.3, 4768], [2.4, 4770],
+  [2.5, 4777], [2.6, 4713], [2.7, 4558], [2.8, 4445], [2.9, 4320], [3.0, 4116], [3.1,
+  3953], [3.2, 3820], [3.3, 3638], [3.4, 3730], [3.5, 3379], [3.6, 3425], [3.7, 3040],
+  [3.8, 3080], [3.9, 2834], [4.0, 2760], [4.1, 2618], [4.2, 2618], [4.3, 2359], [4.4,
+  2360], [4.5, 2125], [4.6, 2192], [4.7, 2033], [4.8, 1948], [4.9, 1863], [5.0, 1832],
+  [5.1, 1721], [5.2, 1545], [5.3, 1535], [5.4, 1538], [5.5, 1399], [5.6, 1353], [5.7,
+  1319], [5.8, 1282], [5.9, 1146], [6.0, 1091], [6.1, 1166], [6.2, 1039], [6.3, 986],
+  [6.4, 998], [6.5, 924], [6.6, 893], [6.7, 819], [6.8, 843], [6.9, 732], [7.0, 696],
+  [7.1, 743], [7.2, 685], [7.3, 597], [7.4, 606], [7.5, 557], [7.6, 473], [7.7, 501],
+  [7.8, 498], [7.9, 442], [8.0, 408], [8.1, 364], [8.2, 354], [8.3, 281], [8.4, 268],
+  [8.5, 235], [8.6, 203], [8.7, 174], [8.8, 161], [8.9, 155], [9.0, 123], [9.1, 105],
+  [9.2, 72], [9.3, 60], [9.4, 45], [9.5, 36], [9.6, 20], [9.7, 11], [9.8, 4], [9.9,
+  1], [10.0, 1]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 9737562, "no_urls": 703465,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 1784133], [0.1, 621117], [0.2, 922702], [0.3, 1507790],
   [0.4, 2337961], [0.5, 3238025], [0.6, 3730036], [0.7, 3440387], [0.8, 3776309],
   [0.9, 2247751]]'
@@ -243,6 +259,16 @@ src_langs: '[["en", 11042296], ["so", 6635215], ["es", 840147], ["et", 431870], 
   ["vls", 48], ["bpy", 46], ["vec", 43], ["sc", 32], ["xal", 28], ["mai", 27], ["hif",
   19], ["eml", 18], ["lrc", 16], ["kv", 12], ["co", 9], ["dty", 7], ["pfl", 1], ["av",
   1]]'
+src_ngrams: '{"1": [[["iyo"], 2763688], [["ee"], 2524139], [["ah"], 2253410], [["u"],
+  1953608], [["la"], 1517808]], "2": [[["read more"], 186480], [["ah ee"], 180934],
+  [["mid ah"], 163683], [["contact us"], 149776], [["of the"], 149575]], "3": [[["all
+  rights reserved"], 133041], [["opens in new"], 102073], [["click to share"], 91413],
+  [["to share on"], 91405], [["news in english"], 83799]], "4": [[["opens in new window"],
+  102059], [["click to share on"], 91401], [["log into your account"], 33422], [["leave
+  a reply cancel"], 30785], [["a reply cancel reply"], 30576]], "5": [[["leave a reply
+  cancel reply"], 30569], [["of new posts by email"], 24673], [["click to share on
+  twitter"], 24433], [["notify me of new posts"], 24417], [["me of new posts by"],
+  24266]]}'
 src_sent_tokens: '[[0, 450383], [1, 5059597], [2, 3412890], [3, 1781004], [4, 1588273],
   [5, 1230558], [6, 934004], [7, 584408], [8, 669161], [9, 585617], [10, 570299],
   [11, 724012], [12, 611366], [13, 484600], [14, 392399], [15, 418235], [16, 339271],
@@ -807,14 +833,3 @@ ttr_src: 0.01
 unique_sents: 4714864
 warnings:
 - src_warning_tok_moses_en
-src_ngrams: '{"1": [[["iyo"], 2763688], [["ee"], 2524139], [["ah"], 2253410], [["u"],
-  1953608], [["la"], 1517808]], "2": [[["read more"], 186480], [["ah ee"], 180934],
-  [["mid ah"], 163683], [["contact us"], 149776], [["of the"], 149575]], "3": [[["all
-  rights reserved"], 133041], [["opens in new"], 102073], [["click to share"], 91413],
-  [["to share on"], 91405], [["news in english"], 83799]], "4": [[["opens in new window"],
-  102059], [["click to share on"], 91401], [["log into your account"], 33422], [["leave
-  a reply cancel"], 30785], [["a reply cancel reply"], 30576]], "5": [[["leave a reply
-  cancel reply"], 30569], [["of new posts by email"], 24673], [["click to share on
-  twitter"], 24433], [["notify me of new posts"], 24417], [["me of new posts by"],
-  24266]]}'
-docs_wds: '[[0.0, 55150], [0.1, 3337], [0.2, 3680], [0.3, 3871], [0.4, 4344], [0.5, 4597], [0.6, 4594], [0.7, 4671], [0.8, 4818], [0.9, 5113], [1.0, 5202], [1.1, 5062], [1.2, 5062], [1.3, 5089], [1.4, 5195], [1.5, 5096], [1.6, 5121], [1.7, 5210], [1.8, 5257], [1.9, 5009], [2.0, 4860], [2.1, 5041], [2.2, 5051], [2.3, 4768], [2.4, 4770], [2.5, 4777], [2.6, 4713], [2.7, 4558], [2.8, 4445], [2.9, 4320], [3.0, 4116], [3.1, 3953], [3.2, 3820], [3.3, 3638], [3.4, 3730], [3.5, 3379], [3.6, 3425], [3.7, 3040], [3.8, 3080], [3.9, 2834], [4.0, 2760], [4.1, 2618], [4.2, 2618], [4.3, 2359], [4.4, 2360], [4.5, 2125], [4.6, 2192], [4.7, 2033], [4.8, 1948], [4.9, 1863], [5.0, 1832], [5.1, 1721], [5.2, 1545], [5.3, 1535], [5.4, 1538], [5.5, 1399], [5.6, 1353], [5.7, 1319], [5.8, 1282], [5.9, 1146], [6.0, 1091], [6.1, 1166], [6.2, 1039], [6.3, 986], [6.4, 998], [6.5, 924], [6.6, 893], [6.7, 819], [6.8, 843], [6.9, 732], [7.0, 696], [7.1, 743], [7.2, 685], [7.3, 597], [7.4, 606], [7.5, 557], [7.6, 473], [7.7, 501], [7.8, 498], [7.9, 442], [8.0, 408], [8.1, 364], [8.2, 354], [8.3, 281], [8.4, 268], [8.5, 235], [8.6, 203], [8.7, 174], [8.8, 161], [8.9, 155], [9.0, 123], [9.1, 105], [9.2, 72], [9.3, 60], [9.4, 45], [9.5, 36], [9.6, 20], [9.7, 11], [9.8, 4], [9.9, 1], [10.0, 1]]'
