--- a/reports/mono-1.2/HPLT-docs.sw.yaml
+++ b/reports/mono-1.2/HPLT-docs.sw.yaml
@@ -1,3 +1,4 @@
+corpus: sw_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 23], [0.1, 50], [0.2, 350], [0.3, 953], [0.4, 4493], [0.5, 99646],
   [0.6, 428334], [0.7, 119660], [0.8, 44120], [0.9, 893], [1.0, 4]]'
 docs_collections: '[["wide16", 507456], ["cc40", 85040], ["wide15", 81792], ["wide17",
@@ -268,9 +269,24 @@ docs_top100_tld: '[["com", 539129], ["co.ke", 33315], ["co.tz", 31369], ["org", 
 docs_total: 698565
 docs_warnings:
 - docs_unmatching_39
-corpus: sw_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 29.14, "no_urls": 2.04, "no_bad_encoding":
-  0.02}'
+docs_wds: '[[0.0, 17508], [0.1, 2777], [0.2, 3195], [0.3, 3865], [0.4, 7023], [0.5,
+  14439], [0.6, 23755], [0.7, 33663], [0.8, 40494], [0.9, 44978], [1.0, 45084], [1.1,
+  41393], [1.2, 35539], [1.3, 29763], [1.4, 24901], [1.5, 21197], [1.6, 18263], [1.7,
+  15626], [1.8, 13393], [1.9, 11955], [2.0, 10752], [2.1, 8828], [2.2, 7855], [2.3,
+  6837], [2.4, 5577], [2.5, 4658], [2.6, 3829], [2.7, 3446], [2.8, 3103], [2.9, 2809],
+  [3.0, 2909], [3.1, 3004], [3.2, 3057], [3.3, 3223], [3.4, 3351], [3.5, 3439], [3.6,
+  3460], [3.7, 3422], [3.8, 3265], [3.9, 3504], [4.0, 3326], [4.1, 3222], [4.2, 3283],
+  [4.3, 3195], [4.4, 3495], [4.5, 3462], [4.6, 3828], [4.7, 3703], [4.8, 3729], [4.9,
+  3773], [5.0, 3875], [5.1, 4039], [5.2, 4054], [5.3, 4130], [5.4, 4275], [5.5, 4149],
+  [5.6, 4172], [5.7, 4178], [5.8, 4141], [5.9, 4279], [6.0, 4322], [6.1, 4348], [6.2,
+  4094], [6.3, 4049], [6.4, 4081], [6.5, 4037], [6.6, 3955], [6.7, 3891], [6.8, 3730],
+  [6.9, 3656], [7.0, 3508], [7.1, 3287], [7.2, 3134], [7.3, 2969], [7.4, 2920], [7.5,
+  2660], [7.6, 2456], [7.7, 2200], [7.8, 2193], [7.9, 1973], [8.0, 1928], [8.1, 1647],
+  [8.2, 1552], [8.3, 1386], [8.4, 1349], [8.5, 1052], [8.6, 1041], [8.7, 849], [8.8,
+  883], [8.9, 808], [9.0, 647], [9.1, 530], [9.2, 463], [9.3, 455], [9.4, 416], [9.5,
+  309], [9.6, 195], [9.7, 88], [9.8, 31], [9.9, 19], [10.0, 7]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 22220168, "no_urls": 1555564,
+  "no_bad_encoding": 15250}'
 monocleaner_scores: '[[0.0, 2316874], [0.1, 1123837], [0.2, 3595641], [0.3, 5887801],
   [0.4, 6591747], [0.5, 14651928], [0.6, 12743397], [0.7, 12603252], [0.8, 11561969],
   [0.9, 5176706]]'
@@ -307,6 +323,17 @@ src_langs: '[["en", 30376568], ["sw", 16688873], ["de", 3916456], ["fr", 3698776
   119], ["krc", 110], ["tyv", 109], ["sah", 105], ["yue", 94], ["sc", 82], ["bh",
   76], ["dty", 72], ["lrc", 61], ["bpy", 60], ["nah", 54], ["kv", 47], ["mrj", 32],
   ["hif", 26], ["mai", 25], ["myv", 22], ["rue", 17], ["pfl", 13], ["av", 13]]'
+src_ngrams: '{"1": [[["the"], 8403881], [["and"], 5541226], [["of"], 5116153], [["to"],
+  4386027], [["kitabu"], 3900398]], "2": [[["kuweka mbadala"], 1333470], [["hifadhi
+  kitabu"], 1323536], [["watch kitabu"], 1323535], [["vitabu vyote"], 1140830], [["of
+  the"], 1036971]], "3": [[["ingizo la nyaraka"], 1177419], [["lugha ya kiingereza"],
+  1087104], [["mwaka mmoja uliopita"], 515763], [["is licensed by"], 406869], [["icons
+  made by"], 406869]], "4": [[["made by freepik from"], 406865], [["icons made by
+  freepik"], 406865], [["by freepik from www.flaticon.com"], 406865], [["www.flaticon.com
+  is licensed by"], 406864], [["is licensed by cc"], 406864]], "5": [[["made by freepik
+  from www.flaticon.com"], 406865], [["icons made by freepik from"], 406865], [["www.flaticon.com
+  is licensed by cc"], 406864], [["from www.flaticon.com is licensed by"], 406864],
+  [["freepik from www.flaticon.com is licensed"], 406864]]}'
 src_sent_tokens: '[[0, 448276], [1, 9097089], [2, 6664386], [3, 5557692], [4, 9735558],
   [5, 5683622], [6, 5851992], [7, 2781023], [8, 3010218], [9, 3775599], [10, 4221593],
   [11, 2373160], [12, 2201585], [13, 1434291], [14, 1120336], [15, 1336194], [16,
@@ -1311,15 +1338,3 @@ ttr_src: 0.01
 unique_sents: 17500605
 warnings:
 - src_warning_tok_moses_en
-src_ngrams: '{"1": [[["the"], 8403881], [["and"], 5541226], [["of"], 5116153], [["to"],
-  4386027], [["kitabu"], 3900398]], "2": [[["kuweka mbadala"], 1333470], [["hifadhi
-  kitabu"], 1323536], [["watch kitabu"], 1323535], [["vitabu vyote"], 1140830], [["of
-  the"], 1036971]], "3": [[["ingizo la nyaraka"], 1177419], [["lugha ya kiingereza"],
-  1087104], [["mwaka mmoja uliopita"], 515763], [["is licensed by"], 406869], [["icons
-  made by"], 406869]], "4": [[["made by freepik from"], 406865], [["icons made by
-  freepik"], 406865], [["by freepik from www.flaticon.com"], 406865], [["www.flaticon.com
-  is licensed by"], 406864], [["is licensed by cc"], 406864]], "5": [[["made by freepik
-  from www.flaticon.com"], 406865], [["icons made by freepik from"], 406865], [["www.flaticon.com
-  is licensed by cc"], 406864], [["from www.flaticon.com is licensed by"], 406864],
-  [["freepik from www.flaticon.com is licensed"], 406864]]}'
-docs_wds: '[[0.0, 17508], [0.1, 2777], [0.2, 3195], [0.3, 3865], [0.4, 7023], [0.5, 14439], [0.6, 23755], [0.7, 33663], [0.8, 40494], [0.9, 44978], [1.0, 45084], [1.1, 41393], [1.2, 35539], [1.3, 29763], [1.4, 24901], [1.5, 21197], [1.6, 18263], [1.7, 15626], [1.8, 13393], [1.9, 11955], [2.0, 10752], [2.1, 8828], [2.2, 7855], [2.3, 6837], [2.4, 5577], [2.5, 4658], [2.6, 3829], [2.7, 3446], [2.8, 3103], [2.9, 2809], [3.0, 2909], [3.1, 3004], [3.2, 3057], [3.3, 3223], [3.4, 3351], [3.5, 3439], [3.6, 3460], [3.7, 3422], [3.8, 3265], [3.9, 3504], [4.0, 3326], [4.1, 3222], [4.2, 3283], [4.3, 3195], [4.4, 3495], [4.5, 3462], [4.6, 3828], [4.7, 3703], [4.8, 3729], [4.9, 3773], [5.0, 3875], [5.1, 4039], [5.2, 4054], [5.3, 4130], [5.4, 4275], [5.5, 4149], [5.6, 4172], [5.7, 4178], [5.8, 4141], [5.9, 4279], [6.0, 4322], [6.1, 4348], [6.2, 4094], [6.3, 4049], [6.4, 4081], [6.5, 4037], [6.6, 3955], [6.7, 3891], [6.8, 3730], [6.9, 3656], [7.0, 3508], [7.1, 3287], [7.2, 3134], [7.3, 2969], [7.4, 2920], [7.5, 2660], [7.6, 2456], [7.7, 2200], [7.8, 2193], [7.9, 1973], [8.0, 1928], [8.1, 1647], [8.2, 1552], [8.3, 1386], [8.4, 1349], [8.5, 1052], [8.6, 1041], [8.7, 849], [8.8, 883], [8.9, 808], [9.0, 647], [9.1, 530], [9.2, 463], [9.3, 455], [9.4, 416], [9.5, 309], [9.6, 195], [9.7, 88], [9.8, 31], [9.9, 19], [10.0, 7]]'
