--- a/reports/mono-1.2/HPLT-docs.tl.yaml
+++ b/reports/mono-1.2/HPLT-docs.tl.yaml
@@ -1,3 +1,4 @@
+corpus: tl_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 12], [0.1, 865], [0.2, 2221], [0.3, 8924], [0.4, 60039], [0.5,
   261905], [0.6, 176454], [0.7, 64685], [0.8, 9838], [0.9, 88]]'
 docs_collections: '[["wide16", 226475], ["cc40", 203390], ["wide15", 115766], ["wide17",
@@ -384,9 +385,24 @@ docs_top100_tld: '[["com", 346330], ["net", 36079], ["org", 29968], ["com.ph", 1
 docs_total: 585237
 docs_warnings:
 - docs_unmatching_206
-corpus: tl_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 29.24, "no_urls": 1.71, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 20550], [0.1, 1095], [0.2, 2436], [0.3, 37773], [0.4, 10030], [0.5,
+  1971], [0.6, 2404], [0.7, 2873], [0.8, 3606], [0.9, 4213], [1.0, 4955], [1.1, 5284],
+  [1.2, 5792], [1.3, 5892], [1.4, 6137], [1.5, 6221], [1.6, 6794], [1.7, 7387], [1.8,
+  7462], [1.9, 7808], [2.0, 8150], [2.1, 7949], [2.2, 8071], [2.3, 8645], [2.4, 9098],
+  [2.5, 9090], [2.6, 9282], [2.7, 9494], [2.8, 9403], [2.9, 9503], [3.0, 9006], [3.1,
+  8525], [3.2, 8237], [3.3, 7756], [3.4, 7661], [3.5, 7053], [3.6, 6879], [3.7, 6690],
+  [3.8, 6701], [3.9, 6658], [4.0, 6725], [4.1, 6597], [4.2, 6625], [4.3, 6639], [4.4,
+  6576], [4.5, 6616], [4.6, 6619], [4.7, 6560], [4.8, 6528], [4.9, 6714], [5.0, 6670],
+  [5.1, 6623], [5.2, 6624], [5.3, 6545], [5.4, 6558], [5.5, 6454], [5.6, 6181], [5.7,
+  6122], [5.8, 5843], [5.9, 5720], [6.0, 5603], [6.1, 5450], [6.2, 5412], [6.3, 5362],
+  [6.4, 5352], [6.5, 5212], [6.6, 5233], [6.7, 5339], [6.8, 5377], [6.9, 5221], [7.0,
+  5203], [7.1, 4808], [7.2, 5011], [7.3, 5203], [7.4, 4740], [7.5, 4973], [7.6, 5327],
+  [7.7, 4706], [7.8, 4947], [7.9, 4831], [8.0, 5234], [8.1, 4351], [8.2, 4183], [8.3,
+  3887], [8.4, 3379], [8.5, 2569], [8.6, 2260], [8.7, 2145], [8.8, 1916], [8.9, 1568],
+  [9.0, 1387], [9.1, 1132], [9.2, 960], [9.3, 784], [9.4, 683], [9.5, 537], [9.6,
+  378], [9.7, 210], [9.8, 121], [9.9, 114], [10.0, 56]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 30474552, "no_urls": 1782198,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 6775540], [0.1, 3840290], [0.2, 7468732], [0.3, 10347853],
   [0.4, 17272763], [0.5, 16715768], [0.6, 17753451], [0.7, 14319109], [0.8, 8201340],
   [0.9, 1527291]]'
@@ -423,6 +439,17 @@ src_langs: '[["en", 55478403], ["tl", 24150052], ["ceb", 2955993], ["fr", 235428
   ["vec", 206], ["mai", 185], ["bh", 160], ["frr", 145], ["yi", 131], ["dty", 117],
   ["bpy", 91], ["tyv", 80], ["mrj", 80], ["krc", 67], ["xal", 55], ["pfl", 50], ["lrc",
   41], ["myv", 35], ["av", 34], ["dsb", 33], ["hif", 20], ["lez", 16], ["rue", 10]]'
+src_ngrams: '{"1": [[["the"], 8231358], [["to"], 6859794], [["and"], 5257716], [["of"],
+  4599234], [["code"], 4322041]], "2": [[["zip code"], 1724206], [["postal code"],
+  1516374], [["digit zip"], 1028203], [["-digit postal"], 1027687], [["last line"],
+  981307]], "3": [[["-digit postal code"], 1027686], [["address pangunahing numero"],
+  980749], [["zip code idagdag"], 980627], [["buliding firm pangalan"], 980627], [["address
+  ikalawang number"], 980627]], "4": [[["id ng carrier ruta"], 980626], [["numero
+  ng congressional district"], 980616], [["preferred last line key"], 980612], [["loob
+  ng isang taon"], 785608], [["taon na ang nakalipas"], 785435]], "5": [[["accommodation
+  photo ng accommodation photo"], 139366], [["share to twittershare to facebookshare"],
+  126212], [["twittershare to facebookshare to pinterest"], 125672], [["to twittershare
+  to facebookshare to"], 125672], [["are you sure you want"], 121837]]}'
 src_sent_tokens: '[[0, 1177154], [1, 13648304], [2, 9692134], [3, 13088641], [4, 10081727],
   [5, 10800715], [6, 9443927], [7, 3323953], [8, 3960316], [9, 3252463], [10, 3708139],
   [11, 2940136], [12, 1485260], [13, 1384872], [14, 1053581], [15, 954657], [16, 868638],
@@ -1898,15 +1925,3 @@ ttr_src: 0.01
 unique_sents: 24808129
 warnings:
 - src_warning_tok_moses_en
-src_ngrams: '{"1": [[["the"], 8231358], [["to"], 6859794], [["and"], 5257716], [["of"],
-  4599234], [["code"], 4322041]], "2": [[["zip code"], 1724206], [["postal code"],
-  1516374], [["digit zip"], 1028203], [["-digit postal"], 1027687], [["last line"],
-  981307]], "3": [[["-digit postal code"], 1027686], [["address pangunahing numero"],
-  980749], [["zip code idagdag"], 980627], [["buliding firm pangalan"], 980627], [["address
-  ikalawang number"], 980627]], "4": [[["id ng carrier ruta"], 980626], [["numero
-  ng congressional district"], 980616], [["preferred last line key"], 980612], [["loob
-  ng isang taon"], 785608], [["taon na ang nakalipas"], 785435]], "5": [[["accommodation
-  photo ng accommodation photo"], 139366], [["share to twittershare to facebookshare"],
-  126212], [["twittershare to facebookshare to pinterest"], 125672], [["to twittershare
-  to facebookshare to"], 125672], [["are you sure you want"], 121837]]}'
-docs_wds: '[[0.0, 20550], [0.1, 1095], [0.2, 2436], [0.3, 37773], [0.4, 10030], [0.5, 1971], [0.6, 2404], [0.7, 2873], [0.8, 3606], [0.9, 4213], [1.0, 4955], [1.1, 5284], [1.2, 5792], [1.3, 5892], [1.4, 6137], [1.5, 6221], [1.6, 6794], [1.7, 7387], [1.8, 7462], [1.9, 7808], [2.0, 8150], [2.1, 7949], [2.2, 8071], [2.3, 8645], [2.4, 9098], [2.5, 9090], [2.6, 9282], [2.7, 9494], [2.8, 9403], [2.9, 9503], [3.0, 9006], [3.1, 8525], [3.2, 8237], [3.3, 7756], [3.4, 7661], [3.5, 7053], [3.6, 6879], [3.7, 6690], [3.8, 6701], [3.9, 6658], [4.0, 6725], [4.1, 6597], [4.2, 6625], [4.3, 6639], [4.4, 6576], [4.5, 6616], [4.6, 6619], [4.7, 6560], [4.8, 6528], [4.9, 6714], [5.0, 6670], [5.1, 6623], [5.2, 6624], [5.3, 6545], [5.4, 6558], [5.5, 6454], [5.6, 6181], [5.7, 6122], [5.8, 5843], [5.9, 5720], [6.0, 5603], [6.1, 5450], [6.2, 5412], [6.3, 5362], [6.4, 5352], [6.5, 5212], [6.6, 5233], [6.7, 5339], [6.8, 5377], [6.9, 5221], [7.0, 5203], [7.1, 4808], [7.2, 5011], [7.3, 5203], [7.4, 4740], [7.5, 4973], [7.6, 5327], [7.7, 4706], [7.8, 4947], [7.9, 4831], [8.0, 5234], [8.1, 4351], [8.2, 4183], [8.3, 3887], [8.4, 3379], [8.5, 2569], [8.6, 2260], [8.7, 2145], [8.8, 1916], [8.9, 1568], [9.0, 1387], [9.1, 1132], [9.2, 960], [9.3, 784], [9.4, 683], [9.5, 537], [9.6, 378], [9.7, 210], [9.8, 121], [9.9, 114], [10.0, 56]]'
