--- a/reports/mono-1.2/HPLT-docs.eo.yaml
+++ b/reports/mono-1.2/HPLT-docs.eo.yaml
@@ -1,3 +1,4 @@
+corpus: eo_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 23], [0.2, 353], [0.3, 1217], [0.4, 6285], [0.5, 19372], [0.6,
   28226], [0.7, 11086], [0.8, 1156], [0.9, 24]]'
 docs_collections: '[["cc40", 39350], ["wide15", 14623], ["wide17", 6944], ["wide16",
@@ -216,9 +217,23 @@ docs_top100_tld: '[["org", 32952], ["com", 12836], ["net", 4064], ["ru", 2065], 
 docs_total: 67808
 docs_warnings:
 - docs_unmatching_66
-corpus: eo_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 42.3, "no_urls": 1.92, "no_bad_encoding":
-  0.12}'
+docs_wds: '[[0.0, 1605], [0.1, 95], [0.2, 88], [0.3, 82], [0.4, 63], [0.5, 87], [0.6,
+  96], [0.7, 95], [0.8, 106], [0.9, 122], [1.0, 133], [1.1, 160], [1.2, 196], [1.3,
+  193], [1.4, 201], [1.5, 209], [1.6, 216], [1.7, 219], [1.8, 246], [1.9, 238], [2.0,
+  272], [2.1, 270], [2.2, 271], [2.3, 311], [2.4, 360], [2.5, 420], [2.6, 487], [2.7,
+  594], [2.8, 552], [2.9, 498], [3.0, 444], [3.1, 454], [3.2, 427], [3.3, 430], [3.4,
+  452], [3.5, 452], [3.6, 465], [3.7, 449], [3.8, 445], [3.9, 490], [4.0, 503], [4.1,
+  493], [4.2, 521], [4.3, 618], [4.4, 551], [4.5, 606], [4.6, 660], [4.7, 639], [4.8,
+  719], [4.9, 749], [5.0, 773], [5.1, 774], [5.2, 729], [5.3, 730], [5.4, 715], [5.5,
+  795], [5.6, 781], [5.7, 892], [5.8, 899], [5.9, 919], [6.0, 938], [6.1, 1010], [6.2,
+  989], [6.3, 1060], [6.4, 1035], [6.5, 989], [6.6, 1085], [6.7, 1123], [6.8, 1164],
+  [6.9, 1168], [7.0, 1194], [7.1, 1318], [7.2, 1308], [7.3, 1211], [7.4, 1353], [7.5,
+  1330], [7.6, 1295], [7.7, 1261], [7.8, 1281], [7.9, 1259], [8.0, 1224], [8.1, 1225],
+  [8.2, 1209], [8.3, 1115], [8.4, 1090], [8.5, 1059], [8.6, 1090], [8.7, 1053], [8.8,
+  1071], [8.9, 1012], [9.0, 920], [9.1, 903], [9.2, 812], [9.3, 807], [9.4, 765],
+  [9.5, 636], [9.6, 565], [9.7, 423], [9.8, 261], [9.9, 111], [10.0, 27]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 3717440, "no_urls": 168734,
+  "no_bad_encoding": 10545}'
 monocleaner_scores: '[[0.0, 892759], [0.1, 304574], [0.2, 430149], [0.3, 672924],
   [0.4, 945747], [0.5, 1227661], [0.6, 1305447], [0.7, 1432056], [0.8, 1363257], [0.9,
   213702]]'
@@ -254,6 +269,18 @@ src_langs: '[["eo", 5103517], ["en", 1137434], ["es", 376492], ["fr", 308542], [
   37], ["dsb", 26], ["vep", 25], ["yo", 14], ["mrj", 8], ["kv", 7], ["frr", 7], ["av",
   7], ["rue", 5], ["pfl", 5], ["co", 5], ["vls", 3], ["sc", 3], ["lez", 3], ["lrc",
   2], ["dty", 1]]'
+src_ngrams: '{"1": [[["pri"], 634446], [["el"], 424536], [["kun"], 413006], [["kiel"],
+  409979], [["per"], 261033]], "2": [[["redakti fonton"], 82508], [["povas esti"],
+  31378], [["of the"], 29855], [["pri vikipedio"], 29413], [["regularo pri"], 23222]],
+  "3": [[["regularo pri respekto"], 22872], [["deklaro pri kuketoj"], 22102], [["pa\u011do
+  estis lastafoje"], 18223], [["la\u016d la permesilo"], 13996], [["ligiloj \u0109i
+  tien"], 13265]], "4": [[["respekto de la privateco"], 22877], [["pa\u011do estis
+  lastafoje redaktita"], 18223], [["informoj pri la pa\u011do"], 13081], [["la\u016d
+  la permesilo krea"], 10565], [["permesilo krea komuna\u0135o atribuite-samkondi\u0109e"],
+  9931]], "5": [[["pri respekto de la privateco"], 22872], [["la\u016d la permesilo
+  krea komuna\u0135o"], 10565], [["vidu la uzkondi\u0109ojn por detaloj"], 9811],
+  [["disponeblas la\u016d la permesilo krea"], 9786], [["teksto disponeblas la\u016d
+  la permesilo"], 9771]]}'
 src_sent_tokens: '[[0, 98516], [1, 2023627], [2, 1121192], [3, 721566], [4, 535427],
   [5, 648384], [6, 347704], [7, 292494], [8, 243543], [9, 198237], [10, 185563], [11,
   171953], [12, 124709], [13, 117199], [14, 102991], [15, 97712], [16, 93550], [17,
@@ -901,16 +928,3 @@ ttr_src: 0.03
 unique_sents: 3352630
 warnings:
 - src_warning_tok_moses_en
-src_ngrams: '{"1": [[["pri"], 634446], [["el"], 424536], [["kun"], 413006], [["kiel"],
-  409979], [["per"], 261033]], "2": [[["redakti fonton"], 82508], [["povas esti"],
-  31378], [["of the"], 29855], [["pri vikipedio"], 29413], [["regularo pri"], 23222]],
-  "3": [[["regularo pri respekto"], 22872], [["deklaro pri kuketoj"], 22102], [["pa\u011do
-  estis lastafoje"], 18223], [["la\u016d la permesilo"], 13996], [["ligiloj \u0109i
-  tien"], 13265]], "4": [[["respekto de la privateco"], 22877], [["pa\u011do estis
-  lastafoje redaktita"], 18223], [["informoj pri la pa\u011do"], 13081], [["la\u016d
-  la permesilo krea"], 10565], [["permesilo krea komuna\u0135o atribuite-samkondi\u0109e"],
-  9931]], "5": [[["pri respekto de la privateco"], 22872], [["la\u016d la permesilo
-  krea komuna\u0135o"], 10565], [["vidu la uzkondi\u0109ojn por detaloj"], 9811],
-  [["disponeblas la\u016d la permesilo krea"], 9786], [["teksto disponeblas la\u016d
-  la permesilo"], 9771]]}'
-docs_wds: '[[0.0, 1605], [0.1, 95], [0.2, 88], [0.3, 82], [0.4, 63], [0.5, 87], [0.6, 96], [0.7, 95], [0.8, 106], [0.9, 122], [1.0, 133], [1.1, 160], [1.2, 196], [1.3, 193], [1.4, 201], [1.5, 209], [1.6, 216], [1.7, 219], [1.8, 246], [1.9, 238], [2.0, 272], [2.1, 270], [2.2, 271], [2.3, 311], [2.4, 360], [2.5, 420], [2.6, 487], [2.7, 594], [2.8, 552], [2.9, 498], [3.0, 444], [3.1, 454], [3.2, 427], [3.3, 430], [3.4, 452], [3.5, 452], [3.6, 465], [3.7, 449], [3.8, 445], [3.9, 490], [4.0, 503], [4.1, 493], [4.2, 521], [4.3, 618], [4.4, 551], [4.5, 606], [4.6, 660], [4.7, 639], [4.8, 719], [4.9, 749], [5.0, 773], [5.1, 774], [5.2, 729], [5.3, 730], [5.4, 715], [5.5, 795], [5.6, 781], [5.7, 892], [5.8, 899], [5.9, 919], [6.0, 938], [6.1, 1010], [6.2, 989], [6.3, 1060], [6.4, 1035], [6.5, 989], [6.6, 1085], [6.7, 1123], [6.8, 1164], [6.9, 1168], [7.0, 1194], [7.1, 1318], [7.2, 1308], [7.3, 1211], [7.4, 1353], [7.5, 1330], [7.6, 1295], [7.7, 1261], [7.8, 1281], [7.9, 1259], [8.0, 1224], [8.1, 1225], [8.2, 1209], [8.3, 1115], [8.4, 1090], [8.5, 1059], [8.6, 1090], [8.7, 1053], [8.8, 1071], [8.9, 1012], [9.0, 920], [9.1, 903], [9.2, 812], [9.3, 807], [9.4, 765], [9.5, 636], [9.6, 565], [9.7, 423], [9.8, 261], [9.9, 111], [10.0, 27]]'
