--- a/reports/mono-1.2/HPLT-docs.gu.yaml
+++ b/reports/mono-1.2/HPLT-docs.gu.yaml
@@ -1,3 +1,4 @@
+corpus: gu_1.jsonl.tsv
 docs_avg_lm: '[[0.2, 74], [0.3, 590], [0.4, 7646], [0.5, 31967], [0.6, 128760], [0.7,
   90941], [0.8, 4399], [0.9, 395]]'
 docs_collections: '[["cc40", 163634], ["wide16", 40008], ["wide17", 33351], ["wide15",
@@ -229,9 +230,24 @@ docs_top100_tld: '[["com", 168762], ["in", 50878], ["co.in", 17765], ["org", 147
 docs_total: 264816
 docs_warnings:
 - docs_unmatching_44
-corpus: gu_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 46.26, "no_urls": 1.48, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 11742], [0.1, 442], [0.2, 450], [0.3, 501], [0.4, 580], [0.5, 452],
+  [0.6, 423], [0.7, 381], [0.8, 418], [0.9, 363], [1.0, 329], [1.1, 350], [1.2, 367],
+  [1.3, 359], [1.4, 381], [1.5, 392], [1.6, 451], [1.7, 477], [1.8, 521], [1.9, 564],
+  [2.0, 549], [2.1, 607], [2.2, 622], [2.3, 569], [2.4, 631], [2.5, 657], [2.6, 739],
+  [2.7, 731], [2.8, 800], [2.9, 939], [3.0, 1032], [3.1, 1098], [3.2, 1272], [3.3,
+  1281], [3.4, 1305], [3.5, 1279], [3.6, 1362], [3.7, 1478], [3.8, 1627], [3.9, 1809],
+  [4.0, 1904], [4.1, 1947], [4.2, 2149], [4.3, 2286], [4.4, 2353], [4.5, 2342], [4.6,
+  2629], [4.7, 2572], [4.8, 2769], [4.9, 2825], [5.0, 2887], [5.1, 3144], [5.2, 3142],
+  [5.3, 3474], [5.4, 3673], [5.5, 3778], [5.6, 3957], [5.7, 4189], [5.8, 4331], [5.9,
+  4661], [6.0, 4588], [6.1, 4916], [6.2, 5174], [6.3, 5693], [6.4, 5883], [6.5, 5774],
+  [6.6, 6070], [6.7, 6206], [6.8, 6916], [6.9, 7178], [7.0, 7172], [7.1, 7776], [7.2,
+  8458], [7.3, 8322], [7.4, 8512], [7.5, 7799], [7.6, 7139], [7.7, 6634], [7.8, 5935],
+  [7.9, 5303], [8.0, 5049], [8.1, 4446], [8.2, 3798], [8.3, 3310], [8.4, 2675], [8.5,
+  2229], [8.6, 1887], [8.7, 1717], [8.8, 1548], [8.9, 1143], [9.0, 982], [9.1, 853],
+  [9.2, 717], [9.3, 517], [9.4, 419], [9.5, 311], [9.6, 202], [9.7, 145], [9.8, 54],
+  [9.9, 19], [10.0, 5]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 15146871, "no_urls": 484595,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 1680713], [0.1, 547961], [0.2, 1059184], [0.3, 1556730],
   [0.4, 3012867], [0.5, 4548867], [0.6, 6668281], [0.7, 7147223], [0.8, 5344279],
   [0.9, 1176808]]'
@@ -266,6 +282,17 @@ src_langs: '[["gu", 18475168], ["en", 11278311], ["es", 369782], ["fr", 313341],
   ["vep", 22], ["nap", 19], ["krc", 19], ["vec", 14], ["pfl", 14], ["scn", 13], ["frr",
   12], ["lez", 11], ["os", 10], ["cbk", 8], ["nah", 6], ["hif", 5], ["sc", 4], ["xal",
   3], ["myv", 3], ["dsb", 3], ["vls", 2], ["co", 2], ["av", 2], ["mrj", 1]]'
+src_ngrams: '{"1": [[["\u0ab8\u0abe\u0aa5\u0ac7"], 1042879], [["to"], 867809], [["the"],
+  840854], [["in"], 793484], [["news"], 786731]], "2": [[["all rights"], 123055],
+  [["rights reserved"], 122689], [["pm ist"], 114033], [["privacy policy"], 109168],
+  [["gujarati news"], 103074]], "3": [[["all rights reserved"], 122480], [["skip to
+  content"], 56309], [["your email address"], 51537], [["i am gujarat"], 50032], [["share
+  to twittershare"], 41610]], "4": [[["share to twittershare to"], 41605], [["twittershare
+  to facebookshare to"], 41039], [["to twittershare to facebookshare"], 41039], [["to
+  facebookshare to pinterest"], 41037], [["leave a reply cancel"], 35191]], "5": [[["to
+  twittershare to facebookshare to"], 41039], [["share to twittershare to facebookshare"],
+  41039], [["twittershare to facebookshare to pinterest"], 41037], [["leave a reply
+  cancel reply"], 35191], [["website in this browser for"], 33917]]}'
 src_sent_tokens: '[[1, 8150990], [2, 5582691], [3, 2637019], [4, 1728465], [5, 2072199],
   [6, 1076281], [7, 997245], [8, 884135], [9, 861621], [10, 828825], [11, 688683],
   [12, 673887], [13, 574460], [14, 508446], [15, 449952], [16, 383462], [17, 334433],
@@ -1038,15 +1065,3 @@ timestamp: 1710707581.286142
 ttr_src: 0.01
 unique_sents: 6863973
 warnings: []
-src_ngrams: '{"1": [[["\u0ab8\u0abe\u0aa5\u0ac7"], 1042879], [["to"], 867809], [["the"],
-  840854], [["in"], 793484], [["news"], 786731]], "2": [[["all rights"], 123055],
-  [["rights reserved"], 122689], [["pm ist"], 114033], [["privacy policy"], 109168],
-  [["gujarati news"], 103074]], "3": [[["all rights reserved"], 122480], [["skip to
-  content"], 56309], [["your email address"], 51537], [["i am gujarat"], 50032], [["share
-  to twittershare"], 41610]], "4": [[["share to twittershare to"], 41605], [["twittershare
-  to facebookshare to"], 41039], [["to twittershare to facebookshare"], 41039], [["to
-  facebookshare to pinterest"], 41037], [["leave a reply cancel"], 35191]], "5": [[["to
-  twittershare to facebookshare to"], 41039], [["share to twittershare to facebookshare"],
-  41039], [["twittershare to facebookshare to pinterest"], 41037], [["leave a reply
-  cancel reply"], 35191], [["website in this browser for"], 33917]]}'
-docs_wds: '[[0.0, 11742], [0.1, 442], [0.2, 450], [0.3, 501], [0.4, 580], [0.5, 452], [0.6, 423], [0.7, 381], [0.8, 418], [0.9, 363], [1.0, 329], [1.1, 350], [1.2, 367], [1.3, 359], [1.4, 381], [1.5, 392], [1.6, 451], [1.7, 477], [1.8, 521], [1.9, 564], [2.0, 549], [2.1, 607], [2.2, 622], [2.3, 569], [2.4, 631], [2.5, 657], [2.6, 739], [2.7, 731], [2.8, 800], [2.9, 939], [3.0, 1032], [3.1, 1098], [3.2, 1272], [3.3, 1281], [3.4, 1305], [3.5, 1279], [3.6, 1362], [3.7, 1478], [3.8, 1627], [3.9, 1809], [4.0, 1904], [4.1, 1947], [4.2, 2149], [4.3, 2286], [4.4, 2353], [4.5, 2342], [4.6, 2629], [4.7, 2572], [4.8, 2769], [4.9, 2825], [5.0, 2887], [5.1, 3144], [5.2, 3142], [5.3, 3474], [5.4, 3673], [5.5, 3778], [5.6, 3957], [5.7, 4189], [5.8, 4331], [5.9, 4661], [6.0, 4588], [6.1, 4916], [6.2, 5174], [6.3, 5693], [6.4, 5883], [6.5, 5774], [6.6, 6070], [6.7, 6206], [6.8, 6916], [6.9, 7178], [7.0, 7172], [7.1, 7776], [7.2, 8458], [7.3, 8322], [7.4, 8512], [7.5, 7799], [7.6, 7139], [7.7, 6634], [7.8, 5935], [7.9, 5303], [8.0, 5049], [8.1, 4446], [8.2, 3798], [8.3, 3310], [8.4, 2675], [8.5, 2229], [8.6, 1887], [8.7, 1717], [8.8, 1548], [8.9, 1143], [9.0, 982], [9.1, 853], [9.2, 717], [9.3, 517], [9.4, 419], [9.5, 311], [9.6, 202], [9.7, 145], [9.8, 54], [9.9, 19], [10.0, 5]]'
