--- a/reports/mono-1.2/HPLT-docs.is.yaml
+++ b/reports/mono-1.2/HPLT-docs.is.yaml
@@ -1,3 +1,4 @@
+corpus: is_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 14], [0.2, 371], [0.3, 7352], [0.4, 33730], [0.5, 141497], [0.6,
   240685], [0.7, 56387], [0.8, 1169], [0.9, 1]]'
 docs_collections: '[["cc40", 252009], ["wide15", 118704], ["wide17", 59766], ["wide16",
@@ -313,9 +314,24 @@ docs_top100_tld: '[["is", 349964], ["com", 77268], ["org", 18090], ["net", 11618
 docs_total: 481328
 docs_warnings:
 - docs_unmatching_122
-corpus: is_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 46.98, "no_urls": 2.48, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 21478], [0.1, 1613], [0.2, 1573], [0.3, 1731], [0.4, 1637], [0.5,
+  1649], [0.6, 1566], [0.7, 1517], [0.8, 1567], [0.9, 1499], [1.0, 1517], [1.1, 1557],
+  [1.2, 1535], [1.3, 1614], [1.4, 1621], [1.5, 1649], [1.6, 1727], [1.7, 1795], [1.8,
+  1845], [1.9, 1830], [2.0, 1902], [2.1, 1998], [2.2, 2047], [2.3, 2187], [2.4, 2375],
+  [2.5, 2474], [2.6, 2623], [2.7, 2517], [2.8, 2617], [2.9, 2520], [3.0, 2635], [3.1,
+  2639], [3.2, 2783], [3.3, 2932], [3.4, 3004], [3.5, 3134], [3.6, 3381], [3.7, 3404],
+  [3.8, 3608], [3.9, 3796], [4.0, 3901], [4.1, 4067], [4.2, 4228], [4.3, 4437], [4.4,
+  4460], [4.5, 4696], [4.6, 4712], [4.7, 4775], [4.8, 4888], [4.9, 5057], [5.0, 5074],
+  [5.1, 5265], [5.2, 5354], [5.3, 5527], [5.4, 5771], [5.5, 5902], [5.6, 6229], [5.7,
+  6461], [5.8, 6870], [5.9, 6963], [6.0, 7235], [6.1, 7291], [6.2, 7867], [6.3, 7999],
+  [6.4, 8501], [6.5, 8451], [6.6, 9171], [6.7, 9077], [6.8, 9315], [6.9, 9937], [7.0,
+  9744], [7.1, 10211], [7.2, 10601], [7.3, 9860], [7.4, 10489], [7.5, 11032], [7.6,
+  10399], [7.7, 10112], [7.8, 10775], [7.9, 10346], [8.0, 10793], [8.1, 9642], [8.2,
+  7918], [8.3, 6851], [8.4, 5891], [8.5, 5052], [8.6, 4660], [8.7, 4463], [8.8, 4005],
+  [8.9, 3966], [9.0, 3377], [9.1, 2834], [9.2, 2460], [9.3, 2325], [9.4, 2018], [9.5,
+  1766], [9.6, 1414], [9.7, 976], [9.8, 546], [9.9, 177], [10.0, 48]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 29217143, "no_urls": 1542326,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 3698820], [0.1, 1419750], [0.2, 2888763], [0.3, 4622876],
   [0.4, 7743442], [0.5, 10577926], [0.6, 12622334], [0.7, 12644022], [0.8, 5403293],
   [0.9, 569373]]'
@@ -352,6 +368,18 @@ src_langs: '[["is", 34278161], ["en", 10603208], ["de", 2291969], ["pt", 1567483
   77], ["sah", 74], ["lrc", 70], ["dsb", 60], ["tyv", 59], ["krc", 56], ["mrj", 45],
   ["xal", 33], ["lez", 29], ["frr", 29], ["bh", 28], ["sc", 21], ["myv", 15], ["vls",
   12], ["rue", 11], ["av", 6], ["co", 1]]'
+src_ngrams: '{"1": [[["var"], 2408989], [["the"], 1902422], [["a"], 1596154], [["hafa"],
+  1271463], [["and"], 1097022]], "2": [[["hafa samband"], 193006], [["gistista\u00f0num
+  mynd"], 172266], [["in the"], 167965], [["lesa meira"], 160579], [["ey\u00f0a breyta"],
+  112195]], "3": [[["mynd af gistista\u00f0num"], 185686], [["s\u00fdna meira s\u00fdna"],
+  79671], [["f\u00e6r g\u00f3\u00f0a einkunn"], 78014], [["me\u00f0alver\u00f0 \u00e1
+  n\u00f3tt"], 67449], [["h\u00e9r \u00e1 landi"], 62376]], "4": [[["mynd af gistista\u00f0num
+  mynd"], 172266], [["gistista\u00f0num mynd af gistista\u00f0num"], 172266], [["cookie
+  is set by"], 34405], [["opnast \u00ed n\u00fdjum glugga"], 33409], [["the cookies
+  in the"], 29360]], "5": [[["gistista\u00f0num mynd af gistista\u00f0num mynd"],
+  167795], [["twitterdeila \u00e1 facebookdeila \u00e1 pinterest"], 41666], [["deila
+  \u00e1 twitterdeila \u00e1 facebookdeila"], 41666], [["user consent for the cookies"],
+  29359], [["the user consent for the"], 29359]]}'
 src_sent_tokens: '[[0, 1319603], [1, 15693027], [2, 9659596], [3, 6601810], [4, 4344422],
   [5, 4777312], [6, 2313152], [7, 1723830], [8, 1387711], [9, 1231973], [10, 1021508],
   [11, 901077], [12, 809083], [13, 629583], [14, 566775], [15, 449841], [16, 396849],
@@ -1339,16 +1367,3 @@ timestamp: 1711093467.0861824
 ttr_src: 0.01
 unique_sents: 14225502
 warnings: []
-src_ngrams: '{"1": [[["var"], 2408989], [["the"], 1902422], [["a"], 1596154], [["hafa"],
-  1271463], [["and"], 1097022]], "2": [[["hafa samband"], 193006], [["gistista\u00f0num
-  mynd"], 172266], [["in the"], 167965], [["lesa meira"], 160579], [["ey\u00f0a breyta"],
-  112195]], "3": [[["mynd af gistista\u00f0num"], 185686], [["s\u00fdna meira s\u00fdna"],
-  79671], [["f\u00e6r g\u00f3\u00f0a einkunn"], 78014], [["me\u00f0alver\u00f0 \u00e1
-  n\u00f3tt"], 67449], [["h\u00e9r \u00e1 landi"], 62376]], "4": [[["mynd af gistista\u00f0num
-  mynd"], 172266], [["gistista\u00f0num mynd af gistista\u00f0num"], 172266], [["cookie
-  is set by"], 34405], [["opnast \u00ed n\u00fdjum glugga"], 33409], [["the cookies
-  in the"], 29360]], "5": [[["gistista\u00f0num mynd af gistista\u00f0num mynd"],
-  167795], [["twitterdeila \u00e1 facebookdeila \u00e1 pinterest"], 41666], [["deila
-  \u00e1 twitterdeila \u00e1 facebookdeila"], 41666], [["user consent for the cookies"],
-  29359], [["the user consent for the"], 29359]]}'
-docs_wds: '[[0.0, 21478], [0.1, 1613], [0.2, 1573], [0.3, 1731], [0.4, 1637], [0.5, 1649], [0.6, 1566], [0.7, 1517], [0.8, 1567], [0.9, 1499], [1.0, 1517], [1.1, 1557], [1.2, 1535], [1.3, 1614], [1.4, 1621], [1.5, 1649], [1.6, 1727], [1.7, 1795], [1.8, 1845], [1.9, 1830], [2.0, 1902], [2.1, 1998], [2.2, 2047], [2.3, 2187], [2.4, 2375], [2.5, 2474], [2.6, 2623], [2.7, 2517], [2.8, 2617], [2.9, 2520], [3.0, 2635], [3.1, 2639], [3.2, 2783], [3.3, 2932], [3.4, 3004], [3.5, 3134], [3.6, 3381], [3.7, 3404], [3.8, 3608], [3.9, 3796], [4.0, 3901], [4.1, 4067], [4.2, 4228], [4.3, 4437], [4.4, 4460], [4.5, 4696], [4.6, 4712], [4.7, 4775], [4.8, 4888], [4.9, 5057], [5.0, 5074], [5.1, 5265], [5.2, 5354], [5.3, 5527], [5.4, 5771], [5.5, 5902], [5.6, 6229], [5.7, 6461], [5.8, 6870], [5.9, 6963], [6.0, 7235], [6.1, 7291], [6.2, 7867], [6.3, 7999], [6.4, 8501], [6.5, 8451], [6.6, 9171], [6.7, 9077], [6.8, 9315], [6.9, 9937], [7.0, 9744], [7.1, 10211], [7.2, 10601], [7.3, 9860], [7.4, 10489], [7.5, 11032], [7.6, 10399], [7.7, 10112], [7.8, 10775], [7.9, 10346], [8.0, 10793], [8.1, 9642], [8.2, 7918], [8.3, 6851], [8.4, 5891], [8.5, 5052], [8.6, 4660], [8.7, 4463], [8.8, 4005], [8.9, 3966], [9.0, 3377], [9.1, 2834], [9.2, 2460], [9.3, 2325], [9.4, 2018], [9.5, 1766], [9.6, 1414], [9.7, 976], [9.8, 546], [9.9, 177], [10.0, 48]]'
