--- a/reports/mono-1.2/HPLT-docs.la.yaml
+++ b/reports/mono-1.2/HPLT-docs.la.yaml
@@ -1,3 +1,4 @@
+corpus: la_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 20], [0.2, 938], [0.3, 7776], [0.4, 38389], [0.5, 131006], [0.6,
   96814], [0.7, 22872], [0.8, 3364], [0.9, 234]]'
 docs_collections: '[["cc40", 129420], ["wide17", 100545], ["wide15", 51067], ["wide16",
@@ -268,9 +269,24 @@ docs_top100_tld: '[["com", 153084], ["org", 25061], ["de", 10133], ["it", 8992],
 docs_total: 301702
 docs_warnings:
 - docs_unmatching_289
-corpus: la_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 36.86, "no_urls": 2.08, "no_bad_encoding":
-  0.01}'
+docs_wds: '[[0.0, 32107], [0.1, 850], [0.2, 901], [0.3, 1048], [0.4, 1405], [0.5,
+  1497], [0.6, 1667], [0.7, 1789], [0.8, 1983], [0.9, 2058], [1.0, 2034], [1.1, 2136],
+  [1.2, 2276], [1.3, 2479], [1.4, 2529], [1.5, 2513], [1.6, 2661], [1.7, 2663], [1.8,
+  2619], [1.9, 2799], [2.0, 2858], [2.1, 3065], [2.2, 3337], [2.3, 3525], [2.4, 3622],
+  [2.5, 3865], [2.6, 4087], [2.7, 4096], [2.8, 4233], [2.9, 4630], [3.0, 4868], [3.1,
+  5081], [3.2, 5124], [3.3, 5150], [3.4, 5172], [3.5, 5200], [3.6, 5381], [3.7, 5146],
+  [3.8, 5280], [3.9, 5284], [4.0, 5420], [4.1, 5259], [4.2, 5208], [4.3, 5083], [4.4,
+  5106], [4.5, 4968], [4.6, 4911], [4.7, 4692], [4.8, 4624], [4.9, 4491], [5.0, 4229],
+  [5.1, 4181], [5.2, 4102], [5.3, 4012], [5.4, 3936], [5.5, 3874], [5.6, 3586], [5.7,
+  3367], [5.8, 3349], [5.9, 3061], [6.0, 2995], [6.1, 2894], [6.2, 2827], [6.3, 2565],
+  [6.4, 2433], [6.5, 2338], [6.6, 2290], [6.7, 2170], [6.8, 2079], [6.9, 2029], [7.0,
+  1930], [7.1, 1918], [7.2, 1838], [7.3, 1643], [7.4, 1763], [7.5, 1691], [7.6, 1633],
+  [7.7, 1530], [7.8, 1487], [7.9, 1379], [8.0, 1458], [8.1, 1403], [8.2, 1168], [8.3,
+  1123], [8.4, 981], [8.5, 1129], [8.6, 1107], [8.7, 1308], [8.8, 665], [8.9, 594],
+  [9.0, 465], [9.1, 416], [9.2, 306], [9.3, 298], [9.4, 265], [9.5, 266], [9.6, 237],
+  [9.7, 184], [9.8, 196], [9.9, 131], [10.0, 93]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 7886912, "no_urls": 445056,
+  "no_bad_encoding": 2139}'
 monocleaner_scores: '[[0.0, 1935832], [0.1, 774978], [0.2, 1211044], [0.3, 1643021],
   [0.4, 2477200], [0.5, 2738516], [0.6, 2984351], [0.7, 4122160], [0.8, 2865460],
   [0.9, 644378]]'
@@ -306,6 +322,17 @@ src_langs: '[["en", 8270849], ["la", 6681507], ["fr", 1085688], ["it", 1025191],
   78], ["mai", 77], ["krc", 66], ["sc", 56], ["nah", 49], ["mrj", 46], ["myv", 45],
   ["tyv", 42], ["co", 37], ["bh", 34], ["xal", 26], ["dsb", 26], ["pfl", 20], ["frr",
   19], ["lrc", 14], ["rue", 13], ["vls", 11], ["dty", 2], ["hif", 1]]'
+src_ngrams: '{"1": [[["sit"], 3145132], [["amet"], 2819745], [["dolor"], 2672127],
+  [["ipsum"], 2634268], [["lorem"], 2322712]], "2": [[["sit amet"], 2633291], [["lorem
+  ipsum"], 1708690], [["dolor sit"], 1672241], [["ipsum dolor"], 1666735], [["adipiscing
+  elit"], 972811]], "3": [[["dolor sit amet"], 1643934], [["ipsum dolor sit"], 1602828],
+  [["lorem ipsum dolor"], 1576412], [["consectetur adipiscing elit"], 724402], [["labore
+  et dolore"], 426399]], "4": [[["ipsum dolor sit amet"], 1581118], [["lorem ipsum
+  dolor sit"], 1524857], [["labore et dolore magna"], 380833], [["do eiusmod tempor
+  incididunt"], 330349], [["tempor incididunt ut labore"], 320449]], "5": [[["lorem
+  ipsum dolor sit amet"], 1504558], [["eiusmod tempor incididunt ut labore"], 314451],
+  [["incididunt ut labore et dolore"], 314248], [["labore et dolore magna aliqua"],
+  306965], [["aliquip ex ea commodo consequat"], 191192]]}'
 src_sent_tokens: '[[0, 206038], [1, 3480192], [2, 3446107], [3, 2069731], [4, 1258070],
   [5, 1059544], [6, 822984], [7, 741968], [8, 668751], [9, 547650], [10, 471880],
   [11, 376253], [12, 341043], [13, 290653], [14, 240745], [15, 213213], [16, 194777],
@@ -1202,15 +1229,3 @@ ttr_src: 0.01
 unique_sents: 7130316
 warnings:
 - src_warning_tok_moses_en
-src_ngrams: '{"1": [[["sit"], 3145132], [["amet"], 2819745], [["dolor"], 2672127],
-  [["ipsum"], 2634268], [["lorem"], 2322712]], "2": [[["sit amet"], 2633291], [["lorem
-  ipsum"], 1708690], [["dolor sit"], 1672241], [["ipsum dolor"], 1666735], [["adipiscing
-  elit"], 972811]], "3": [[["dolor sit amet"], 1643934], [["ipsum dolor sit"], 1602828],
-  [["lorem ipsum dolor"], 1576412], [["consectetur adipiscing elit"], 724402], [["labore
-  et dolore"], 426399]], "4": [[["ipsum dolor sit amet"], 1581118], [["lorem ipsum
-  dolor sit"], 1524857], [["labore et dolore magna"], 380833], [["do eiusmod tempor
-  incididunt"], 330349], [["tempor incididunt ut labore"], 320449]], "5": [[["lorem
-  ipsum dolor sit amet"], 1504558], [["eiusmod tempor incididunt ut labore"], 314451],
-  [["incididunt ut labore et dolore"], 314248], [["labore et dolore magna aliqua"],
-  306965], [["aliquip ex ea commodo consequat"], 191192]]}'
-docs_wds: '[[0.0, 32107], [0.1, 850], [0.2, 901], [0.3, 1048], [0.4, 1405], [0.5, 1497], [0.6, 1667], [0.7, 1789], [0.8, 1983], [0.9, 2058], [1.0, 2034], [1.1, 2136], [1.2, 2276], [1.3, 2479], [1.4, 2529], [1.5, 2513], [1.6, 2661], [1.7, 2663], [1.8, 2619], [1.9, 2799], [2.0, 2858], [2.1, 3065], [2.2, 3337], [2.3, 3525], [2.4, 3622], [2.5, 3865], [2.6, 4087], [2.7, 4096], [2.8, 4233], [2.9, 4630], [3.0, 4868], [3.1, 5081], [3.2, 5124], [3.3, 5150], [3.4, 5172], [3.5, 5200], [3.6, 5381], [3.7, 5146], [3.8, 5280], [3.9, 5284], [4.0, 5420], [4.1, 5259], [4.2, 5208], [4.3, 5083], [4.4, 5106], [4.5, 4968], [4.6, 4911], [4.7, 4692], [4.8, 4624], [4.9, 4491], [5.0, 4229], [5.1, 4181], [5.2, 4102], [5.3, 4012], [5.4, 3936], [5.5, 3874], [5.6, 3586], [5.7, 3367], [5.8, 3349], [5.9, 3061], [6.0, 2995], [6.1, 2894], [6.2, 2827], [6.3, 2565], [6.4, 2433], [6.5, 2338], [6.6, 2290], [6.7, 2170], [6.8, 2079], [6.9, 2029], [7.0, 1930], [7.1, 1918], [7.2, 1838], [7.3, 1643], [7.4, 1763], [7.5, 1691], [7.6, 1633], [7.7, 1530], [7.8, 1487], [7.9, 1379], [8.0, 1458], [8.1, 1403], [8.2, 1168], [8.3, 1123], [8.4, 981], [8.5, 1129], [8.6, 1107], [8.7, 1308], [8.8, 665], [8.9, 594], [9.0, 465], [9.1, 416], [9.2, 306], [9.3, 298], [9.4, 265], [9.5, 266], [9.6, 237], [9.7, 184], [9.8, 196], [9.9, 131], [10.0, 93]]'
