--- a/reports/mono-1.2/HPLT-docs.ml.yaml
+++ b/reports/mono-1.2/HPLT-docs.ml.yaml
@@ -1,3 +1,4 @@
+corpus: ml_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 27], [0.1, 461], [0.2, 1629], [0.3, 4137], [0.4, 21300], [0.5,
   90681], [0.6, 253400], [0.7, 93354], [0.8, 4860], [0.9, 64], [1.0, 2]]'
 docs_collections: '[["cc40", 173669], ["wide15", 118417], ["wide16", 90124], ["wide17",
@@ -271,9 +272,24 @@ docs_top100_tld: '[["com", 300623], ["in", 96571], ["org", 21693], ["ae", 8741],
 docs_total: 469980
 docs_warnings:
 - docs_unmatching_65
-corpus: ml_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 39.89, "no_urls": 1.29, "no_bad_encoding":
-  0.01}'
+docs_wds: '[[0.0, 47628], [0.1, 539], [0.2, 760], [0.3, 832], [0.4, 774], [0.5, 726],
+  [0.6, 678], [0.7, 659], [0.8, 737], [0.9, 713], [1.0, 779], [1.1, 818], [1.2, 801],
+  [1.3, 818], [1.4, 839], [1.5, 820], [1.6, 801], [1.7, 868], [1.8, 888], [1.9, 884],
+  [2.0, 939], [2.1, 957], [2.2, 1007], [2.3, 1102], [2.4, 1152], [2.5, 1189], [2.6,
+  1223], [2.7, 1282], [2.8, 1258], [2.9, 1280], [3.0, 1350], [3.1, 1473], [3.2, 1546],
+  [3.3, 1734], [3.4, 1762], [3.5, 2029], [3.6, 2166], [3.7, 2272], [3.8, 2287], [3.9,
+  2526], [4.0, 2813], [4.1, 2990], [4.2, 3136], [4.3, 3250], [4.4, 3471], [4.5, 3823],
+  [4.6, 3955], [4.7, 3955], [4.8, 4318], [4.9, 4498], [5.0, 4596], [5.1, 4612], [5.2,
+  4886], [5.3, 5103], [5.4, 5359], [5.5, 5690], [5.6, 5665], [5.7, 5999], [5.8, 6343],
+  [5.9, 6563], [6.0, 7028], [6.1, 7047], [6.2, 7422], [6.3, 7712], [6.4, 8104], [6.5,
+  8627], [6.6, 8919], [6.7, 9068], [6.8, 9692], [6.9, 9613], [7.0, 9973], [7.1, 9956],
+  [7.2, 9937], [7.3, 9837], [7.4, 10318], [7.5, 10072], [7.6, 10494], [7.7, 10182],
+  [7.8, 9905], [7.9, 9586], [8.0, 9777], [8.1, 9832], [8.2, 9751], [8.3, 9219], [8.4,
+  8771], [8.5, 8089], [8.6, 7303], [8.7, 6802], [8.8, 6606], [8.9, 5630], [9.0, 4958],
+  [9.1, 4168], [9.2, 3430], [9.3, 2697], [9.4, 2045], [9.5, 1439], [9.6, 966], [9.7,
+  629], [9.8, 326], [9.9, 108], [10.0, 21]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 22750740, "no_urls": 735734,
+  "no_bad_encoding": 5703}'
 monocleaner_scores: '[[0.0, 3112892], [0.1, 1094813], [0.2, 2407831], [0.3, 4660998],
   [0.4, 5360877], [0.5, 8237340], [0.6, 8963211], [0.7, 11344189], [0.8, 9992060],
   [0.9, 1859482]]'
@@ -309,6 +325,22 @@ src_langs: '[["ml", 28883395], ["en", 21975646], ["cs", 1417276], ["es", 610742]
   23], ["os", 20], ["myv", 17], ["nah", 16], ["yo", 12], ["lrc", 12], ["cbk", 11],
   ["sc", 9], ["xal", 8], ["vls", 4], ["co", 3], ["pfl", 2], ["hif", 2], ["av", 2],
   ["mrj", 1], ["lez", 1], ["dsb", 1]]'
+src_ngrams: '{"1": [[["\u0d12\u0d30\u0d41"], 3754966], [["\u0d08"], 2090109], [["to"],
+  1762323], [["the"], 1650615], [["news"], 1601203]], "2": [[["span style="], 275173],
+  [["read more"], 265772], [["posted by"], 258577], [["of the"], 203874], [["about
+  us"], 194597]], "3": [[["to twittershare to"], 177459], [["share to twittershare"],
+  177459], [["twittershare to facebookshare"], 172892], [["to facebookshare to"],
+  172892], [["facebookshare to pinterest"], 172892]], "4": [[["share to twittershare
+  to"], 177459], [["twittershare to facebookshare to"], 172892], [["to twittershare
+  to facebookshare"], 172892], [["to facebookshare to pinterest"], 172892], [["links
+  to this post"], 78281]], "5": [[["twittershare to facebookshare to pinterest"],
+  172892], [["to twittershare to facebookshare to"], 172892], [["share to twittershare
+  to facebookshare"], 172892], [["\u0d32\u0d4d\u200d\u200c \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15facebook
+  \u0d32\u0d4d\u200d\u200c \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15\u0d2a\u0d3f\u0d28\u0d4d\u0d31\u0d31\u0d38\u0d4d\u0d31\u0d4d\u0d31\u0d3f\u0d7d
+  \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15"], 36035], [["twitter \u0d32\u0d4d\u200d\u200c
+  \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15facebook \u0d32\u0d4d\u200d\u200c
+  \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15\u0d2a\u0d3f\u0d28\u0d4d\u0d31\u0d31\u0d38\u0d4d\u0d31\u0d4d\u0d31\u0d3f\u0d7d"],
+  36035]]}'
 src_sent_tokens: '[[0, 409291], [1, 13078673], [2, 7254549], [3, 4329030], [4, 3920241],
   [5, 5922380], [6, 2934273], [7, 2330769], [8, 1853459], [9, 1494324], [10, 1487128],
   [11, 1065880], [12, 895950], [13, 755598], [14, 623886], [15, 549972], [16, 468980],
@@ -1613,20 +1645,3 @@ ttr_src: 0.03
 unique_sents: 12708568
 warnings:
 - src_ngrams_ml_nostopwords
-src_ngrams: '{"1": [[["\u0d12\u0d30\u0d41"], 3754966], [["\u0d08"], 2090109], [["to"],
-  1762323], [["the"], 1650615], [["news"], 1601203]], "2": [[["span style="], 275173],
-  [["read more"], 265772], [["posted by"], 258577], [["of the"], 203874], [["about
-  us"], 194597]], "3": [[["to twittershare to"], 177459], [["share to twittershare"],
-  177459], [["twittershare to facebookshare"], 172892], [["to facebookshare to"],
-  172892], [["facebookshare to pinterest"], 172892]], "4": [[["share to twittershare
-  to"], 177459], [["twittershare to facebookshare to"], 172892], [["to twittershare
-  to facebookshare"], 172892], [["to facebookshare to pinterest"], 172892], [["links
-  to this post"], 78281]], "5": [[["twittershare to facebookshare to pinterest"],
-  172892], [["to twittershare to facebookshare to"], 172892], [["share to twittershare
-  to facebookshare"], 172892], [["\u0d32\u0d4d\u200d\u200c \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15facebook
-  \u0d32\u0d4d\u200d\u200c \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15\u0d2a\u0d3f\u0d28\u0d4d\u0d31\u0d31\u0d38\u0d4d\u0d31\u0d4d\u0d31\u0d3f\u0d7d
-  \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15"], 36035], [["twitter \u0d32\u0d4d\u200d\u200c
-  \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15facebook \u0d32\u0d4d\u200d\u200c
-  \u0d2a\u0d19\u0d4d\u0d15\u0d3f\u0d1f\u0d41\u0d15\u0d2a\u0d3f\u0d28\u0d4d\u0d31\u0d31\u0d38\u0d4d\u0d31\u0d4d\u0d31\u0d3f\u0d7d"],
-  36035]]}'
-docs_wds: '[[0.0, 47628], [0.1, 539], [0.2, 760], [0.3, 832], [0.4, 774], [0.5, 726], [0.6, 678], [0.7, 659], [0.8, 737], [0.9, 713], [1.0, 779], [1.1, 818], [1.2, 801], [1.3, 818], [1.4, 839], [1.5, 820], [1.6, 801], [1.7, 868], [1.8, 888], [1.9, 884], [2.0, 939], [2.1, 957], [2.2, 1007], [2.3, 1102], [2.4, 1152], [2.5, 1189], [2.6, 1223], [2.7, 1282], [2.8, 1258], [2.9, 1280], [3.0, 1350], [3.1, 1473], [3.2, 1546], [3.3, 1734], [3.4, 1762], [3.5, 2029], [3.6, 2166], [3.7, 2272], [3.8, 2287], [3.9, 2526], [4.0, 2813], [4.1, 2990], [4.2, 3136], [4.3, 3250], [4.4, 3471], [4.5, 3823], [4.6, 3955], [4.7, 3955], [4.8, 4318], [4.9, 4498], [5.0, 4596], [5.1, 4612], [5.2, 4886], [5.3, 5103], [5.4, 5359], [5.5, 5690], [5.6, 5665], [5.7, 5999], [5.8, 6343], [5.9, 6563], [6.0, 7028], [6.1, 7047], [6.2, 7422], [6.3, 7712], [6.4, 8104], [6.5, 8627], [6.6, 8919], [6.7, 9068], [6.8, 9692], [6.9, 9613], [7.0, 9973], [7.1, 9956], [7.2, 9937], [7.3, 9837], [7.4, 10318], [7.5, 10072], [7.6, 10494], [7.7, 10182], [7.8, 9905], [7.9, 9586], [8.0, 9777], [8.1, 9832], [8.2, 9751], [8.3, 9219], [8.4, 8771], [8.5, 8089], [8.6, 7303], [8.7, 6802], [8.8, 6606], [8.9, 5630], [9.0, 4958], [9.1, 4168], [9.2, 3430], [9.3, 2697], [9.4, 2045], [9.5, 1439], [9.6, 966], [9.7, 629], [9.8, 326], [9.9, 108], [10.0, 21]]'
