--- a/reports/mono-1.2/HPLT-docs.mr.yaml
+++ b/reports/mono-1.2/HPLT-docs.mr.yaml
@@ -1,3 +1,4 @@
+corpus: mr_1.jsonl.tsv
 docs_avg_lm: '[[0.1, 4], [0.2, 202], [0.3, 2560], [0.4, 11880], [0.5, 54492], [0.6,
   216053], [0.7, 157107], [0.8, 10445], [0.9, 873], [1.0, 28]]'
 docs_collections: '[["cc40", 260899], ["wide16", 76645], ["wide15", 64404], ["wide17",
@@ -308,9 +309,24 @@ docs_top100_tld: '[["com", 292518], ["in", 83357], ["org", 31091], ["gov.in", 76
 docs_total: 453694
 docs_warnings:
 - docs_unmatching_50
-corpus: mr_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 42.45, "no_urls": 1.04, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 13331], [0.1, 600], [0.2, 655], [0.3, 496], [0.4, 578], [0.5, 653],
+  [0.6, 580], [0.7, 651], [0.8, 650], [0.9, 699], [1.0, 684], [1.1, 826], [1.2, 796],
+  [1.3, 890], [1.4, 954], [1.5, 977], [1.6, 989], [1.7, 1110], [1.8, 1120], [1.9,
+  1238], [2.0, 1297], [2.1, 1314], [2.2, 1407], [2.3, 1589], [2.4, 1520], [2.5, 1671],
+  [2.6, 1822], [2.7, 1869], [2.8, 2008], [2.9, 2000], [3.0, 2072], [3.1, 2358], [3.2,
+  2294], [3.3, 2369], [3.4, 2510], [3.5, 2566], [3.6, 2636], [3.7, 2563], [3.8, 2917],
+  [3.9, 2935], [4.0, 3203], [4.1, 3311], [4.2, 3581], [4.3, 3714], [4.4, 3739], [4.5,
+  3962], [4.6, 4212], [4.7, 4530], [4.8, 4903], [4.9, 5171], [5.0, 5444], [5.1, 5522],
+  [5.2, 5934], [5.3, 6172], [5.4, 6698], [5.5, 6888], [5.6, 7235], [5.7, 7393], [5.8,
+  7872], [5.9, 7974], [6.0, 8327], [6.1, 8599], [6.2, 9158], [6.3, 9345], [6.4, 9494],
+  [6.5, 9766], [6.6, 10401], [6.7, 10355], [6.8, 10838], [6.9, 10867], [7.0, 11048],
+  [7.1, 10905], [7.2, 10940], [7.3, 10690], [7.4, 10962], [7.5, 10498], [7.6, 10721],
+  [7.7, 10815], [7.8, 10368], [7.9, 9223], [8.0, 8932], [8.1, 7760], [8.2, 7258],
+  [8.3, 6542], [8.4, 5888], [8.5, 5311], [8.6, 4877], [8.7, 4530], [8.8, 4425], [8.9,
+  3795], [9.0, 2928], [9.1, 2462], [9.2, 2144], [9.3, 1780], [9.4, 1441], [9.5, 1025],
+  [9.6, 724], [9.7, 414], [9.8, 304], [9.9, 152], [10.0, 30]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 23954876, "no_urls": 586880,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 2423821], [0.1, 973170], [0.2, 1883118], [0.3, 3570574],
   [0.4, 5595232], [0.5, 8489503], [0.6, 10243020], [0.7, 11053460], [0.8, 9379203],
   [0.9, 2819703]]'
@@ -346,6 +362,16 @@ src_langs: '[["mr", 23182238], ["en", 15028555], ["hi", 11662500], ["ne", 674168
   36], ["scn", 34], ["li", 34], ["krc", 34], ["eml", 27], ["vep", 22], ["os", 22],
   ["av", 19], ["myv", 10], ["pfl", 9], ["nap", 9], ["sc", 8], ["kv", 8], ["hif", 6],
   ["dsb", 5], ["mrj", 3], ["lrc", 3], ["lez", 3], ["co", 1]]'
+src_ngrams: '{"1": [[["to"], 1598348], [["in"], 1515505], [["the"], 1052996], [["by"],
+  987369], [["marathi"], 980322]], "2": [[["in marathi"], 312738], [["log in"], 278829],
+  [["post comments"], 258450], [["to post"], 247112], [["or register"], 238207]],
+  "3": [[["to post comments"], 239262], [["or register to"], 237950], [["log in or"],
+  237830], [["register to post"], 237727], [["in or register"], 237316]], "4": [[["or
+  register to post"], 237727], [["register to post comments"], 237725], [["log in
+  or register"], 237305], [["in or register to"], 237303], [["opens in new window"],
+  118175]], "5": [[["or register to post comments"], 237725], [["log in or register
+  to"], 237303], [["in or register to post"], 237116], [["to twittershare to facebookshare
+  to"], 89686], [["share to twittershare to facebookshare"], 89686]]}'
 src_sent_tokens: '[[0, 493783], [1, 12958961], [2, 7832180], [3, 4459088], [4, 3915387],
   [5, 4623478], [6, 2578395], [7, 2228020], [8, 2120787], [9, 1571022], [10, 1434058],
   [11, 1257586], [12, 948624], [13, 801550], [14, 688691], [15, 602425], [16, 514974],
@@ -1661,14 +1687,3 @@ timestamp: 1711370089.9326868
 ttr_src: 0.01
 unique_sents: 12029146
 warnings: []
-src_ngrams: '{"1": [[["to"], 1598348], [["in"], 1515505], [["the"], 1052996], [["by"],
-  987369], [["marathi"], 980322]], "2": [[["in marathi"], 312738], [["log in"], 278829],
-  [["post comments"], 258450], [["to post"], 247112], [["or register"], 238207]],
-  "3": [[["to post comments"], 239262], [["or register to"], 237950], [["log in or"],
-  237830], [["register to post"], 237727], [["in or register"], 237316]], "4": [[["or
-  register to post"], 237727], [["register to post comments"], 237725], [["log in
-  or register"], 237305], [["in or register to"], 237303], [["opens in new window"],
-  118175]], "5": [[["or register to post comments"], 237725], [["log in or register
-  to"], 237303], [["in or register to post"], 237116], [["to twittershare to facebookshare
-  to"], 89686], [["share to twittershare to facebookshare"], 89686]]}'
-docs_wds: '[[0.0, 13331], [0.1, 600], [0.2, 655], [0.3, 496], [0.4, 578], [0.5, 653], [0.6, 580], [0.7, 651], [0.8, 650], [0.9, 699], [1.0, 684], [1.1, 826], [1.2, 796], [1.3, 890], [1.4, 954], [1.5, 977], [1.6, 989], [1.7, 1110], [1.8, 1120], [1.9, 1238], [2.0, 1297], [2.1, 1314], [2.2, 1407], [2.3, 1589], [2.4, 1520], [2.5, 1671], [2.6, 1822], [2.7, 1869], [2.8, 2008], [2.9, 2000], [3.0, 2072], [3.1, 2358], [3.2, 2294], [3.3, 2369], [3.4, 2510], [3.5, 2566], [3.6, 2636], [3.7, 2563], [3.8, 2917], [3.9, 2935], [4.0, 3203], [4.1, 3311], [4.2, 3581], [4.3, 3714], [4.4, 3739], [4.5, 3962], [4.6, 4212], [4.7, 4530], [4.8, 4903], [4.9, 5171], [5.0, 5444], [5.1, 5522], [5.2, 5934], [5.3, 6172], [5.4, 6698], [5.5, 6888], [5.6, 7235], [5.7, 7393], [5.8, 7872], [5.9, 7974], [6.0, 8327], [6.1, 8599], [6.2, 9158], [6.3, 9345], [6.4, 9494], [6.5, 9766], [6.6, 10401], [6.7, 10355], [6.8, 10838], [6.9, 10867], [7.0, 11048], [7.1, 10905], [7.2, 10940], [7.3, 10690], [7.4, 10962], [7.5, 10498], [7.6, 10721], [7.7, 10815], [7.8, 10368], [7.9, 9223], [8.0, 8932], [8.1, 7760], [8.2, 7258], [8.3, 6542], [8.4, 5888], [8.5, 5311], [8.6, 4877], [8.7, 4530], [8.8, 4425], [8.9, 3795], [9.0, 2928], [9.1, 2462], [9.2, 2144], [9.3, 1780], [9.4, 1441], [9.5, 1025], [9.6, 724], [9.7, 414], [9.8, 304], [9.9, 152], [10.0, 30]]'
