--- a/reports/mono-1.2/HPLT-docs.mt.yaml
+++ b/reports/mono-1.2/HPLT-docs.mt.yaml
@@ -1,3 +1,4 @@
+corpus: mt_1.jsonl.tsv
 docs_avg_lm: '[[0.2, 43], [0.3, 319], [0.4, 3521], [0.5, 75672], [0.6, 24304], [0.7,
   5963], [0.8, 1237], [0.9, 59]]'
 docs_collections: '[["wide16", 75191], ["cc40", 23886], ["wide17", 6162], ["wide15",
@@ -204,9 +205,23 @@ docs_top100_tld: '[["com", 81233], ["eu", 8256], ["org", 5630], ["com.mt", 5501]
 docs_total: 111123
 docs_warnings:
 - docs_unmatching_5
-corpus: mt_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 36.37, "no_urls": 1.27, "no_bad_encoding":
-  0.02}'
+docs_wds: '[[0.0, 729], [0.1, 90], [0.2, 258], [0.3, 446], [0.4, 1109], [0.5, 4655],
+  [0.6, 12401], [0.7, 10924], [0.8, 6559], [0.9, 5692], [1.0, 5398], [1.1, 5125],
+  [1.2, 4796], [1.3, 3511], [1.4, 2483], [1.5, 1961], [1.6, 1398], [1.7, 940], [1.8,
+  651], [1.9, 407], [2.0, 308], [2.1, 270], [2.2, 210], [2.3, 208], [2.4, 234], [2.5,
+  205], [2.6, 241], [2.7, 285], [2.8, 271], [2.9, 249], [3.0, 293], [3.1, 273], [3.2,
+  290], [3.3, 290], [3.4, 291], [3.5, 328], [3.6, 333], [3.7, 327], [3.8, 333], [3.9,
+  368], [4.0, 404], [4.1, 400], [4.2, 386], [4.3, 401], [4.4, 413], [4.5, 455], [4.6,
+  469], [4.7, 437], [4.8, 468], [4.9, 549], [5.0, 529], [5.1, 533], [5.2, 585], [5.3,
+  627], [5.4, 657], [5.5, 674], [5.6, 766], [5.7, 799], [5.8, 771], [5.9, 814], [6.0,
+  756], [6.1, 794], [6.2, 817], [6.3, 758], [6.4, 771], [6.5, 731], [6.6, 807], [6.7,
+  789], [6.8, 809], [6.9, 865], [7.0, 893], [7.1, 895], [7.2, 870], [7.3, 872], [7.4,
+  879], [7.5, 913], [7.6, 907], [7.7, 859], [7.8, 820], [7.9, 842], [8.0, 837], [8.1,
+  833], [8.2, 857], [8.3, 777], [8.4, 672], [8.5, 557], [8.6, 507], [8.7, 521], [8.8,
+  440], [8.9, 421], [9.0, 400], [9.1, 316], [9.2, 265], [9.3, 221], [9.4, 185], [9.5,
+  137], [9.6, 111], [9.7, 84], [9.8, 47], [9.9, 10], [10.0, 1]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 4064062, "no_urls": 141912,
+  "no_bad_encoding": 2234}'
 monocleaner_scores: '[[0.0, 391883], [0.1, 386965], [0.2, 497874], [0.3, 1444947],
   [0.4, 1730482], [0.5, 1957069], [0.6, 1528275], [0.7, 1328464], [0.8, 1311680],
   [0.9, 596578]]'
@@ -242,6 +257,17 @@ src_langs: '[["mt", 3687649], ["en", 3300926], ["de", 582688], ["fr", 562642], [
   31], ["sah", 21], ["yue", 19], ["vls", 19], ["dv", 19], ["azb", 17], ["nah", 16],
   ["tyv", 12], ["mai", 6], ["kv", 5], ["krc", 5], ["rue", 4], ["mrj", 4], ["myv",
   3], ["lez", 2], ["dty", 1], ["av", 1]]'
+src_ngrams: '{"1": [[["ta"], 2291265], [["u"], 1921093], [["li"], 1644494], [["the"],
+  1156434], [["of"], 727414]], "2": [[["data minn"], 201969], [["id-d\u0127ul ta"],
+  201052], [["dettalji aktar"], 201031], [["notazzjonijiet alternattivi"], 200847],
+  [["watch ktieb"], 200362]], "3": [[["made by freepik"], 66687], [["icons made by"],
+  66687], [["is licensed by"], 66669], [["www.flaticon.com is licensed"], 66667],
+  [["licensed by cc"], 66667]], "4": [[["icons made by freepik"], 66687], [["www.flaticon.com
+  is licensed by"], 66667], [["made by freepik from"], 66667], [["is licensed by cc"],
+  66667], [["from www.flaticon.com is licensed"], 66667]], "5": [[["www.flaticon.com
+  is licensed by cc"], 66667], [["made by freepik from www.flaticon.com"], 66667],
+  [["icons made by freepik from"], 66667], [["from www.flaticon.com is licensed by"],
+  66667], [["freepik from www.flaticon.com is licensed"], 66667]]}'
 src_sent_tokens: '[[0, 94785], [1, 1479361], [2, 1434009], [3, 723318], [4, 1360575],
   [5, 804177], [6, 658460], [7, 511192], [8, 378265], [9, 492827], [10, 463891], [11,
   261694], [12, 294210], [13, 246054], [14, 139877], [15, 109220], [16, 85191], [17,
@@ -593,15 +619,3 @@ unique_sents: 3259635
 warnings:
 - src_warning_tok_moses_en
 - src_ngrams_mt_nostopwords
-src_ngrams: '{"1": [[["ta"], 2291265], [["u"], 1921093], [["li"], 1644494], [["the"],
-  1156434], [["of"], 727414]], "2": [[["data minn"], 201969], [["id-d\u0127ul ta"],
-  201052], [["dettalji aktar"], 201031], [["notazzjonijiet alternattivi"], 200847],
-  [["watch ktieb"], 200362]], "3": [[["made by freepik"], 66687], [["icons made by"],
-  66687], [["is licensed by"], 66669], [["www.flaticon.com is licensed"], 66667],
-  [["licensed by cc"], 66667]], "4": [[["icons made by freepik"], 66687], [["www.flaticon.com
-  is licensed by"], 66667], [["made by freepik from"], 66667], [["is licensed by cc"],
-  66667], [["from www.flaticon.com is licensed"], 66667]], "5": [[["www.flaticon.com
-  is licensed by cc"], 66667], [["made by freepik from www.flaticon.com"], 66667],
-  [["icons made by freepik from"], 66667], [["from www.flaticon.com is licensed by"],
-  66667], [["freepik from www.flaticon.com is licensed"], 66667]]}'
-docs_wds: '[[0.0, 729], [0.1, 90], [0.2, 258], [0.3, 446], [0.4, 1109], [0.5, 4655], [0.6, 12401], [0.7, 10924], [0.8, 6559], [0.9, 5692], [1.0, 5398], [1.1, 5125], [1.2, 4796], [1.3, 3511], [1.4, 2483], [1.5, 1961], [1.6, 1398], [1.7, 940], [1.8, 651], [1.9, 407], [2.0, 308], [2.1, 270], [2.2, 210], [2.3, 208], [2.4, 234], [2.5, 205], [2.6, 241], [2.7, 285], [2.8, 271], [2.9, 249], [3.0, 293], [3.1, 273], [3.2, 290], [3.3, 290], [3.4, 291], [3.5, 328], [3.6, 333], [3.7, 327], [3.8, 333], [3.9, 368], [4.0, 404], [4.1, 400], [4.2, 386], [4.3, 401], [4.4, 413], [4.5, 455], [4.6, 469], [4.7, 437], [4.8, 468], [4.9, 549], [5.0, 529], [5.1, 533], [5.2, 585], [5.3, 627], [5.4, 657], [5.5, 674], [5.6, 766], [5.7, 799], [5.8, 771], [5.9, 814], [6.0, 756], [6.1, 794], [6.2, 817], [6.3, 758], [6.4, 771], [6.5, 731], [6.6, 807], [6.7, 789], [6.8, 809], [6.9, 865], [7.0, 893], [7.1, 895], [7.2, 870], [7.3, 872], [7.4, 879], [7.5, 913], [7.6, 907], [7.7, 859], [7.8, 820], [7.9, 842], [8.0, 837], [8.1, 833], [8.2, 857], [8.3, 777], [8.4, 672], [8.5, 557], [8.6, 507], [8.7, 521], [8.8, 440], [8.9, 421], [9.0, 400], [9.1, 316], [9.2, 265], [9.3, 221], [9.4, 185], [9.5, 137], [9.6, 111], [9.7, 84], [9.8, 47], [9.9, 10], [10.0, 1]]'
