--- a/reports/mono-1.2/HPLT-docs.ne.yaml
+++ b/reports/mono-1.2/HPLT-docs.ne.yaml
@@ -1,3 +1,4 @@
+corpus: ne_1.jsonl.tsv
 docs_avg_lm: '[[0.2, 9], [0.3, 419], [0.4, 6428], [0.5, 20749], [0.6, 156604], [0.7,
   543564], [0.8, 133185], [0.9, 1903], [1.0, 2]]'
 docs_collections: '[["cc40", 364811], ["wide17", 261893], ["wide16", 127758], ["wide15",
@@ -223,9 +224,24 @@ docs_top100_tld: '[["com", 777494], ["com.np", 15426], ["org", 14472], ["net", 1
 docs_total: 863349
 docs_warnings:
 - docs_unmatching_486
-corpus: ne_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 44.8, "no_urls": 1.62, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 54301], [0.1, 285], [0.2, 402], [0.3, 472], [0.4, 584], [0.5, 641],
+  [0.6, 624], [0.7, 591], [0.8, 628], [0.9, 566], [1.0, 632], [1.1, 746], [1.2, 751],
+  [1.3, 695], [1.4, 728], [1.5, 760], [1.6, 771], [1.7, 785], [1.8, 746], [1.9, 744],
+  [2.0, 852], [2.1, 846], [2.2, 879], [2.3, 847], [2.4, 1046], [2.5, 1075], [2.6,
+  1188], [2.7, 1268], [2.8, 1384], [2.9, 1430], [3.0, 1532], [3.1, 1607], [3.2, 1751],
+  [3.3, 1884], [3.4, 2132], [3.5, 2443], [3.6, 2546], [3.7, 2692], [3.8, 3201], [3.9,
+  3348], [4.0, 3678], [4.1, 4057], [4.2, 4480], [4.3, 5153], [4.4, 5369], [4.5, 6141],
+  [4.6, 7021], [4.7, 7556], [4.8, 8375], [4.9, 9113], [5.0, 9955], [5.1, 11210], [5.2,
+  11977], [5.3, 12967], [5.4, 14041], [5.5, 15145], [5.6, 16022], [5.7, 16795], [5.8,
+  18115], [5.9, 19241], [6.0, 19601], [6.1, 22012], [6.2, 22067], [6.3, 23550], [6.4,
+  23983], [6.5, 24876], [6.6, 28431], [6.7, 24822], [6.8, 30107], [6.9, 28926], [7.0,
+  26412], [7.1, 32942], [7.2, 28347], [7.3, 24274], [7.4, 31963], [7.5, 27620], [7.6,
+  21545], [7.7, 20167], [7.8, 24826], [7.9, 15336], [8.0, 13664], [8.1, 7897], [8.2,
+  5603], [8.3, 4610], [8.4, 3739], [8.5, 3135], [8.6, 2688], [8.7, 2685], [8.8, 2341],
+  [8.9, 1881], [9.0, 1425], [9.1, 1028], [9.2, 898], [9.3, 780], [9.4, 708], [9.5,
+  610], [9.6, 474], [9.7, 297], [9.8, 177], [9.9, 67], [10.0, 21]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 35119804, "no_urls": 1269957,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 2868815], [0.1, 723803], [0.2, 1563694], [0.3, 2763699],
   [0.4, 4893272], [0.5, 7911379], [0.6, 12508016], [0.7, 16045536], [0.8, 18793690],
   [0.9, 10320517]]'
@@ -261,6 +277,20 @@ src_langs: '[["ne", 50859847], ["en", 15648668], ["hi", 4234000], ["mr", 871410]
   ["lmo", 25], ["xal", 21], ["azb", 21], ["wa", 19], ["vep", 15], ["myv", 15], ["rm",
   14], ["eml", 11], ["krc", 10], ["lez", 5], ["pfl", 3], ["lrc", 2], ["dsb", 2], ["sc",
   1], ["nap", 1]]'
+src_ngrams: '{"1": [[["\u0938\u092e\u093e\u091a\u093e\u0930"], 2112597], [["\u0928\u0947\u092a\u093e\u0932"],
+  1771404], [["com"], 1651501], [["\u0928\u0947\u092a\u093e\u0932\u0940"], 1468742],
+  [["\u092a\u094d\u0930\u0926\u0947\u0936"], 1274807]], "2": [[["email protected"],
+  325587], [["rights reserved"], 303236], [["all rights"], 303005], [["read more"],
+  292234], [["\u0939\u093e\u092e\u094d\u0930\u094b \u092c\u093e\u0930\u0947\u092e\u093e"],
+  248969]], "3": [[["all rights reserved"], 300070], [["\u0938\u0942\u091a\u0928\u093e
+  \u0935\u093f\u092d\u093e\u0917 \u0926\u0930\u094d\u0924\u093e"], 115639], [["\u0935\u093f\u092d\u093e\u0917
+  \u0926\u0930\u094d\u0924\u093e \u0928\u0902"], 104792], [["leave a reply"], 97600],
+  [["your email address"], 94972]], "4": [[["leave a reply cancel"], 86228], [["a
+  reply cancel reply"], 85758], [["will not be published"], 84327], [["address will
+  not be"], 81861], [["your email address will"], 81827]], "5": [[["leave a reply
+  cancel reply"], 85758], [["address will not be published"], 81854], [["email address
+  will not be"], 81826], [["your email address will not"], 81824], [["twittershare
+  to facebookshare to pinterest"], 59874]]}'
 src_sent_tokens: '[[1, 20107920], [2, 11965415], [3, 6404921], [4, 4275757], [5, 4968842],
   [6, 3518332], [7, 3100648], [8, 2978411], [9, 2383260], [10, 2134898], [11, 1729144],
   [12, 1315142], [13, 1106054], [14, 833693], [15, 765394], [16, 644955], [17, 480867],
@@ -1326,18 +1356,3 @@ timestamp: 1711218466.2541509
 ttr_src: 0.01
 unique_sents: 13025208
 warnings: []
-src_ngrams: '{"1": [[["\u0938\u092e\u093e\u091a\u093e\u0930"], 2112597], [["\u0928\u0947\u092a\u093e\u0932"],
-  1771404], [["com"], 1651501], [["\u0928\u0947\u092a\u093e\u0932\u0940"], 1468742],
-  [["\u092a\u094d\u0930\u0926\u0947\u0936"], 1274807]], "2": [[["email protected"],
-  325587], [["rights reserved"], 303236], [["all rights"], 303005], [["read more"],
-  292234], [["\u0939\u093e\u092e\u094d\u0930\u094b \u092c\u093e\u0930\u0947\u092e\u093e"],
-  248969]], "3": [[["all rights reserved"], 300070], [["\u0938\u0942\u091a\u0928\u093e
-  \u0935\u093f\u092d\u093e\u0917 \u0926\u0930\u094d\u0924\u093e"], 115639], [["\u0935\u093f\u092d\u093e\u0917
-  \u0926\u0930\u094d\u0924\u093e \u0928\u0902"], 104792], [["leave a reply"], 97600],
-  [["your email address"], 94972]], "4": [[["leave a reply cancel"], 86228], [["a
-  reply cancel reply"], 85758], [["will not be published"], 84327], [["address will
-  not be"], 81861], [["your email address will"], 81827]], "5": [[["leave a reply
-  cancel reply"], 85758], [["address will not be published"], 81854], [["email address
-  will not be"], 81826], [["your email address will not"], 81824], [["twittershare
-  to facebookshare to pinterest"], 59874]]}'
-docs_wds: '[[0.0, 54301], [0.1, 285], [0.2, 402], [0.3, 472], [0.4, 584], [0.5, 641], [0.6, 624], [0.7, 591], [0.8, 628], [0.9, 566], [1.0, 632], [1.1, 746], [1.2, 751], [1.3, 695], [1.4, 728], [1.5, 760], [1.6, 771], [1.7, 785], [1.8, 746], [1.9, 744], [2.0, 852], [2.1, 846], [2.2, 879], [2.3, 847], [2.4, 1046], [2.5, 1075], [2.6, 1188], [2.7, 1268], [2.8, 1384], [2.9, 1430], [3.0, 1532], [3.1, 1607], [3.2, 1751], [3.3, 1884], [3.4, 2132], [3.5, 2443], [3.6, 2546], [3.7, 2692], [3.8, 3201], [3.9, 3348], [4.0, 3678], [4.1, 4057], [4.2, 4480], [4.3, 5153], [4.4, 5369], [4.5, 6141], [4.6, 7021], [4.7, 7556], [4.8, 8375], [4.9, 9113], [5.0, 9955], [5.1, 11210], [5.2, 11977], [5.3, 12967], [5.4, 14041], [5.5, 15145], [5.6, 16022], [5.7, 16795], [5.8, 18115], [5.9, 19241], [6.0, 19601], [6.1, 22012], [6.2, 22067], [6.3, 23550], [6.4, 23983], [6.5, 24876], [6.6, 28431], [6.7, 24822], [6.8, 30107], [6.9, 28926], [7.0, 26412], [7.1, 32942], [7.2, 28347], [7.3, 24274], [7.4, 31963], [7.5, 27620], [7.6, 21545], [7.7, 20167], [7.8, 24826], [7.9, 15336], [8.0, 13664], [8.1, 7897], [8.2, 5603], [8.3, 4610], [8.4, 3739], [8.5, 3135], [8.6, 2688], [8.7, 2685], [8.8, 2341], [8.9, 1881], [9.0, 1425], [9.1, 1028], [9.2, 898], [9.3, 780], [9.4, 708], [9.5, 610], [9.6, 474], [9.7, 297], [9.8, 177], [9.9, 67], [10.0, 21]]'
