--- a/reports/mono-1.2/HPLT-docs.pa.yaml
+++ b/reports/mono-1.2/HPLT-docs.pa.yaml
@@ -1,3 +1,4 @@
+corpus: pa_1.jsonl.tsv
 docs_avg_lm: '[[0.0, 2], [0.1, 1], [0.2, 42], [0.3, 426], [0.4, 10269], [0.5, 19780],
   [0.6, 59070], [0.7, 58753], [0.8, 4299], [0.9, 101], [1.0, 1]]'
 docs_collections: '[["cc40", 72769], ["wide16", 31805], ["wide17", 27480], ["wide15",
@@ -217,9 +218,24 @@ docs_top100_tld: '[["com", 96583], ["in", 18770], ["org", 15685], ["ca", 4493], 
 docs_total: 152775
 docs_warnings:
 - docs_unmatching_31
-corpus: pa_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 41.98, "no_urls": 1.15, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 6751], [0.1, 529], [0.2, 482], [0.3, 381], [0.4, 388], [0.5, 377],
+  [0.6, 378], [0.7, 417], [0.8, 435], [0.9, 525], [1.0, 513], [1.1, 428], [1.2, 423],
+  [1.3, 376], [1.4, 357], [1.5, 379], [1.6, 373], [1.7, 407], [1.8, 415], [1.9, 400],
+  [2.0, 383], [2.1, 416], [2.2, 462], [2.3, 464], [2.4, 493], [2.5, 506], [2.6, 540],
+  [2.7, 459], [2.8, 461], [2.9, 425], [3.0, 406], [3.1, 455], [3.2, 447], [3.3, 486],
+  [3.4, 512], [3.5, 510], [3.6, 559], [3.7, 586], [3.8, 610], [3.9, 740], [4.0, 864],
+  [4.1, 988], [4.2, 1078], [4.3, 1055], [4.4, 1244], [4.5, 1147], [4.6, 1269], [4.7,
+  1492], [4.8, 1541], [4.9, 1540], [5.0, 1697], [5.1, 1741], [5.2, 1705], [5.3, 1875],
+  [5.4, 1948], [5.5, 2265], [5.6, 2302], [5.7, 2485], [5.8, 2764], [5.9, 3132], [6.0,
+  3329], [6.1, 3527], [6.2, 3720], [6.3, 3762], [6.4, 3945], [6.5, 4175], [6.6, 4448],
+  [6.7, 4678], [6.8, 5283], [6.9, 5887], [7.0, 4623], [7.1, 3895], [7.2, 3718], [7.3,
+  3431], [7.4, 3454], [7.5, 3103], [7.6, 2804], [7.7, 2526], [7.8, 2630], [7.9, 2366],
+  [8.0, 2313], [8.1, 2344], [8.2, 1904], [8.3, 1579], [8.4, 1386], [8.5, 1245], [8.6,
+  1249], [8.7, 1077], [8.8, 986], [8.9, 906], [9.0, 771], [9.1, 585], [9.2, 495],
+  [9.3, 384], [9.4, 408], [9.5, 357], [9.6, 273], [9.7, 218], [9.8, 140], [9.9, 55],
+  [10.0, 10]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 7212572, "no_urls": 197581,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 893414], [0.1, 279703], [0.2, 555400], [0.3, 897487],
   [0.4, 1792044], [0.5, 2398027], [0.6, 3182448], [0.7, 3271082], [0.8, 2979442],
   [0.9, 931925]]'
@@ -254,6 +270,17 @@ src_langs: '[["pa", 9802798], ["en", 5471462], ["es", 272925], ["fr", 203156], [
   16], ["xal", 15], ["vls", 14], ["mwl", 12], ["lrc", 9], ["co", 8], ["yi", 6], ["vec",
   6], ["nap", 6], ["nah", 5], ["mrj", 4], ["dsb", 4], ["pfl", 3], ["sc", 2], ["frr",
   2], ["cbk", 2], ["av", 1]]'
+src_ngrams: '{"1": [[["the"], 770337], [["to"], 535359], [["of"], 442946], [["and"],
+  424906], [["news"], 417666]], "2": [[["of the"], 101145], [["all rights"], 70140],
+  [["rights reserved"], 69793], [["contact us"], 67417], [["read more"], 61786]],
+  "3": [[["all rights reserved"], 69680], [["to twittershare to"], 27188], [["share
+  to twittershare"], 27188], [["twittershare to facebookshare"], 26828], [["to facebookshare
+  to"], 26828]], "4": [[["share to twittershare to"], 27188], [["twittershare to facebookshare
+  to"], 26828], [["to twittershare to facebookshare"], 26828], [["to facebookshare
+  to pinterest"], 26828], [["leave a reply cancel"], 19968]], "5": [[["twittershare
+  to facebookshare to pinterest"], 26828], [["to twittershare to facebookshare to"],
+  26828], [["share to twittershare to facebookshare"], 26828], [["leave a reply cancel
+  reply"], 19949], [["your email address will not"], 16384]]}'
 src_sent_tokens: '[[1, 4160193], [2, 2467142], [3, 1694765], [4, 719585], [5, 984022],
   [6, 695880], [7, 547270], [8, 439247], [9, 432252], [10, 444380], [11, 380749],
   [12, 364248], [13, 352563], [14, 317648], [15, 283967], [16, 241355], [17, 210958],
@@ -835,15 +862,3 @@ timestamp: 1710677182.324468
 ttr_src: 0.01
 unique_sents: 3877316
 warnings: []
-src_ngrams: '{"1": [[["the"], 770337], [["to"], 535359], [["of"], 442946], [["and"],
-  424906], [["news"], 417666]], "2": [[["of the"], 101145], [["all rights"], 70140],
-  [["rights reserved"], 69793], [["contact us"], 67417], [["read more"], 61786]],
-  "3": [[["all rights reserved"], 69680], [["to twittershare to"], 27188], [["share
-  to twittershare"], 27188], [["twittershare to facebookshare"], 26828], [["to facebookshare
-  to"], 26828]], "4": [[["share to twittershare to"], 27188], [["twittershare to facebookshare
-  to"], 26828], [["to twittershare to facebookshare"], 26828], [["to facebookshare
-  to pinterest"], 26828], [["leave a reply cancel"], 19968]], "5": [[["twittershare
-  to facebookshare to pinterest"], 26828], [["to twittershare to facebookshare to"],
-  26828], [["share to twittershare to facebookshare"], 26828], [["leave a reply cancel
-  reply"], 19949], [["your email address will not"], 16384]]}'
-docs_wds: '[[0.0, 6751], [0.1, 529], [0.2, 482], [0.3, 381], [0.4, 388], [0.5, 377], [0.6, 378], [0.7, 417], [0.8, 435], [0.9, 525], [1.0, 513], [1.1, 428], [1.2, 423], [1.3, 376], [1.4, 357], [1.5, 379], [1.6, 373], [1.7, 407], [1.8, 415], [1.9, 400], [2.0, 383], [2.1, 416], [2.2, 462], [2.3, 464], [2.4, 493], [2.5, 506], [2.6, 540], [2.7, 459], [2.8, 461], [2.9, 425], [3.0, 406], [3.1, 455], [3.2, 447], [3.3, 486], [3.4, 512], [3.5, 510], [3.6, 559], [3.7, 586], [3.8, 610], [3.9, 740], [4.0, 864], [4.1, 988], [4.2, 1078], [4.3, 1055], [4.4, 1244], [4.5, 1147], [4.6, 1269], [4.7, 1492], [4.8, 1541], [4.9, 1540], [5.0, 1697], [5.1, 1741], [5.2, 1705], [5.3, 1875], [5.4, 1948], [5.5, 2265], [5.6, 2302], [5.7, 2485], [5.8, 2764], [5.9, 3132], [6.0, 3329], [6.1, 3527], [6.2, 3720], [6.3, 3762], [6.4, 3945], [6.5, 4175], [6.6, 4448], [6.7, 4678], [6.8, 5283], [6.9, 5887], [7.0, 4623], [7.1, 3895], [7.2, 3718], [7.3, 3431], [7.4, 3454], [7.5, 3103], [7.6, 2804], [7.7, 2526], [7.8, 2630], [7.9, 2366], [8.0, 2313], [8.1, 2344], [8.2, 1904], [8.3, 1579], [8.4, 1386], [8.5, 1245], [8.6, 1249], [8.7, 1077], [8.8, 986], [8.9, 906], [9.0, 771], [9.1, 585], [9.2, 495], [9.3, 384], [9.4, 408], [9.5, 357], [9.6, 273], [9.7, 218], [9.8, 140], [9.9, 55], [10.0, 10]]'
