--- a/reports/mono-1.2/HPLT-docs.te.yaml
+++ b/reports/mono-1.2/HPLT-docs.te.yaml
@@ -1,3 +1,4 @@
+corpus: te_1.jsonl.tsv
 docs_avg_lm: '[[0.2, 33], [0.3, 827], [0.4, 11635], [0.5, 129323], [0.6, 219232],
   [0.7, 51766], [0.8, 779]]'
 docs_collections: '[["cc40", 204585], ["wide16", 95518], ["wide15", 72544], ["wide17",
@@ -285,9 +286,24 @@ docs_top100_tld: '[["com", 256960], ["in", 71297], ["org", 27219], ["net", 23545
 docs_total: 415598
 docs_warnings:
 - docs_unmatching_2003
-corpus: te_1.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0.0, "not_too_short": 38.28, "no_urls": 1.35, "no_bad_encoding":
-  0.0}'
+docs_wds: '[[0.0, 23992], [0.1, 909], [0.2, 698], [0.3, 657], [0.4, 624], [0.5, 636],
+  [0.6, 635], [0.7, 664], [0.8, 705], [0.9, 885], [1.0, 1078], [1.1, 1238], [1.2,
+  1455], [1.3, 1860], [1.4, 2076], [1.5, 1941], [1.6, 1865], [1.7, 1755], [1.8, 1470],
+  [1.9, 1291], [2.0, 1185], [2.1, 1116], [2.2, 1145], [2.3, 1152], [2.4, 1167], [2.5,
+  1148], [2.6, 1289], [2.7, 1489], [2.8, 1473], [2.9, 1539], [3.0, 1653], [3.1, 1720],
+  [3.2, 1711], [3.3, 1710], [3.4, 1746], [3.5, 1805], [3.6, 1941], [3.7, 2121], [3.8,
+  2371], [3.9, 2512], [4.0, 2716], [4.1, 2772], [4.2, 2872], [4.3, 3109], [4.4, 3370],
+  [4.5, 3404], [4.6, 3833], [4.7, 3880], [4.8, 3855], [4.9, 4027], [5.0, 4193], [5.1,
+  4213], [5.2, 4549], [5.3, 4732], [5.4, 5071], [5.5, 5267], [5.6, 5215], [5.7, 5272],
+  [5.8, 5643], [5.9, 5734], [6.0, 5999], [6.1, 6361], [6.2, 6579], [6.3, 6942], [6.4,
+  7039], [6.5, 7236], [6.6, 7994], [6.7, 8093], [6.8, 8439], [6.9, 8320], [7.0, 8918],
+  [7.1, 9236], [7.2, 9069], [7.3, 9447], [7.4, 10095], [7.5, 9550], [7.6, 9503], [7.7,
+  9710], [7.8, 9614], [7.9, 8964], [8.0, 8735], [8.1, 8055], [8.2, 7534], [8.3, 7065],
+  [8.4, 6959], [8.5, 6630], [8.6, 6167], [8.7, 6004], [8.8, 5584], [8.9, 4596], [9.0,
+  3938], [9.1, 3457], [9.2, 2892], [9.3, 2511], [9.4, 1946], [9.5, 1559], [9.6, 1247],
+  [9.7, 801], [9.8, 447], [9.9, 175], [10.0, 34]]'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 19576931, "no_urls": 690409,
+  "no_bad_encoding": 0}'
 monocleaner_scores: '[[0.0, 1767411], [0.1, 820730], [0.2, 1678741], [0.3, 3424189],
   [0.4, 6722833], [0.5, 10438248], [0.6, 12323684], [0.7, 11445760], [0.8, 2427348],
   [0.9, 92465]]'
@@ -323,6 +339,23 @@ src_langs: '[["te", 29846757], ["en", 16096892], ["cs", 1044665], ["de", 511974]
   51], ["lmo", 43], ["myv", 27], ["lrc", 21], ["vep", 20], ["frr", 17], ["nap", 16],
   ["lez", 16], ["xal", 15], ["rue", 10], ["os", 10], ["vec", 9], ["kv", 9], ["pfl",
   8], ["vls", 6], ["hif", 5], ["mrj", 3], ["dsb", 3]]'
+src_ngrams: '{"1": [[["\u0c08"], 2660949], [["the"], 1952812], [["to"], 1857841],
+  [["news"], 1504450], [["\u0c06"], 1483233]], "2": [[["span style"], 216760], [["telugu
+  news"], 216156], [["of the"], 203200], [["posted by"], 198221], [["read more"],
+  198196]], "3": [[["all rights reserved"], 147922], [["to twittershare to"], 121391],
+  [["share to twittershare"], 121391], [["twittershare to facebookshare"], 118860],
+  [["to facebookshare to"], 118860]], "4": [[["share to twittershare to"], 121391],
+  [["twittershare to facebookshare to"], 118860], [["to twittershare to facebookshare"],
+  118860], [["to facebookshare to pinterest"], 118860], [["\u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
+  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
+  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e"], 95956]], "5": [[["twittershare to
+  facebookshare to pinterest"], 118860], [["to twittershare to facebookshare to"],
+  118860], [["share to twittershare to facebookshare"], 118860], [["\u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
+  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
+  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e"],
+  82331], [["\u0c2d\u0c3e\u0c17\u0c38\u0c4d\u0c35\u0c3e\u0c2e\u0c4d\u0c2f\u0c02 \u0c1a\u0c46\u0c2f\u0c4d\u0c2f\u0c02\u0c21\u0c3ffacebook\u0c15\u0c41
+  \u0c2d\u0c3e\u0c17\u0c38\u0c4d\u0c35\u0c3e\u0c2e\u0c4d\u0c2f\u0c02 \u0c1a\u0c46\u0c2f\u0c4d\u0c2f\u0c02\u0c21\u0c3fpinterest\u0c15\u0c41
+  \u0c2d\u0c3e\u0c17\u0c38\u0c4d\u0c35\u0c3e\u0c2e\u0c4d\u0c2f\u0c02"], 31802]]}'
 src_sent_tokens: '[[1, 10492221], [2, 6772082], [3, 4192231], [4, 3503744], [5, 5777179],
   [6, 2980906], [7, 2062302], [8, 1647115], [9, 1384463], [10, 1378476], [11, 1091857],
   [12, 854919], [13, 741883], [14, 610156], [15, 511045], [16, 472599], [17, 391060],
@@ -1572,21 +1605,3 @@ timestamp: 1711035373.2389922
 ttr_src: 0.02
 unique_sents: 11030905
 warnings: []
-src_ngrams: '{"1": [[["\u0c08"], 2660949], [["the"], 1952812], [["to"], 1857841],
-  [["news"], 1504450], [["\u0c06"], 1483233]], "2": [[["span style"], 216760], [["telugu
-  news"], 216156], [["of the"], 203200], [["posted by"], 198221], [["read more"],
-  198196]], "3": [[["all rights reserved"], 147922], [["to twittershare to"], 121391],
-  [["share to twittershare"], 121391], [["twittershare to facebookshare"], 118860],
-  [["to facebookshare to"], 118860]], "4": [[["share to twittershare to"], 121391],
-  [["twittershare to facebookshare to"], 118860], [["to twittershare to facebookshare"],
-  118860], [["to facebookshare to pinterest"], 118860], [["\u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
-  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
-  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e"], 95956]], "5": [[["twittershare to
-  facebookshare to pinterest"], 118860], [["to twittershare to facebookshare to"],
-  118860], [["share to twittershare to facebookshare"], 118860], [["\u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
-  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e
-  \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e \u0c36\u0c4d\u0c30\u0c40\u0c30\u0c3e\u0c2e"],
-  82331], [["\u0c2d\u0c3e\u0c17\u0c38\u0c4d\u0c35\u0c3e\u0c2e\u0c4d\u0c2f\u0c02 \u0c1a\u0c46\u0c2f\u0c4d\u0c2f\u0c02\u0c21\u0c3ffacebook\u0c15\u0c41
-  \u0c2d\u0c3e\u0c17\u0c38\u0c4d\u0c35\u0c3e\u0c2e\u0c4d\u0c2f\u0c02 \u0c1a\u0c46\u0c2f\u0c4d\u0c2f\u0c02\u0c21\u0c3fpinterest\u0c15\u0c41
-  \u0c2d\u0c3e\u0c17\u0c38\u0c4d\u0c35\u0c3e\u0c2e\u0c4d\u0c2f\u0c02"], 31802]]}'
-docs_wds: '[[0.0, 23992], [0.1, 909], [0.2, 698], [0.3, 657], [0.4, 624], [0.5, 636], [0.6, 635], [0.7, 664], [0.8, 705], [0.9, 885], [1.0, 1078], [1.1, 1238], [1.2, 1455], [1.3, 1860], [1.4, 2076], [1.5, 1941], [1.6, 1865], [1.7, 1755], [1.8, 1470], [1.9, 1291], [2.0, 1185], [2.1, 1116], [2.2, 1145], [2.3, 1152], [2.4, 1167], [2.5, 1148], [2.6, 1289], [2.7, 1489], [2.8, 1473], [2.9, 1539], [3.0, 1653], [3.1, 1720], [3.2, 1711], [3.3, 1710], [3.4, 1746], [3.5, 1805], [3.6, 1941], [3.7, 2121], [3.8, 2371], [3.9, 2512], [4.0, 2716], [4.1, 2772], [4.2, 2872], [4.3, 3109], [4.4, 3370], [4.5, 3404], [4.6, 3833], [4.7, 3880], [4.8, 3855], [4.9, 4027], [5.0, 4193], [5.1, 4213], [5.2, 4549], [5.3, 4732], [5.4, 5071], [5.5, 5267], [5.6, 5215], [5.7, 5272], [5.8, 5643], [5.9, 5734], [6.0, 5999], [6.1, 6361], [6.2, 6579], [6.3, 6942], [6.4, 7039], [6.5, 7236], [6.6, 7994], [6.7, 8093], [6.8, 8439], [6.9, 8320], [7.0, 8918], [7.1, 9236], [7.2, 9069], [7.3, 9447], [7.4, 10095], [7.5, 9550], [7.6, 9503], [7.7, 9710], [7.8, 9614], [7.9, 8964], [8.0, 8735], [8.1, 8055], [8.2, 7534], [8.3, 7065], [8.4, 6959], [8.5, 6630], [8.6, 6167], [8.7, 6004], [8.8, 5584], [8.9, 4596], [9.0, 3938], [9.1, 3457], [9.2, 2892], [9.3, 2511], [9.4, 1946], [9.5, 1559], [9.6, 1247], [9.7, 801], [9.8, 447], [9.9, 175], [10.0, 34]]'
